--- a/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/src/main/resources/password/pwm/i18n/Admin.properties
@@ -27,7 +27,7 @@ Header_ConfigModeActive=%1% is in open configuration mode and is not secure.
 Header_TrialMode=Trial Mode.
 Header_HealthWarningsPresent=System warnings exist, click to view.
 IntruderRecordType_ADDRESS=Address
-IntruderRecordType_USERNAME=Username
+IntruderRecordType_USERNAME=User Name
 IntruderRecordType_USER_ID=User DN
 IntruderRecordType_ATTRIBUTE=Attribute
 IntruderRecordType_TOKEN_DEST=Token Destination
@@ -39,7 +39,7 @@ Notice_TrialRestrictConfig=Restricted configuration is not available in trial mo
 Tooltip_DownloadReportRecords=Download all records to a Comma Separated Value (CSV) file.  All cached records and columns will be downloaded.  Columns are comma delimited (,)  Fields are wrapped with double quotation marks (") when containing a comma (,) in the value.  The first row will contain field names.
 Field_Report_UserDN=UserDN
 Field_Report_LDAP_Profile=LDAP Profile
-Field_Report_Username=Username
+Field_Report_Username=User Name
 Field_Report_Email=Email
 Field_Report_UserGuid=UserGuid
 Field_Report_LastLogin=Last Login Time
@@ -48,7 +48,7 @@ Field_Report_PwdExpireTime=Password Expiration Time
 Field_Report_PwdChangeTime=Password Change Time
 Field_Report_ResponseSaveTime=Response Save Time
 Field_Report_HasResponses=Has Valid Responses
-Field_Report_HasHelpdeskResponses=Has Helpdesk Responses
+Field_Report_HasHelpdeskResponses=Has Help Desk Responses
 Field_Report_ResponseStorageMethod=Response Storage Method
 Field_Report_ResponseFormatType=Response Format Type
 Field_Report_PwdExpired=Password Expired
@@ -62,7 +62,7 @@ Field_Report_RequiresProfileUpdate=Requires Profile Update
 Field_Report_Sum_Total=Total Users
 Field_Report_Sum_LdapProfile=Users in LDAP Profile %1%
 Field_Report_Sum_HaveResponses=Users that have stored responses
-Field_Report_Sum_HaveHelpdeskResponses=Users that have stored helpdesk responses
+Field_Report_Sum_HaveHelpdeskResponses=Users that have stored Help Desk responses
 Field_Report_Sum_HaveExpiredPw=Users with expired password
 Field_Report_Sum_HavePreExpiredPw=Users with pre-expired password
 Field_Report_Sum_HaveExpiredPwWarn=Users with expired password within warn period
@@ -146,10 +146,10 @@ Statistic_Label.RecoverySuccesses=Forgotten Password Successes
 Statistic_Description.RecoverySuccesses=Number of times users have successfully validated their identity using the forgotten password module.
 Statistic_Label.RecoveryFailures=Forgotten Password Failures
 Statistic_Description.RecoveryFailures=Number of user failures during forgotten password identification and verification process.
-Statistic_Label.ForgottenUsernameFailures=Forgotten Username Failures
-Statistic_Description.ForgottenUsernameFailures=Number of user failures during forgotten username identification and verification process.
-Statistic_Label.ForgottenUsernameSuccesses=Forgotten Username Successes
-Statistic_Description.ForgottenUsernameSuccesses=Number of successes using the forgotten username process.
+Statistic_Label.ForgottenUsernameFailures=Forgotten User Name Failures
+Statistic_Description.ForgottenUsernameFailures=Number of user failures during forgotten user name identification and verification process.
+Statistic_Label.ForgottenUsernameSuccesses=Forgotten User Name Successes
+Statistic_Description.ForgottenUsernameSuccesses=Number of successes using the forgotten user name process.
 Statistic_Label.EmailSendSuccesses=Email Send Successes
 Statistic_Description.EmailSendSuccesses=Number of successfully delivered email items.
 Statistic_Label.EmailSendFailures=Email Send Failures
@@ -178,8 +178,8 @@ Statistic_Label.Guests=Guest Users Created
 Statistic_Description.Guests=Number of user accounts that have been created using the guest management module.
 Statistic_Label.UpdatedGuests=Guest Users Updated
 Statistic_Description.UpdatedGuests=Number of user accounts have been updated/modified using the guest management module.
-Statistic_Label.LockedUsers=Intruder Locked Usernames
-Statistic_Description.LockedUsers=Number of local intruder lock events that have occurred due to multiple attempts associated with the same username.
+Statistic_Label.LockedUsers=Intruder Locked User Names
+Statistic_Description.LockedUsers=Number of local intruder lock events that have occurred due to multiple attempts associated with the same user name.
 Statistic_Label.LockedAddresses=Intruder Locked Addresses
 Statistic_Description.LockedAddresses=Number of local intruder lock events that have occurred due to multiple attempts associated with the same network address.
 Statistic_Label.LockedUserDNs=Intruder Locked User IDs
@@ -232,16 +232,16 @@ Statistic_Label.PeopleSearchDetails=PeopleSearch Detail Views
 Statistic_Description.PeopleSearchDetails=Number of detailed user views executed using the people search module.
 Statistic_Label.PeopleSearchOrgChart=PeopleSearch Org Chart Views
 Statistic_Description.PeopleSearchOrgChart=Number of organisational chart views executed using the people search module.
-Statistic_Label.HelpdeskPasswordSet=Helpdesk Password Resets
-Statistic_Description.HelpdeskPasswordSet=Number of password modifications initiated using the helpdesk module.
-Statistic_Label.HelpdeskUserLookup=Helpdesk User Lookups
-Statistic_Description.HelpdeskUserLookup=Number of helpdesk user detail views requested by helpdesk operators.
-Statistic_Label.HelpdeskTokenSent=Helpdesk Tokens Sent
-Statistic_Description.HelpdeskTokenSent=Number of helpdesk verification tokens sent.
-Statistic_Label.HelpdeskUnlock=Helpdesk Unlocks
-Statistic_Description.HelpdeskUnlock=Number of helpdesk unlock user events.
-Statistic_Label.HelpdeskVerifyOTP=Helpdesk OTP Verifications
-Statistic_Description.HelpdeskVerifyOTP=Number of successful helpdesk OPT verification user events.
+Statistic_Label.HelpdeskPasswordSet=Help Desk Password Resets
+Statistic_Description.HelpdeskPasswordSet=Number of password modifications initiated using the Help Desk module.
+Statistic_Label.HelpdeskUserLookup=Help Desk User Lookups
+Statistic_Description.HelpdeskUserLookup=Number of Help Desk user detail views requested by Help Desk operators.
+Statistic_Label.HelpdeskTokenSent=Help Desk Tokens Sent
+Statistic_Description.HelpdeskTokenSent=Number of Help Desk verification tokens sent.
+Statistic_Label.HelpdeskUnlock=Help Desk Unlocks
+Statistic_Description.HelpdeskUnlock=Number of Help Desk unlock user events.
+Statistic_Label.HelpdeskVerifyOTP=Help Desk OTP Verifications
+Statistic_Description.HelpdeskVerifyOTP=Number of successful Help Desk OPT verification user events.
 Statistic_Label.RestStatus=WebService Status Calls
 Statistic_Description.RestStatus=Number of external web service calls to the /status REST interface.
 Statistic_Label.RestCheckPassword=WebService Check Password Calls
@@ -289,7 +289,7 @@ Title_Intruders=Intruders
 Title_Audit=Audit Records
 Title_AuditUsers=Users
 Title_AuditSystem=System
-Title_AuditHelpdesk=Helpdesk
+Title_AuditHelpdesk=Help Desk
 Title_LDAPConnections=LDAP Connections
 Title_LastMinute=Last Minute
 Title_LastHour=Last Hour
