--- a/src/main/resources/password/pwm/i18n/Config.properties
+++ b/src/main/resources/password/pwm/i18n/Config.properties
@@ -25,12 +25,12 @@
 Actor_Label_proxy=Proxy User \u0020\u21e8\u0020 All
 Actor_Label_self=Self \u0020\u21e8\u0020 Self
 Actor_Label_self_other=Self \u0020\u21e8\u0020 Others
-Actor_Label_helpdesk=Helpdesk Operator \u0020\u21e8\u0020 Others
+Actor_Label_helpdesk=Help Desk Operator \u0020\u21e8\u0020 Others
 Actor_Label_guestManager=Guest Manager \u0020\u21e8\u0020 Others
 Actor_Description_proxy=Permissions required by the LDAP proxy user (defined by the setting <code>@PwmSettingReference:ldap.proxy.username@</code>).  The proxy user will require these attribute permissions for any user entry that authenticates to @PwmAppName@.
 Actor_Description_self=Permissions required by logged in users.  Each logged in user should have these permissions against their own LDAP entry for these attributes.
 Actor_Description_self_other=Permissions required by the loggied in user to other users, as appropriate.
-Actor_Description_helpdesk=Permissions required by logged in user while using the helpdesk module.  The logged in user should have these attribute permissions to the LDAP entries of the user's being administered via the helpdesk module.  This is typically done using an LDAP group or permission-role object to assign permissions.
+Actor_Description_helpdesk=Permissions required by logged in user while using the Help Desk module.  The logged in user should have these attribute permissions to the LDAP entries of the user's being administered via the Help Desk module.  This is typically done using an LDAP group or permission-role object to assign permissions.
 Actor_Description_guestManager=Permissions required by logged in user while using the guest registration module.  The logged in user should have these attribute permissions to the LDAP entries of the user's being managed via the guest registration module.  This is typically done using an LDAP group or permission-role object to assign permissions.
 Button_Next=Next
 Button_Previous=Previous
