--- a/src/main/resources/password/pwm/i18n/Display.properties
+++ b/src/main/resources/password/pwm/i18n/Display.properties
@@ -71,7 +71,7 @@ Display_CaptchaGetAudio=Get an audio CAPTCHA
 Display_CaptchaGetImage=Get an image CAPTCHA
 Display_CaptchaHelp=Help
 Display_CaptchaRefresh=Refresh
-Display_ChangePassword=Please change your password. Keep your new password secure.  After you type your new password, click the Change Password button.  If you must write it down, be sure to keep it in a safe place.  Your new password must meet the following requirements:
+Display_ChangePassword=Please change your password. Keep your new password secure.  After you type your new password, click the Change Password button.  If you must write it down, be sure to keep it in a safe place.  Your new password must meet the following requirements\:
 Display_ChangePasswordForm=Please enter the following data.  This is required to verify your identity before you can change your password.
 Display_CheckingData=Checking Data....
 Display_CheckingPassword=Checking Password....
@@ -86,7 +86,7 @@ Display_ErrorReference=error reference %1%
 Display_ExpirationDate=Account expiration date (maximum %1% days)
 Display_FooterInfoText=
 Display_ForgottenPassword=If you have forgotten your password, follow the prompts to reset your password.
-Display_ForgottenUsername=Please type in the following information.  This information will be used to lookup your forgotten username.
+Display_ForgottenUsername=Please type in the following information.  This information will be used to lookup your forgotten user name.
 Display_GuestRegistration=To register a new guest account, please enter the following information.
 Display_GuestUpdate=To update a guest account, please check and modify the following information.
 Display_Helpdesk=Please enter search data for the user.
@@ -120,9 +120,9 @@ Display_PasswordExpired=Your password has expired.  You must set a new password 
 Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real words to make them easier to remember, but have been modified to make them difficult to guess.
 Display_PasswordNoExpire=Your password does not expire.
 Display_PasswordPrompt=Please type your new password
-Display_PasswordStrengthHigh=Strength: <b>Strong</b>
-Display_PasswordStrengthLow=Strength: <b>Weak</b>
-Display_PasswordStrengthMedium=Strength: <b>Good</b>
+Display_PasswordStrengthHigh=Strength\: <b>Strong</b>
+Display_PasswordStrengthLow=Strength\: <b>Weak</b>
+Display_PasswordStrengthMedium=Strength\: <b>Good</b>
 Display_PasswordReplicationStatus=Password replication (progress %1%)
 Display_PasswordWarn=<b>Your password will soon expire</b>.  Please change your password soon to avoid problems accessing this service.  <br/><br/>Your password will expire on %1%.
 Display_PeopleSearch=Please type your search query below.  You may search for a person based on name, email address or telephone number.
@@ -130,7 +130,7 @@ Display_PleaseWait=Loading...
 Display_PleaseWaitNewUser=Your new account is being configured. This process may take several minutes, please be patient.
 Display_PleaseWaitPassword=Your password is being changed. This process may take several minutes, please be patient.
 Display_Random=Random
-Display_RecoverVerificationChoice=Please select one of the following methods to verify your identity.
+Display_RecoverVerificationChoice=Please select one of the following methods to verify your identity.  Note: If your administrator requires multiple forms of verification, you will be redirected back to this page until all verification criteria is met.
 Display_RecoverTokenSendChoices=To verify your identity, a security code will be sent to you.  Please choose which method you would prefer to receive your security code.
 Display_RecoverTokenSendChoiceEmail=Send code to your registered email address.
 Display_RecoverTokenSendChoiceSMS=Send code to your mobile phone using text messaging (SMS).
@@ -153,15 +153,15 @@ Display_SetRandomPasswordPrompt=Set a new random password for this user?
 Display_SearchResultsNone=No results.
 Display_Second=second
 Display_Seconds=seconds
-Display_SetupHelpdeskResponses=<p>Your administrator requires that you supply the following answers.  These answers are used to verify your identity in the event that you contact your helpdesk for assistance.</p>
+Display_SetupHelpdeskResponses=<p>Your administrator requires that you supply the following answers.  These answers are used to verify your identity in the event that you contact your help desk for assistance.</p>
 Display_SetupRandomResponses=
 Display_SetupRequiredResponses=
 Display_SetupResponses=<p>If you forget your password, you can access your account by answering your security questions.</p><p>Please choose your questions and answers that can be used to verify your identity in case you forget your password.  Because the answers to these questions can be used to access your account, be sure to supply answers that are not easy for others to guess or discover.</p>
 Display_SetupOtpSecret=If you forget your password, you can access your account by using your mobile device.  Follow the instructions below based on your device type.
 Display_SetupOtp_Android_Title=Android
-Display_SetupOtp_Android_Steps=<b>Install the Google Authenticator app for Android.</b><ol><li>On your phone, go to the Google Play Store.</li><li>Search for <b>Google Authenticator</b>.<br/>(<a target="playstore" href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2">Download from the Google Play Store</a>)</li><li>Download and install the application.</li></ol><b>Next, open and configure Google Authenticator.</b><ol><li>In Google Authenticator, touch Menu and select "Set up account."</li><li>Select "Scan a barcode."</li><li>Use your phone's camera to scan this barcode.</li><li>Once you have scanned the barcode, click the continue button.</li></ol>
+Display_SetupOtp_Android_Steps=<b>Install the Google Authenticator app for Android.</b><ol><li>On your phone, go to the Google Play Store.</li><li>Search for <b>Google Authenticator</b>.<br/>(<a target\="playstore" href\="https\://play.google.com/store/apps/details?id\=com.google.android.apps.authenticator2">Download from the Google Play Store</a>)</li><li>Download and install the application.</li></ol><b>Next, open and configure Google Authenticator.</b><ol><li>In Google Authenticator, touch Menu and select "Set up account."</li><li>Select "Scan a barcode."</li><li>Use your phone's camera to scan this barcode.</li><li>Once you have scanned the barcode, click the continue button.</li></ol>
 Display_SetupOtp_iPhone_Title=iPhone
-Display_SetupOtp_iPhone_Steps=<b>On your iPhone, tap the App Store icon.</b><ol><li>On your phone, go to the App Store.</li><li>Search for <b>Google Authenticator</b>.<br/>(<a target="itunesstore" href="https://itunes.apple.com/us/app/google-authenticator/id388497605?mt=8">Download from the App Store</a>)</li><li>Tap the app, and then tap Free to download and install it.</li></ol><b>Next, open and configure Google Authenticator.</b><ol><li>In Google Authenticator, tap "+", and then "Scan Barcode."</li><li>Use your phone's camera to scan this barcode.</li><li>Once you have scanned the barcode, click the continue button.</li></ol>
+Display_SetupOtp_iPhone_Steps=<b>On your iPhone, tap the App Store icon.</b><ol><li>On your phone, go to the App Store.</li><li>Search for <b>Google Authenticator</b>.<br/>(<a target\="itunesstore" href\="https\://itunes.apple.com/us/app/google-authenticator/id388497605?mt\=8">Download from the App Store</a>)</li><li>Tap the app, and then tap Free to download and install it.</li></ol><b>Next, open and configure Google Authenticator.</b><ol><li>In Google Authenticator, tap "+", and then "Scan Barcode."</li><li>Use your phone's camera to scan this barcode.</li><li>Once you have scanned the barcode, click the continue button.</li></ol>
 Display_SetupOtp_Other_Title=Other
 Display_SetupOtp_Other_Steps=<b>Find a compatible two-factor app.</b><ul><li>Try searching your device's app store for <b>Google Authenticator</b>.<br/>Many devices have compatible apps.</li><li>Try looking for an app that supports "<b>TOTP security tokens"</b> or "RFC6238"</li><li>Download and install the application.</li></ul><b>Next, open and configure the app.</b><ol><li>Enter the data below or scan the code as the app instructs.</li><li>Once you have configured the app, click the continue button.</li></ol>
 Display_TokenDestination=Token Destination
@@ -169,16 +169,16 @@ Display_UsernameHeader=@User:ID@
 Display_UsernameFooter=@User:ID@
 Display_WarnExistingOtpSecretTime=You have already enrolled your device on <span class="timestamp">%1%</span>.  You can test your current device by typing in the generated code below.  If you continue, you can re-configure your current device.
 Display_WarnExistingOtpSecret=You have already enrolled your device.  You can test your current device by typing in the generated code below.  If you continue, you can re-configure your current device.
-Display_WarnExistingResponseTime=You have already setup your challenge/response answers on <span class="timestamp">%1%</span>.  If you continue, you can re-answer your questions.
+Display_WarnExistingResponseTime=You have already setup your challenge/response answers on <span class\="timestamp">%1%</span>.  If you continue, you can re-answer your questions.
 Display_WarnExistingResponse=You have already setup your challenge/response answers.  If you continue, you can re-answer your questions.
 Display_PleaseVerifyOtp=Please enter the 6-digit verification code from your device.  If your device is not configured to give you a verification code, please go back to the previous page and configure your device.
-Display_OtpRecoveryInfo=Each of these recovery codes can be used exactly one time in the event that you can not access your phone.  Be sure to <a class="pwm-link-print">print this page</a> or otherwise write down these codes and and store them in a safe place.
+Display_OtpRecoveryInfo=Each of these recovery codes can be used exactly one time in the event that you can not access your phone.  Be sure to <a class\="pwm-link-print">print this page</a> or otherwise write down these codes and and store them in a safe place.
 Display_OtpClearWarning=Are you sure you wish to continue?  If you proceed, your existing enrollment will be cleared and you will need to reconfigure your device.
 Display_ResponsesClearWarning=Are you sure you wish to continue?  If you proceed, your existing answers will be cleared and you will need to re-answer your security questions.
 Display_Shortcuts=Select any of the following links to continue.
 Display_ShowPasswordGuide=Password Guide
 Display_StrengthMeter=Password Strength
-Display_UpdateProfile=Please update the following information:
+Display_UpdateProfile=Please update the following information\:
 Display_UpdateProfileConfirm=Please review the following information you have entered and confirm.
 Display_UpdateProfileEnterCode=To verify your email address, a code has been sent to you at <b>%1%</b>.  Please enter the code here to continue.
 Display_UpdateProfileEnterCodeSMS=To verify your phone number, a code has been sent to you at <b>%1%</b>.  Please enter the code here to continue.
@@ -222,7 +222,7 @@ Field_ResponsesTimestamp=Stored Responses Timestamp
 Field_User_Supplied_Question=Question
 Field_UserDN=User DN
 Field_UserGUID=User GUID
-Field_Username=Username
+Field_Username=User Name
 Field_UserEmail=Email
 Field_UserSMS=SMS
 Field_OTP_Identifier=Identifier
@@ -244,10 +244,10 @@ Long_Title_ActivateUser=Activate a pre-configured account and establish a new pa
 Long_Title_Admin=Administrative functions
 Long_Title_ChangePassword=Change your current password.
 Long_Title_ForgottenPassword=Regain access to your account if you have forgotten your password.
-Long_Title_ForgottenUsername=Find your forgotten username.
+Long_Title_ForgottenUsername=Find your forgotten user name.
 Long_Title_GuestRegistration=Register a new guest user account.
 Long_Title_GuestUpdate=Update a new guest user account.
-Long_Title_Helpdesk=Helpdesk tools
+Long_Title_Helpdesk=Help Desk tools
 Long_Title_Logout=Sign out of the password self service application.
 Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
 Long_Title_NewUser=Create a new user account.
@@ -269,10 +269,10 @@ Title_ChangePassword=Change Password
 Title_ConfirmResponses=Confirm Security Questions
 Title_Error=Error
 Title_ForgottenPassword=Forgotten Password
-Title_ForgottenUsername=Forgotten Username
+Title_ForgottenUsername=Forgotten User Name
 Title_GuestRegistration=Guest Registration
 Title_GuestUpdate=Update Guest User
-Title_Helpdesk=Helpdesk
+Title_Helpdesk=Help Desk
 Title_LocaleSelect=Locale Selection
 Title_Login=Please Sign in
 Title_Logout=Sign out
@@ -299,7 +299,7 @@ Title_SetupOtpSecret=Setup Mobile App Authentication
 Title_Shortcuts=Shortcuts
 Title_Status=Status
 Title_Success=Success
-Title_TitleBarAuthenticated=@User:ID@  Password Self Service
+Title_TitleBarAuthenticated=@User\:ID@  Password Self Service
 Title_TitleBar=Password Self Service
 Title_UpdateProfile=Update Profile
 Title_UpdateProfileConfirm=Confirm Profile Data
