--- a/src/main/resources/password/pwm/i18n/Error_de.properties
+++ b/src/main/resources/password/pwm/i18n/Error_de.properties
@@ -20,70 +20,70 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-Password_MissingConfirm=Passwort erf\u00fcllt die Anforderungen. Geben Sie das Best\u00e4tigungspasswort ein.
-Password_DoesNotMatch=Passw\u00f6rter stimmen nicht \u00fcberein.
+Password_MissingConfirm=Passwort erf\u00fcllt die Anforderungen; geben Sie das Best\u00e4tigungspasswort ein
+Password_DoesNotMatch=Passw\u00f6rter stimmen nicht \u00fcberein
 Password_Missing=Passwort fehlt
-Password_PreviouslyUsed=Das neue Passwort wurde zuvor bereits verwendet.
-Password_BadPassword=Das neue Passwort erf\u00fcllt nicht die Regelanforderungen.
-Password_TooLong=Das neue Passwort ist zu lang.
-Password_TooShort=Das neue Passwort ist zu kurz.
-Password_NotEnoughNum=Das neue Passwort enth\u00e4lt nicht gen\u00fcgend Zahlen.
-Password_NotEnoughAlpha=Das neue Passwort enth\u00e4lt nicht gen\u00fcgend Buchstaben.
-Password_NotEnoughUpper=Das neue Passwort enth\u00e4lt nicht gen\u00fcgend Gro\u00dfbuchstaben.
-Password_NotEnoughLower=Das neue Passwort enth\u00e4lt nicht gen\u00fcgend Kleinbuchstaben.
-Password_NotEnoughSpecial=Das neue Passwort enth\u00e4lt nicht gen\u00fcgend Symbolzeichen (nicht alphanumerische Zeichen).
-Password_NotEnoughUnique=Das neue Passwort enth\u00e4lt nicht gen\u00fcgend eindeutige Zeichen.
-Password_TooManyRepeat=Das neue Passwort enth\u00e4lt zu viele wiederholte Zeichen.
-Password_TooManySpecial=Das neue Passwort enth\u00e4lt zu viele Sonderzeichen (Zeichen, die weder Buchstaben noch Zahlen sind).
-Password_TooManyAlpha=Das neue Passwort enth\u00e4lt zu viele Buchstaben.
-Password_TooManyNumeric=Das neue Passwort enth\u00e4lt zu viele Zahlen.
-Password_TooManyLower=Das neue Passwort enth\u00e4lt zu viele Kleinbuchstaben.
-Password_TooManyUpper=Das neue Passwort enth\u00e4lt zu viele Gro\u00dfbuchstaben.
-Password_TooManyOldChars=Das neue Passwort enth\u00e4lt zu viele Zeichen vom alten Passwort.
-Password_TooManyNonAlphaSpecial=Das neue Passwort enth\u00e4lt zu viele Symbolzeichen (nicht alphanumerische Zeichen).
-Password_InvalidChar=Das neue Passwort enth\u00e4lt ein ung\u00fcltiges Zeichen.
-Password_RequiredMissing=Im neuen Passwort fehlt ein erforderliches Zeichen.
-Password_InWordlist=Das neue Passwort ist zu gebr\u00e4uchlich.
-Password_SameAsOld=Das neue Passwort stimmt mit dem aktuellen Passwort \u00fcberein.
-Password_SameAsAttr=Das neue Passwort ist zu leicht zu erraten.
-Password_FirstIsNumeric=Das erste Zeichen darf keine Zahl sein.
-Password_LastIsNumeric=Das letzte Zeichen darf keine Zahl sein.
-Password_FirstIsSpecial=Das erste Zeichen darf kein Symbolzeichen (nicht alphanumerisches Zeichen) sein.
-Password_LastIsSpecial=Das letzte Zeichen darf kein Symbolzeichen (nicht alphanumerische Zeichen) sein.
-Password_HistoryFull=Verlauf f\u00fcr neues Passwort ist voll.
-Password_MeetsRules=Neues Passwort akzeptiert. Klicken Sie auf 'Passwort \u00e4ndern'.
-Password_TooSoon=Seit der letzten Passwort\u00e4nderung ist nicht gen\u00fcgend Zeit verstrichen.
-Password_UsingDisallowedValue=Das neue Passwort enth\u00e4lt einen nicht zul\u00e4ssigen Wert.
+Password_PreviouslyUsed=Neues Passwort wurde zuvor bereits verwendet
+Password_BadPassword=Neues Passwort erf\u00fcllt nicht die Regelanforderungen
+Password_TooLong=Neues Passwort ist zu lang
+Password_TooShort=Neues Passwort ist zu kurz
+Password_NotEnoughNum=Neues Passwort enth\u00e4lt nicht gen\u00fcgend Zahlen
+Password_NotEnoughAlpha=Neues Passwort enth\u00e4lt nicht gen\u00fcgend Buchstaben
+Password_NotEnoughUpper=Neues Passwort enth\u00e4lt nicht gen\u00fcgend Gro\u00dfbuchstaben
+Password_NotEnoughLower=Neues Passwort enth\u00e4lt nicht gen\u00fcgend Kleinbuchstaben
+Password_NotEnoughSpecial=Neues Passwort enth\u00e4lt nicht gen\u00fcgend Symbolzeichen (nicht alphanumerische Zeichen)
+Password_NotEnoughUnique=Neues Passwort enth\u00e4lt nicht gen\u00fcgend eindeutige Zeichen
+Password_TooManyRepeat=Neues Passwort enth\u00e4lt zu viele wiederholte Zeichen
+Password_TooManySpecial=Neues Passwort enth\u00e4lt zu viele Sonderzeichen (nicht-alphanumerische Zeichen)
+Password_TooManyAlpha=Neues Passwort enth\u00e4lt zu viele Buchstaben
+Password_TooManyNumeric=Neues Passwort enth\u00e4lt zu viele Zahlen
+Password_TooManyLower=Neues Passwort enth\u00e4lt zu viele Kleinbuchstaben
+Password_TooManyUpper=Neues Passwort enth\u00e4lt zu viele Gro\u00dfbuchstaben
+Password_TooManyOldChars=Neues Passwort enth\u00e4lt zu viele Zeichen des alten Passworts
+Password_TooManyNonAlphaSpecial=Neues Passwort enth\u00e4lt zu viele Symbolzeichen (nicht-alphanumerische Zeichen)
+Password_InvalidChar=Neues Passwort enth\u00e4lt ein ung\u00fcltiges Zeichen
+Password_RequiredMissing=Im neuen Passwort fehlt ein erforderliches Zeichen
+Password_InWordlist=Neues Passwort ist zu gebr\u00e4uchlich
+Password_SameAsOld=Neues Passwort stimmt mit dem aktuellen Passwort \u00fcberein
+Password_SameAsAttr=Neues Passwort ist zu leicht zu erraten
+Password_FirstIsNumeric=Das erste Zeichen darf keine Zahl sein
+Password_LastIsNumeric=Das letzte Zeichen darf keine Zahl sein
+Password_FirstIsSpecial=Das erste Zeichen darf kein Symbolzeichen (nicht-alphanumerisches Zeichen) sein.
+Password_LastIsSpecial=Das letzte Zeichen darf kein Symbolzeichen (nicht-alphanumerisches Zeichen) sein.
+Password_HistoryFull=Verlauf f\u00fcr neues Passwort ist voll
+Password_MeetsRules=Neues Passwort akzeptiert, klicken Sie auf 'Passwort \u00e4ndern'
+Password_TooSoon=Seit der letzten Passwort\u00e4nderung ist nicht gen\u00fcgend Zeit verstrichen
+Password_UsingDisallowedValue=Neues Passwort enth\u00e4lt einen nicht zul\u00e4ssigen Wert
 Password_TooWeak=Das Passwort ist zu schwach. F\u00fcgen Sie weitere Zahlen, Symbole oder Buchstaben in einer Kombination aus Gro\u00df- und Kleinschreibung hinzu.
-Password_TooManyNonAlpha=Das neue Passwort enth\u00e4lt zu viele Zeichen, die keine Buchstaben sind.
-Password_NotEnoughNonAlpha=Das neue Passwort enth\u00e4lt nicht gen\u00fcgend Zeichen, die keine Buchstaben sind.
+Password_TooManyNonAlpha=Neues Passwort enth\u00e4lt zu viele Zeichen, die keine Buchstaben sind
+Password_NotEnoughNonAlpha=Neues Passwort enth\u00e4lt nicht gen\u00fcgend Zeichen, die keine Buchstaben sind
 Password_UnknownValidation=Das neue Passwort erf\u00fcllt nicht die Anforderungen. Versuchen Sie es mit einem anderen Passwort.
 Password_NewPasswordRequired=Zum Fortfahren ist ein neues Passwort erforderlich.
 Password_Expired=Das Passwort ist abgelaufen.
-Password_CustomError=Das neue Passwort erf\u00fcllt nicht die Regelanforderungen.
-Password_BadOldPassword=Das alte Passwort ist falsch.
-Password_NotEnoughGroups=Das neue Passwort enth\u00e4lt zu wenige verschiedene Zeichenarten
-Password_TooManyConsecutive=Das neue Passwort enth\u00e4lt zu viele aufeinander folgende Zeichen (wie 123456... oder abcdef...)
+Password_CustomError=Neues Passwort erf\u00fcllt nicht die Regelanforderungen
+Password_BadOldPassword=Das alte Passwort ist falsch
+Password_NotEnoughGroups=Neues Passwort enth\u00e4lt zu wenige verschiedene Zeichenarten
+Password_TooManyConsecutive=Neues Passwort enth\u00e4lt zu viele aufeinander folgende Zeichen (wie 123456... oder abcdef...)
 
 Error_WrongResponse=Mindestens eine der Antworten ist falsch. Versuchen Sie es erneut.
 Error_WrongPassword=Der Benutzername oder das Passwort ist nicht g\u00fcltig. Versuchen Sie es erneut.
 Error_Response_NoResponse=Der Benutzername ist nicht g\u00fcltig oder nicht zur Verwendung dieser Funktion zugelassen
-Error_Response_TooShort=Die Antwort auf die Frage "%1%" ist zu kurz.
-Error_Response_Wordlist=Die Antwort auf die Frage "%1%" ist eine zu h\u00e4ufig verwendete Antwort.
-Error_Response_TooLong=Die Antwort auf die Frage "%1%" ist zu lang.
-Error_Response_Duplicate=Die Antwort auf die Frage "%1%" darf nicht mit der Antwort auf eine andere Frage \u00fcbereinstimmen.
+Error_Response_TooShort=Die Antwort auf die Frage "%1%" ist zu kurz
+Error_Response_Wordlist=Die Antwort auf die Frage "%1%" ist eine zu h\u00e4ufig verwendete Antwort
+Error_Response_TooLong=Die Antwort auf die Frage "%1%" ist zu lang
+Error_Response_Duplicate=Die Antwort auf die Frage "%1%" darf nicht mit der Antwort auf eine andere Frage \u00fcbereinstimmen
 Error_Challenge_Duplicate=Jede Frage muss eindeutig sein.
 Error_Missing_Challenge_Text=Fehlender Text f\u00fcr eine vom Benutzer bereitgestellte Frage
 Error_UserAuthenticated=Sie sind bereits authentifiziert.
 Error_MissingParameter=Ein erforderlicher Parameter fehlt.
 Error_DirectoryUnavailable=Verzeichnis nicht verf\u00fcgbar. Wenn dieser Fehler wiederholt auftritt, wenden Sie sich an den Helpdesk.
-Error_Unknown=Ein Fehler ist aufgetreten. Wenn dieser Fehler wiederholt auftritt, wenden Sie sich an den Helpdesk.
+Error_Unknown=Fehler. Wenn dieser Fehler wiederholt auftritt, wenden Sie sich an den Helpdesk.
 Error_ActivationValidationFailed=Mindestens einer der Werte ist falsch.
 Error_CantMatchUser=Benutzername wurde nicht gefunden. Versuchen Sie es erneut.
 Error_ServiceNotAvailable=Service ist nicht aktiviert.
 Error_UserMisMatch=Authentifizierungsfehler. Schlie\u00dfen Sie den Browser.
 Error_ActivateUserNoQueryMatch=Das Benutzerkonto ist nicht zur Aktivierung geeignet.
-Error_AuthenticationRequired=Authenitifizierung erforderlich.
+Error_AuthenticationRequired=Authentifizierung erforderlich.
 Error_NoChallenges=Es wurden keine Sicherheitsfragen konfiguriert.
 Error_UserIntruder=Die maximal zul\u00e4ssige Anzahl an Anmeldeversuchen f\u00fcr Ihre Benutzer-ID wurde \u00fcberschritten. Versuchen Sie es sp\u00e4ter erneut.
 Error_AddressIntruder=Die maximal zul\u00e4ssige Anzahl an Anmeldeversuchen wurde \u00fcberschritten. Versuchen Sie es sp\u00e4ter erneut.
@@ -94,7 +94,7 @@ Error_BadSession=Mit dem Browser kann keine Sitzung hergestellt werden. Schlie\u
 Error_MissingRequiredResponse=Geben Sie alle erforderlichen Antworten ein.
 Error_MissingRandomResponse=F\u00fcgen Sie eine weitere Zufallsantwort hinzu.
 Error_BadCaptchaResponse=Falscher \u00dcberpr\u00fcfungscode. Versuchen Sie es erneut.
-Error_CaptchaAPIError=Beim \u00dcberpr\u00fcfen der Captcha-Antwort ist ein Fehler aufgetreten. Schlie\u00dfen Sie den Browser und versuchen Sie es erneut. Wenn dieser Fehler wiederholt auftritt, wenden Sie sich an den Helpdesk.
+Error_CaptchaAPIError=Fehler beim \u00dcberpr\u00fcfen der Captcha-Antwort. Schlie\u00dfen Sie den Browser und versuchen Sie es erneut. Wenn dieser Fehler wiederholt auftritt, wenden Sie sich an den Helpdesk.
 Error_InvalidConfig=Die Konfiguration ist ung\u00fcltig oder besch\u00e4digt. Beheben Sie den Fehler oder entfernen Sie die Konfigurationsdatei.
 Error_InvalidFormID=Die Browsersitzung ist ung\u00fcltig oder abgelaufen. Versuchen Sie es erneut.
 Error_TokenMissingContact=F\u00fcr Ihr Konto sind keine Kontaktinformationen verf\u00fcgbar. Wenden Sie sich an den Administrator.
@@ -104,29 +104,29 @@ Error_Closing=Der Vorgang kann nicht abgeschlossen werden, weil die Anwendung he
 Error_Missing_GUID=F\u00fcr den Benutzer wurde keine GUID gefunden. Wenden Sie sich an den Administrator.
 Error_TokenExpired=Das eingegebene Token ist abgelaufen und nicht mehr g\u00fcltig. Versuchen Sie es erneut.
 Error_SecureRequestRequired=Nicht sichere Verbindungen (HTTP) zu diesem System sind nicht zul\u00e4ssig. Versuchen Sie es unter Verwendung einer sicheren Verbindung (HTTPS) erneut.
-Error_Writing_Responses=Beim Speichern der Antwortfragen ist ein Fehler aufgetreten. Wenden Sie sich an den Administrator.
-Error_Writing_Otp_Secret=Beim Speichern des OTP-Geheimnisses ist ein Fehler aufgetreten. Wenden Sie sich an den Administrator.
-Error_Unlock_Failure=Beim Entsperren Ihres Kontos ist ein Fehler aufgetreten. Wenden Sie sich an den Administrator.
-Error_Update_Attrs_Failure=Beim Speichern Ihrer Profilinformationen ist ein Fehler aufgetreten. Wenden Sie sich an den Administrator.
-Error_Activation_Failure=Beim Aktivieren Ihres Kontos ist ein Fehler aufgetreten. Wenden Sie sich an den Administrator.
-Error_NewUser_Failure=Beim Erstellen Ihres neuen Benutzerkontos ist ein Fehler aufgetreten. Wenden Sie sich an den Administrator.
+Error_Writing_Responses=Fehler beim Speichern der Sicherheitsfragen. Wenden Sie sich an den Administrator.
+Error_Writing_Otp_Secret=Fehler beim Speichern des OTP-Geheimnisses. Wenden Sie sich an den Administrator.
+Error_Unlock_Failure=Fehler beim Entsperren des Kontos. Wenden Sie sich an den Administrator.
+Error_Update_Attrs_Failure=Fehler beim Speichern der Profilinformationen. Wenden Sie sich an den Administrator.
+Error_Activation_Failure=Fehler beim Aktivieren des Kontos. Wenden Sie sich an den Administrator.
+Error_NewUser_Failure=Fehler beim Erstellen des neuen Benutzerkontos. Wenden Sie sich an den Administrator.
 Error_Activation=Das Konto kann mit den angegebenen Informationen nicht aktiviert werden. Versuchen Sie es erneut.
 Error_DB_Unavailable=Datenbank nicht verf\u00fcgbar. Wenn dieser Fehler wiederholt auftritt, wenden Sie sich an den Helpdesk.
 Error_LocalDB_Unavailable=LocalDB nicht verf\u00fcgbar. Wenden Sie sich an den Administrator.
 Error_App_Unavailable=Die Anwendung ist nicht verf\u00fcgbar oder wird neu gestartet. Wenn dieser Fehler wiederholt auftritt, wenden Sie sich an den Helpdesk.
-Error_IncorrectRequestSequence=Eine Anforderung f\u00fcr eine St\u00f6rungsanzeigeseite wurde empfangen. Verwenden Sie nicht die Zur\u00fcck-Schaltfl\u00e4che des Browsers. Versuchen Sie es erneut.
+Error_IncorrectRequestSequence=Eine Anforderung nach Seiten wurde in der falschen Reihenfolge empfangen. Verwenden Sie nicht die Zur\u00fcck-Schaltfl\u00e4che des Browsers. Versuchen Sie es erneut.
 Error_UnreachableCloudService=Ein Remoteservice war nicht erreichbar.
 Error_InvalidSecurityKey=Der Sicherheitsschl\u00fcssel fehlt oder ist ung\u00fcltig.
-Error_Clearing_Responses=Beim L\u00f6schen der Antwortfragen ist ein Fehler aufgetreten. Wenden Sie sich an den Administrator.
+Error_Clearing_Responses=Fehler beim L\u00f6schen der Sicherheitsfragen. Wenden Sie sich an den Administrator.
 Error_ServiceUnreachable=Ein erforderlicher Service ist nicht verf\u00fcgbar. Versuchen Sie es sp\u00e4ter erneut.
 Error_ChallengeInResponse=Die Antwort auf die Frage "%1%" darf nicht einen Teil des Fragetexts enthalten.
-Error_Multi_Username=Mehrere Benutzer stimmen mit dem gegebenen Benutzernamen "%1%" \u00fcberein. Verfeinern Sie die Suche.
-Error_CertificateError=Ein Zertifikatsfehler ist aufgetreten: %1%.
-Error_SyslogWriteError=Beim Schreiben zum Syslog-Server ist ein Problem aufgetreten. Fehler: %1%
-Error_TooManyThreads=H\u00f6chstgrenze f\u00fcr Anzahl der Threads \u00fcberschritten. Versuchen Sie es sp\u00e4ter erneut.
-Error_SecurityViolation=Eine Sicherheitsverletzung ist aufgetreten. Versuchen Sie es sp\u00e4ter erneut.
+Error_Multi_Username=Mehrere Benutzer stimmen mit dem angegebenen Benutzernamen "%1%" \u00fcberein. Verfeinern Sie die Suche.
+Error_CertificateError=Ein Zertifikatfehler ist aufgetreten: %1%.
+Error_SyslogWriteError=Problem beim Schreiben zum Syslog-Server. Fehler: %1%
+Error_TooManyThreads=H\u00f6chstgrenze f\u00fcr Anzahl der Threads \u00fcberschritten; versuchen Sie es sp\u00e4ter erneut
+Error_SecurityViolation=Sicherheitsverletzung. Versuchen Sie es sp\u00e4ter erneut.
 Error_NoOtpConfiguration=Es wurde kein Einmalpasswort konfiguriert.
-Error_TrialViolation=Die Probegrenzen wurde \u00fcberschritten.
+Error_TrialViolation=Die Grenzwerte f\u00fcr die Testversion wurden \u00fcberschritten.
 Error_AccountDisabled=Das Konto ist deaktiviert.
 Error_AccountExpired=Das Konto ist abgelaufen.
 Error_WrongOtpToken=Falsches Einmalpasswort.
@@ -134,32 +134,34 @@ Error_AttrIntruder=Die maximal zul\u00e4ssige Anzahl an Suchversuchen wurde \u00
 Error_AuditWrite=Revisionsdatensatz kann nicht geschrieben werden.
 Error_LdapIntruder=Die maximal zul\u00e4ssige Anzahl an Anmeldeversuchen f\u00fcr Ihre Benutzer-ID wurde \u00fcberschritten. Versuchen Sie es sp\u00e4ter erneut.
 Error_NoLdapConnection=Eine Verbindung zum erforderlichen Verzeichnis ist nicht verf\u00fcgbar.
-Error_OAuthError=Bei der Verwendung des OAuth-Authentifizierungsprotokolls ist ein Fehler aufgetreten. Versuchen Sie es sp\u00e4ter erneut.
-Error_FieldRequired=%1% ist erforderlich.
-Error_FieldNotANumber=%1% muss eine Zahl sein.
-Error_FieldInvalidEmail=%1% ist keine g\u00fcltige Email-Adresse.
-Error_FieldTooShort=%1% ist zu kurz.
-Error_FieldTooLong=%1% ist zu lang.
-Error_FieldDuplicate=%1% wird bereits verwendet. Verwenden Sie einen anderen Wert.
-Error_FieldBadConfirm=%1% Felder stimmen nicht \u00fcberein.
-Error_FieldRegexNoMatch=%1% ist nicht das richtige Format.
-Error_Orig_Admin_Only=Nur der urspr\u00fcngliche Administrator kann diese Eigenschaft ausf\u00fchren.
-Error_PasswordRequired=Zum Ausf\u00fchren dieses Vorgangs ist ein Passwort erforderlich.
-Error_ReportingError=Bei der Berichtgenerierung ist ein Fehler aufgetreten
+Error_OAuthError=Fehler bei der Verwendung des OAuth-Authentifizierungsprotokolls. Versuchen Sie es sp\u00e4ter erneut.
+Error_FieldRequired=%1% ist erforderlich
+Error_FieldNotANumber=%1% muss eine Zahl sein
+Error_FieldInvalidEmail=%1% ist keine g\u00fcltige Email-Adresse
+Error_FieldTooShort=%1% ist zu kurz
+Error_FieldTooLong=%1% ist zu lang
+Error_FieldDuplicate=%1% wird bereits verwendet, verwenden Sie einen anderen Wert
+Error_FieldBadConfirm=%1% Felder stimmen nicht \u00fcberein
+Error_FieldRegexNoMatch=%1% ist nicht das richtige Format
+Error_Orig_Admin_Only=Nur der urspr\u00fcngliche Administrator kann diesen Vorgang ausf\u00fchren
+Error_PasswordRequired=Zum Ausf\u00fchren dieses Vorgangs ist ein Passwort erforderlich
+Error_ReportingError=Fehler bei der Berichtgenerierung
 Error_TokenDestIntruder=Die maximal zul\u00e4ssige Anzahl an Versuchen wurde \u00fcberschritten. Versuchen Sie es sp\u00e4ter erneut.
 Error_OtpRecoveryUsed=Die Wiederherstellung wurde m\u00f6glicherweise bereits verwendet und kann nicht erneut verwendet werden.
 Error_RedirectIllegal=Die angeforderte URL-Umadressierung ist nicht zul\u00e4ssig.
-Error_CryptError=Ein unerwarteter Kryptografiefehler ist aufgetreten.
+Error_CryptError=Unerwarteter Kryptografiefehler.
 Error_SmsSendError=SMS-Nachricht konnte nicht gesendet werden: %1%
-Error_LdapDataError=Ein LDAP-Datenfehler ist aufgetreten.
+Error_LdapDataError=LDAP-Datenfehler.
 Error_MacroParseError=Fehler beim Analysieren des Makros: %1%
 Error_NoProfileAssigned=Dieser Operation ist kein Profil zugewiesen.
-Error_StartupError=Beim Starten der Anwendung ist ein Fehler aufgetreten. Weitere Informationen finden Sie in den Protokolldateien.
+Error_StartupError=Fehler beim Starten der Anwendung. Weitere Informationen finden Sie in den Protokolldateien.
+Error_EnvironmentError=Ein Fehler der Anwendungsumgebung hat das Starten der Anwendung verhindert.
+Error_ApplicationNotRunning=Diese Funktion ist erst verf\u00fcgbar, wenn die Anwendungskonfiguration eingeschr\u00e4nkt ist.
 
 Error_RemoteErrorValue=Remotefehler: %1%
 
 Error_ConfigUploadSuccess=Datei erfolgreich heraufgeladen
-Error_ConfigUploadFailure=Datei konnte nicht heraufgeladen werden.
+Error_ConfigUploadFailure=Fehler beim Heraufladen der Datei.
 Error_ConfigSaveSuccess=Die Konfiguration wurde erfolgreich gespeichert. Der Neustart der Anwendung wurde angefordert. W\u00e4hrend des Neustarts ist die Anwendung m\u00f6glicherweise nicht verf\u00fcgbar. Wenn bei der Neustartanforderung ein Fehler auftritt, m\u00fcssen Sie den Anwendungsserver m\u00f6glicherweise manuell neu starten.
 Error_ConfigFormatError=Konfigurationsformatfehler: %1%
 Error_ConfigLdapFailure=Verbindung zum LDAP-Verzeichnisserver nicht m\u00f6glich.
