--- a/src/main/resources/password/pwm/i18n/Error_sv.properties
+++ b/src/main/resources/password/pwm/i18n/Error_sv.properties
@@ -94,7 +94,7 @@ Error_BadSession=Det g\u00e5r inte att uppr\u00e4tta en session med din webbl\u0
 Error_MissingRequiredResponse=Skriv alla obligatoriska svar.
 Error_MissingRandomResponse=L\u00e4gg till ytterligare ett slumpm\u00e4ssigt svar.
 Error_BadCaptchaResponse=Felaktig verifieringskod. F\u00f6rs\u00f6k igen.
-Error_CaptchaAPIError=Ett fel intr\u00e4ffade n\u00e4r captcha-svaret validerades. St\u00e4ng webbl\u00e4saren och f\u00f6rs\u00f6k igen senare. Om felet intr\u00e4ffar fler g\u00e5nger kontaktar du supportavdelningen.
+Error_CaptchaAPIError=Ett fel intr\u00e4ffade n\u00e4r captcha-svaret validerades. St\u00e4ng webbl\u00e4saren och f\u00f6rs\u00f6k igen. Om felet intr\u00e4ffar fler g\u00e5nger kontaktar du supportavdelningen.
 Error_InvalidConfig=Konfigurationen \u00e4r ogiltig eller skadad. Korrigera felet eller ta bort konfigurationsfilen.
 Error_InvalidFormID=Din webbl\u00e4sarsession \u00e4r ogiltig eller har g\u00e5tt ut. F\u00f6rs\u00f6k igen.
 Error_TokenMissingContact=Ingen kontaktinformation \u00e4r tillg\u00e4nglig f\u00f6r ditt konto. Kontakta administrat\u00f6ren.
@@ -114,7 +114,7 @@ Error_Activation=Det g\u00e5r inte att aktivera ditt konto med den information d
 Error_DB_Unavailable=Databasen \u00e4r inte tillg\u00e4nglig. Om felet intr\u00e4ffar fler g\u00e5nger kontaktar du din supportavdelning.
 Error_LocalDB_Unavailable=LocalDB \u00e4r inte tillg\u00e4nglig. Kontakta administrat\u00f6ren.
 Error_App_Unavailable=Programmet \u00e4r inte tillg\u00e4ngligt eller startas om. Om felet intr\u00e4ffar fler g\u00e5nger kontaktar du din supportavdelning.
-Error_IncorrectRequestSequence=En felaktig sidbeg\u00e4ran har tagits emot. Anv\u00e4nd inte knappen Bak\u00e5t i din webbl\u00e4sare. F\u00f6rs\u00f6k igen.
+Error_IncorrectRequestSequence=En felaktig sidbeg\u00e4ran har tagits emot. Anv\u00e4nd inte bak\u00e5tknappen i din webbl\u00e4sare. F\u00f6rs\u00f6k igen.
 Error_UnreachableCloudService=Det gick inte att n\u00e5 en fj\u00e4rrtj\u00e4nst.
 Error_InvalidSecurityKey=S\u00e4kerhetsnyckeln saknas eller \u00e4r ogiltig.
 Error_Clearing_Responses=Ett fel intr\u00e4ffade n\u00e4r svarsfr\u00e5gorna rensades. Kontakta administrat\u00f6ren.
@@ -155,6 +155,8 @@ Error_LdapDataError=Ett LDAP-datafel har intr\u00e4ffat.
 Error_MacroParseError=Makroanalysfel: %1%
 Error_NoProfileAssigned=Ingen profil har tilldelats f\u00f6r denna operation.
 Error_StartupError=Ett fel intr\u00e4ffade n\u00e4r programmet startades. Mer information finns i loggfilerna.
+Error_EnvironmentError=Ett fel med programmilj\u00f6n hindrade programmet fr\u00e5n att starta.
+Error_ApplicationNotRunning=Denna funktion \u00e4r inte tillg\u00e4nglig f\u00f6rr\u00e4n programmets konfiguration begr\u00e4nsats.
 
 Error_RemoteErrorValue=Fj\u00e4rrfel: %1%
 
