--- a/src/main/resources/password/pwm/i18n/Error_zh_TW.properties
+++ b/src/main/resources/password/pwm/i18n/Error_zh_TW.properties
@@ -73,7 +73,7 @@ Error_Response_Wordlist=\u554f\u984c\u300c%1%\u300d\u7684\u56de\u61c9\u592a\u5e3
 Error_Response_TooLong=\u554f\u984c\u300c%1%\u300d\u7684\u56de\u61c9\u592a\u9577
 Error_Response_Duplicate=\u554f\u984c\u300c%1%\u300d\u7684\u56de\u61c9\u4e0d\u53ef\u4ee5\u8207\u5176\u4ed6\u56de\u61c9\u76f8\u540c
 Error_Challenge_Duplicate=\u6bcf\u500b\u554f\u984c\u90fd\u5fc5\u9808\u4e0d\u540c\u3002
-Error_Missing_Challenge_Text=\u4f7f\u7528\u8005\u63d0\u4f9b\u7684\u554f\u984c\u907a\u5931\u6587\u5b57
+Error_Missing_Challenge_Text=\u4f7f\u7528\u8005\u63d0\u4f9b\u7684\u554f\u984c\u7f3a\u5c11\u6587\u5b57
 Error_UserAuthenticated=\u60a8\u5df2\u901a\u904e\u9a57\u8b49\u3002
 Error_MissingParameter=\u907a\u5931\u5fc5\u8981\u53c3\u6578\u3002
 Error_DirectoryUnavailable=\u7121\u6cd5\u4f7f\u7528\u76ee\u9304\u3002\u5982\u679c\u6b64\u932f\u8aa4\u91cd\u8907\u767c\u751f\uff0c\u8acb\u806f\u7d61\u60a8\u7684\u670d\u52d9\u53f0\u3002
@@ -84,7 +84,7 @@ Error_ServiceNotAvailable=\u672a\u555f\u7528\u670d\u52d9\u3002
 Error_UserMisMatch=\u9a57\u8b49\u932f\u8aa4\uff0c\u8acb\u95dc\u9589\u60a8\u7684\u700f\u89bd\u5668\u3002
 Error_ActivateUserNoQueryMatch=\u60a8\u7684\u4f7f\u7528\u8005\u5e33\u6236\u4e0d\u7b26\u5408\u555f\u52d5\u8cc7\u683c\u3002
 Error_AuthenticationRequired=\u9700\u8981\u9a57\u8b49\u3002
-Error_NoChallenges=\u672a\u8a2d\u5b9a\u4efb\u4f55\u8655\u7406\u5b89\u5168\u3002
+Error_NoChallenges=\u672a\u8a2d\u5b9a\u4efb\u4f55\u8655\u7406\u5b89\u5168\u6a5f\u5236\u3002
 Error_UserIntruder=\u60a8\u7684 userID \u5df2\u8d85\u904e\u767b\u5165\u5617\u8a66\u6b21\u6578\u4e0a\u9650\u3002\u8acb\u7a0d\u5f8c\u518d\u8a66\u4e00\u6b21\u3002
 Error_AddressIntruder=\u5df2\u8d85\u904e\u767b\u5165\u5617\u8a66\u6b21\u6578\u4e0a\u9650\u3002\u8acb\u7a0d\u5f8c\u518d\u8a66\u4e00\u6b21\u3002
 Error_SessionIntruder=\u6b64\u5de5\u4f5c\u968e\u6bb5\u5df2\u8d85\u904e\u767b\u5165\u5617\u8a66\u6b21\u6578\u4e0a\u9650\u3002\u8acb\u7a0d\u5f8c\u518d\u8a66\u4e00\u6b21\u3002
@@ -105,7 +105,7 @@ Error_Missing_GUID=\u627e\u4e0d\u5230\u4f7f\u7528\u8005\u7684 GUID\u3002\u8acb\u
 Error_TokenExpired=\u60a8\u8f38\u5165\u7684\u8a18\u865f\u5df2\u904e\u671f\u6216\u7121\u6548\u3002\u8acb\u518d\u8a66\u4e00\u6b21\u3002
 Error_SecureRequestRequired=\u6b64\u7cfb\u7d71\u4e0d\u5141\u8a31\u4f7f\u7528\u4e0d\u5b89\u5168 (HTTP) \u9023\u63a5\u3002\u8acb\u4f7f\u7528\u5b89\u5168 (HTTPS) \u9023\u63a5\u518d\u8a66\u4e00\u6b21\u3002
 Error_Writing_Responses=\u5132\u5b58\u60a8\u7684\u56de\u61c9\u554f\u984c\u6642\u767c\u751f\u932f\u8aa4\u3002\u8acb\u806f\u7d61\u60a8\u7684\u7ba1\u7406\u54e1\u3002
-Error_Writing_Otp_Secret=\u5132\u5b58\u60a8\u7684 OTP \u6a5f\u5bc6\u6642\u767c\u751f\u932f\u8aa4\u3002\u8acb\u806f\u7d61\u60a8\u7684\u7ba1\u7406\u54e1\u3002
+Error_Writing_Otp_Secret=\u5132\u5b58\u60a8\u7684 OTP \u79d8\u5bc6\u6642\u767c\u751f\u932f\u8aa4\u3002\u8acb\u806f\u7d61\u60a8\u7684\u7ba1\u7406\u54e1\u3002
 Error_Unlock_Failure=\u89e3\u9664\u9396\u5b9a\u60a8\u7684\u5e33\u6236\u6642\u767c\u751f\u932f\u8aa4\u3002\u8acb\u806f\u7d61\u60a8\u7684\u7ba1\u7406\u54e1\u3002
 Error_Update_Attrs_Failure=\u5132\u5b58\u60a8\u7684\u8a2d\u5b9a\u6a94\u8cc7\u8a0a\u6642\u767c\u751f\u932f\u8aa4\u3002\u8acb\u806f\u7d61\u60a8\u7684\u7ba1\u7406\u54e1\u3002
 Error_Activation_Failure=\u555f\u52d5\u60a8\u7684\u5e33\u6236\u6642\u767c\u751f\u932f\u8aa4\u3002\u8acb\u806f\u7d61\u60a8\u7684\u7ba1\u7406\u54e1\u3002
@@ -113,7 +113,7 @@ Error_NewUser_Failure=\u5efa\u7acb\u60a8\u7684\u65b0\u4f7f\u7528\u8005\u5e33\u62
 Error_Activation=\u7121\u6cd5\u4f7f\u7528\u63d0\u4f9b\u7684\u8cc7\u8a0a\u555f\u52d5\u60a8\u7684\u5e33\u6236\u3002\u8acb\u518d\u8a66\u4e00\u6b21\u3002
 Error_DB_Unavailable=\u7121\u6cd5\u4f7f\u7528\u8cc7\u6599\u5eab\u3002\u5982\u679c\u6b64\u932f\u8aa4\u91cd\u8907\u767c\u751f\uff0c\u8acb\u806f\u7d61\u60a8\u7684\u670d\u52d9\u53f0\u3002
 Error_LocalDB_Unavailable=\u7121\u6cd5\u4f7f\u7528 LocalDB\u3002\u8acb\u806f\u7d61\u60a8\u7684\u7ba1\u7406\u54e1\u3002
-Error_App_Unavailable=\u7121\u6cd5\u4f7f\u7528\u6216\u6b63\u5728\u91cd\u65b0\u555f\u52d5\u61c9\u7528\u7a0b\u5f0f\u3002\u5982\u679c\u6b64\u932f\u8aa4\u91cd\u8907\u767c\u751f\uff0c\u8acb\u806f\u7d61\u60a8\u7684\u670d\u52d9\u53f0\u3002
+Error_App_Unavailable=\u61c9\u7528\u7a0b\u5f0f\u7121\u6cd5\u4f7f\u7528\u6216\u6b63\u5728\u91cd\u65b0\u555f\u52d5\u3002\u5982\u679c\u6b64\u932f\u8aa4\u91cd\u8907\u767c\u751f\uff0c\u8acb\u806f\u7d61\u60a8\u7684\u670d\u52d9\u53f0\u3002
 Error_IncorrectRequestSequence=\u5df2\u6536\u5230\u6545\u969c\u9801\u9762\u7533\u8acb\u3002\u8acb\u52ff\u4f7f\u7528\u700f\u89bd\u5668\u7684\u8fd4\u56de\u6309\u9215\u3002\u8acb\u518d\u8a66\u4e00\u6b21\u3002
 Error_UnreachableCloudService=\u7121\u6cd5\u9023\u63a5\u9060\u7aef\u670d\u52d9\u3002
 Error_InvalidSecurityKey=\u5b89\u5168\u6027\u91d1\u9470\u907a\u5931\u6216\u7121\u6548\u3002
@@ -152,14 +152,16 @@ Error_RedirectIllegal=\u4e0d\u5141\u8a31\u8981\u6c42\u7684\u91cd\u65b0\u5c0e\u54
 Error_CryptError=\u767c\u751f\u610f\u5916\u52a0\u5bc6\u932f\u8aa4\u3002
 Error_SmsSendError=\u7121\u6cd5\u50b3\u9001\u7c21\u8a0a\uff1a%1%
 Error_LdapDataError=\u767c\u751f LDAP \u8cc7\u6599\u932f\u8aa4\u3002
-Error_MacroParseError=\u5de8\u96c6\u89e3\u6790\u932f\u8aa4\uff1a%1%
+Error_MacroParseError=\u5de8\u96c6\u5256\u6790\u932f\u8aa4\uff1a%1%
 Error_NoProfileAssigned=\u6b64\u4f5c\u696d\u672a\u6307\u6d3e\u8a2d\u5b9a\u6a94\u3002
 Error_StartupError=\u555f\u52d5\u61c9\u7528\u7a0b\u5f0f\u6642\u767c\u751f\u932f\u8aa4\u3002\u8acb\u67e5\u770b\u8a18\u9304\u6a94\u4ee5\u53d6\u5f97\u8cc7\u8a0a\u3002
+Error_EnvironmentError=\u61c9\u7528\u7a0b\u5f0f\u74b0\u5883\u7684\u932f\u8aa4\u5df2\u9020\u6210\u61c9\u7528\u7a0b\u5f0f\u7121\u6cd5\u555f\u52d5\u3002
+Error_ApplicationNotRunning=\u8acb\u5148\u9650\u5236\u61c9\u7528\u7a0b\u5f0f\u7d44\u614b\uff0c\u624d\u80fd\u4f7f\u7528\u6b64\u529f\u80fd\u3002
 
 Error_RemoteErrorValue=\u9060\u7aef\u932f\u8aa4\uff1a%1%
 
 Error_ConfigUploadSuccess=\u5df2\u6210\u529f\u4e0a\u8f09\u6a94\u6848
-Error_ConfigUploadFailure=\u7121\u6cd5\u4e0a\u8f09\u6a94\u6848\u3002
+Error_ConfigUploadFailure=\u7121\u6cd5\u4e0a\u50b3\u6a94\u6848\u3002
 Error_ConfigSaveSuccess=\u5df2\u6210\u529f\u5132\u5b58\u7d44\u614b\u3002\u5df2\u8981\u6c42\u61c9\u7528\u7a0b\u5f0f\u91cd\u65b0\u555f\u52d5\u3002\u91cd\u65b0\u555f\u52d5\u6642\uff0c\u53ef\u80fd\u7121\u6cd5\u4f7f\u7528\u61c9\u7528\u7a0b\u5f0f\u3002\u5982\u679c\u91cd\u65b0\u555f\u52d5\u8981\u6c42\u5931\u6557\uff0c\u60a8\u53ef\u80fd\u9700\u8981\u624b\u52d5\u91cd\u65b0\u555f\u52d5\u61c9\u7528\u7a0b\u5f0f\u4f3a\u670d\u5668\u3002
 Error_ConfigFormatError=\u7d44\u614b\u683c\u5f0f\u932f\u8aa4\uff1a%1%
 Error_ConfigLdapFailure=\u7121\u6cd5\u9023\u63a5\u81f3 LDAP \u76ee\u9304\u4f3a\u670d\u5668\u3002
