--- a/src/main/resources/password/pwm/i18n/Message.properties
+++ b/src/main/resources/password/pwm/i18n/Message.properties
@@ -32,19 +32,19 @@ EventLog_AgreementPassed=Agreement Passed
 EventLog_ChangePassword=Change Password
 EventLog_UnlockPassword=Unlock Password
 EventLog_CreateUser=Create Account
-EventLog_HelpdeskAction=Helpdesk Action
-EventLog_HelpdeskClearResponses=Helpdesk Clear Responses
-EventLog_HelpdeskClearOtpSecret=Helpdesk Clear OTP Secret
-EventLog_HelpdeskSetPassword=Helpdesk Set Password
-EventLog_HelpdeskUnlockPassword=Helpdesk Unlock Password
-EventLog_HelpdeskDeleteUser=Helpdesk Delete User
-EventLog_HelpdeskViewDetail=Helpdesk View Detail
-EventLog_HelpdeskVerifyOtp=Helpdesk Verify OTP
-EventLog_HelpdeskVerifyOtpIncorrect=Helpdesk Incorrect OTP Verify
-EventLog_HelpdeskVerifyToken=Helpdesk Verify Token
-EventLog_HelpdeskVerifyTokenIncorrect=Helpdesk Incorrect Token Verify
-EventLog_HelpdeskVerifyAttributes=Helpdesk Verify Attributes
-EventLog_HelpdeskVerifyAttributesIncorrect=Helpdesk Incorrect Attributes Verify
+EventLog_HelpdeskAction=Help Desk Action
+EventLog_HelpdeskClearResponses=Help Desk Clear Responses
+EventLog_HelpdeskClearOtpSecret=Help Desk Clear OTP Secret
+EventLog_HelpdeskSetPassword=Help Desk Set Password
+EventLog_HelpdeskUnlockPassword=Help Desk Unlock Password
+EventLog_HelpdeskDeleteUser=Help Desk Delete User
+EventLog_HelpdeskViewDetail=Help Desk View Detail
+EventLog_HelpdeskVerifyOtp=Help Desk Verify OTP
+EventLog_HelpdeskVerifyOtpIncorrect=Help Desk Incorrect OTP Verify
+EventLog_HelpdeskVerifyToken=Help Desk Verify Token
+EventLog_HelpdeskVerifyTokenIncorrect=Help Desk Incorrect Token Verify
+EventLog_HelpdeskVerifyAttributes=Help Desk Verify Attributes
+EventLog_HelpdeskVerifyAttributesIncorrect=Help Desk Incorrect Attributes Verify
 EventLog_IntruderUserAttempt=Intruder User Attempt
 EventLog_IntruderUserLock=Intruder User Lockout
 EventLog_TokenIssued=Token Issued
@@ -60,7 +60,7 @@ Requirement_ADComplexity2008=Must have at least %1% types of the following chara
 Requirement_AllowNumeric=Must not include any numeric characters.
 Requirement_AllowSpecial=Must not include any symbol (non letter or number) characters.
 Requirement_CaseSensitive=Password is case sensitive.
-Requirement_DisAllowedAttributes=Must not include part of your name or username.
+Requirement_DisAllowedAttributes=Must not include part of your name or user name.
 Requirement_DisAllowedValues=Must not include any of the following values: %1%
 Requirement_FirstNumeric=The first character can not be numeric.
 Requirement_FirstSpecial=The first character can not be a symbol (non letter or number).
