--- a/src/main/resources/password/pwm/i18n/Message_fr.properties
+++ b/src/main/resources/password/pwm/i18n/Message_fr.properties
@@ -30,7 +30,7 @@ EventLog_ActivateUser=Activer le compte
 EventLog_Authenticate=Authentification
 EventLog_AgreementPassed=Accord pass\u00e9
 EventLog_ChangePassword=\u00c9diter le mot de passe
-EventLog_UnlockPassword=D\u00e9verrouiller le mot de passe
+EventLog_UnlockPassword=Mot de passe de d\u00e9verrouillage
 EventLog_CreateUser=Cr\u00e9er un compte
 EventLog_HelpdeskAction=Op\u00e9ration du service d'assistance
 EventLog_HelpdeskClearResponses=Service d'assistance - Effacer les r\u00e9ponses
@@ -40,11 +40,16 @@ EventLog_HelpdeskUnlockPassword=Service d'assistance - D\u00e9verrouiller le mot
 EventLog_HelpdeskDeleteUser=Service d'assistance - Supprimer l'utilisateur
 EventLog_HelpdeskViewDetail=Service d'assistance - Afficher les d\u00e9tails
 EventLog_HelpdeskVerifyOtp=Service d'assistance - V\u00e9rifier le mot de passe \u00e0 usage unique
-EventLog_IntruderUser=Verrouillage de l'utilisateur intrus
+EventLog_HelpdeskVerifyOtpIncorrect=Service d'assistance - V\u00e9rifier le mot de passe \u00e0 usage unique incorrect
+EventLog_HelpdeskVerifyToken=Service d'assistance - V\u00e9rifier le jeton
+EventLog_HelpdeskVerifyTokenIncorrect=Service d'assistance - V\u00e9rifier le jeton incorrect
+EventLog_HelpdeskVerifyAttributes=Service d'assistance - V\u00e9rifier les attributs
+EventLog_HelpdeskVerifyAttributesIncorrect=Service d'assistance - V\u00e9rifier les attributs incorrects
+EventLog_IntruderUserLock=Verrouillage de l'utilisateur intrusif
 EventLog_TokenIssued=Jeton \u00e9mis
 EventLog_TokenClaimed=Jeton r\u00e9clam\u00e9
 EventLog_ClearResponses=Effacer les r\u00e9ponses
-EventLog_RecoverPassword=R\u00e9cup\u00e9rer le mot de passe oubli\u00e9
+EventLog_RecoverPassword=R\u00e9cup\u00e9rer un mot de passe oubli\u00e9
 EventLog_SetupResponses=Configurer les r\u00e9ponses concernant le mot de passe
 Eventlog_SetupOtpSecret=Configurer le secret du mot de passe \u00e0 usage unique
 EventLog_UpdateProfile=Mettre \u00e0 jour les attributs
@@ -61,41 +66,41 @@ Requirement_LastNumeric=Le dernier caract\u00e8re ne peut pas \u00eatre num\u00e
 Requirement_LastSpecial=Le dernier caract\u00e8re ne peut pas \u00eatre un symbole (ni alphab\u00e9tique ni num\u00e9rique).
 Requirement_MaxAlpha=Ne peut pas inclure plus de %1% lettre.
 Requirement_MaxAlphaPlural=Ne peut pas inclure plus de %1% lettres.
-Requirement_MaxLength=Ne doit pas comporter plus de %1%\u00a0caract\u00e8re.
-Requirement_MaxLengthPlural=Ne doit pas comporter plus de %1%\u00a0caract\u00e8res.
+Requirement_MaxLength=Ne doit pas comporter plus de %1% caract\u00e8re.
+Requirement_MaxLengthPlural=Ne doit pas comporter plus de %1% caract\u00e8res.
 Requirement_MaxLower=Ne peut pas inclure plus de %1% lettre minuscule.
 Requirement_MaxLowerPlural=Ne peut pas inclure plus de %1% lettres minuscules.
 Requirement_MaxNumeric=Ne peut pas inclure plus de %1% chiffre.
 Requirement_MaxNumericPlural=Ne peut pas inclure plus de %1% chiffres.
 Requirement_MaxRepeat=Ne doit pas r\u00e9p\u00e9ter le m\u00eame caract\u00e8re plus de %1% fois.
 Requirement_MaxRepeatPlural=Ne doit pas r\u00e9p\u00e9ter le m\u00eame caract\u00e8re plus de %1% fois.
-Requirement_MaxSeqRepeat=Ne doit pas r\u00e9p\u00e9ter le m\u00eame caract\u00e8re s\u00e9quentiellement plus de %1% fois.
-Requirement_MaxSeqRepeatPlural=Ne doit pas r\u00e9p\u00e9ter le m\u00eame caract\u00e8re s\u00e9quentiellement plus de %1% fois.
+Requirement_MaxSeqRepeat=Ne doit pas r\u00e9p\u00e9ter le m\u00eame caract\u00e8re successivement plus de %1% fois.
+Requirement_MaxSeqRepeatPlural=Ne doit pas r\u00e9p\u00e9ter le m\u00eame caract\u00e8re successivement plus de %1% fois.
 Requirement_MaxSpecial=Ne peut pas comporter plus de %1% symbole (ni alphab\u00e9tique ni num\u00e9rique).
 Requirement_MaxSpecialPlural=Ne peut pas comporter plus de %1% symboles (ni alphab\u00e9tique ni num\u00e9rique).
 Requirement_MaxUpper=Ne peut pas inclure plus de %1% lettre majuscule.
 Requirement_MaxUpperPlural=Ne peut pas inclure plus de %1% lettres majuscules.
 Requirement_MinAlpha=Doit comporter au moins %1% lettre.
 Requirement_MinAlphaPlural=Doit comporter au moins %1% lettres.
-Requirement_MinimumFrequency=Ne peut pas \u00eatre \u00e9dit\u00e9 \u00e0 une fr\u00e9quence sup\u00e9rieure \u00e0 une fois tou(te)s les %1%.
-Requirement_MinLength=Doit comporter au moins %1%\u00a0caract\u00e8re.
-Requirement_MinLengthPlural=Doit comporter au moins %1%\u00a0caract\u00e8res.
+Requirement_MinimumFrequency=Ne peut pas \u00eatre \u00e9dit\u00e9 \u00e0 une fr\u00e9quence sup\u00e9rieure \u00e0 une fois chaque/tou(te)s les %1%.
+Requirement_MinLength=Doit comporter au moins %1% caract\u00e8re.
+Requirement_MinLengthPlural=Doit comporter au moins %1% caract\u00e8res.
 Requirement_MinLower=Doit comporter au moins %1% lettre minuscule.
 Requirement_MinLowerPlural=Doit comporter au moins %1% lettres minuscules.
 Requirement_MinNumeric=Doit comporter au moins %1% chiffre.
 Requirement_MinNumericPlural=Doit comporter au moins %1% chiffres.
 Requirement_MinSpecial=Doit comporter au moins %1% symbole (ni alphab\u00e9tique ni num\u00e9rique).
 Requirement_MinSpecialPlural=Doit comporter au moins %1% symboles (ni alphab\u00e9tiques ni num\u00e9riques).
-Requirement_MinUnique=Doit comporter au moins %1%\u00a0caract\u00e8re unique.
-Requirement_MinUniquePlural=Doit comporter au moins %1%\u00a0caract\u00e8res uniques.
+Requirement_MinUnique=Doit comporter au moins %1% caract\u00e8re unique.
+Requirement_MinUniquePlural=Doit comporter au moins %1% caract\u00e8res uniques.
 Requirement_MinUpper=Doit comporter au moins %1% lettre majuscule.
 Requirement_MinUpperPlural=Doit comporter au moins %1% lettres majuscules.
 Requirement_NotCaseSensitive=Le mot de passe n'est pas sensible \u00e0 la casse.
 Requirement_OldChar=Ne peut pas comporter plus de %1% caract\u00e8re de votre mot de passe actuel.
 Requirement_OldCharPlural=Ne peut pas comporter plus de %1% caract\u00e8res de votre mot de passe actuel.
 Requirement_RequiredChars=Doit comporter au moins un caract\u00e8re de chaque cat\u00e9gorie suivante :
-Requirement_UniqueRequired=Le nouveau mot de passe ne doit pas avoir encore \u00e9t\u00e9 utilis\u00e9.
-Requirement_WordList=Ne doit pas comporter de mot commun ou de s\u00e9quence de caract\u00e8res commun\u00e9ment utilis\u00e9e.
+Requirement_UniqueRequired=Le nouveau mot de passe ne doit pas avoir \u00e9t\u00e9 utilis\u00e9 par le pass\u00e9.
+Requirement_WordList=Ne doit pas comporter de mot courant ou de s\u00e9quence de caract\u00e8res couramment utilis\u00e9e.
 Rule_PolicyEnabled=Strat\u00e9gie activ\u00e9e
 Rule_MinimumLength=Longueur minimale
 Rule_MaximumLength=Longueur maximale
@@ -116,11 +121,11 @@ Rule_MaximumSpecial=Nombre maximal de caract\u00e8res sp\u00e9ciaux
 Rule_AllowFirstCharSpecial=Autoriser un caract\u00e8re sp\u00e9cial en premi\u00e8re position
 Rule_AllowLastCharSpecial=Autoriser un caract\u00e8re sp\u00e9cial en derni\u00e8re position
 Rule_MaximumRepeat=Nombre maximal de r\u00e9p\u00e9titions
-Rule_MaximumSequentialRepeat=Nombre maximal de r\u00e9p\u00e9titions s\u00e9quentielles
+Rule_MaximumSequentialRepeat=Nombre maximal de r\u00e9p\u00e9titions successives
 Rule_ChangeMessage=Message de modification
 Rule_ExpirationInterval=Intervalle d'expiration
 Rule_MinimumLifetime=Dur\u00e9e de vie minimale
-Rule_CaseSensitive=Sensible \u00e0 la cesse
+Rule_CaseSensitive=Sensible \u00e0 la casse
 Rule_EnforceAtLogin=Appliquer lors de la connexion
 Rule_ChallengeResponseEnabled=R\u00e9ponse de v\u00e9rification d'identit\u00e9 activ\u00e9e
 Rule_UniqueRequired=Caract\u00e8res uniques requis
@@ -140,25 +145,25 @@ Rule_MinimumStrength=Force minimale
 Rule_MaximumConsecutive=Nbre max. de car. cons\u00e9cutifs
 Rule_CharGroupsValues=Valeurs du groupe de caract\u00e8res
 Rule_CharGroupsMinMatch=Groupes minimaux de caract\u00e8res requis
-Rule_AllowUserChange=Autoriser le changement du mot de passe de l'administrateur
-Rule_AllowAdminChange=Autoriser le changement du mot de passe de l'utilisateur
+Rule_AllowUserChange=Autoriser l'\u00e9dition du mot de passe de l'administrateur
+Rule_AllowAdminChange=Autoriser l'\u00e9dition du mot de passe de l'utilisateur
 Rule_ADComplexityLevel=Niveau de complexit\u00e9 AD
 Rule_ADComplexityMaxViolations=Nombre maximal de violations de la complexit\u00e9 AD
 Success_ActivateUser=Votre compte utilisateur a \u00e9t\u00e9 activ\u00e9. Prenez soin de finaliser le processus afin de pouvoir acc\u00e9der \u00e0 votre compte.
 Success_ConfigFileUpload=Le fichier de configuration a \u00e9t\u00e9 t\u00e9l\u00e9charg\u00e9.
 Success_ClearResponse=Vos questions et r\u00e9ponses secr\u00e8tes ont \u00e9t\u00e9 effac\u00e9es.
-Success_CreateGuest=Le nouveau compte invit\u00e9 a \u00e9t\u00e9 cr\u00e9\u00e9. L'utilisateur invit\u00e9 va recevoir une notification si l'adresse \u00e9lectronique a \u00e9t\u00e9 saisie. Le compte invit\u00e9 doit peut-\u00eatre \u00eatre activ\u00e9.
+Success_CreateGuest=Le nouveau compte invit\u00e9 a \u00e9t\u00e9 cr\u00e9\u00e9. L'utilisateur invit\u00e9 va recevoir une notification si l'adresse \u00e9lectronique a \u00e9t\u00e9 entr\u00e9e. Le compte invit\u00e9 doit peut-\u00eatre encore \u00eatre activ\u00e9.
 Success_CreateUser=Votre nouveau compte utilisateur a \u00e9t\u00e9 cr\u00e9\u00e9.
 Success_NewUserForm=Votre compte est pr\u00eat \u00e0 \u00eatre cr\u00e9\u00e9. Continuez lorsque vous \u00eates pr\u00eat.
 Success_PasswordChange=Votre mot de passe a \u00e9t\u00e9 \u00e9dit\u00e9.
-Success_PasswordReset=Le mot de passe pour %1% a \u00e9t\u00e9 configur\u00e9.
+Success_PasswordReset=Le mot de passe pour %1% a \u00e9t\u00e9 d\u00e9fini.
 Success_PasswordSend=Votre nouveau mot de passe a \u00e9t\u00e9 envoy\u00e9 \u00e0 %1%. Fermez cette fen\u00eatre et connectez-vous \u00e0 l'aide de votre nouveau mot de passe.
 Success_ResponsesMeetRules=Vos r\u00e9ponses r\u00e9pondent aux exigences. Cliquez sur Enregistrer les r\u00e9ponses lorsque vous \u00eates pr\u00eat.
 Success_SetupResponse=Merci. Vos questions et r\u00e9ponses secr\u00e8tes ont \u00e9t\u00e9 enregistr\u00e9es. Si vous oubliez votre mot de passe, vous pourrez les utiliser pour r\u00e9initialiser votre mot de passe.
-Success_Unknown=L'op\u00e9ration a \u00e9t\u00e9 ex\u00e9cut\u00e9e.
+Success_Unknown=L'op\u00e9ration a \u00e9t\u00e9 effectu\u00e9e.
 Success_UnlockAccount=Votre compte a \u00e9t\u00e9 d\u00e9verrouill\u00e9.
 Success_UpdateGuest=Le compte invit\u00e9 a \u00e9t\u00e9 mis \u00e0 jour. L'utilisateur invit\u00e9 va recevoir une notification si l'adresse \u00e9lectronique a \u00e9t\u00e9 saisie.
 Success_UpdateProfile=Vos informations utilisateur ont \u00e9t\u00e9 mises \u00e0 jour.
 Success_UpdateForm=Votre profil est pr\u00eat \u00e0 \u00eatre mis \u00e0 jour. Continuez lorsque vous \u00eates pr\u00eat.
-Success_Action=L'op\u00e9ration %1% a \u00e9t\u00e9 ex\u00e9cut\u00e9e.
-Success_OtpSetup=L'inscription de vote p\u00e9riph\u00e9rique est termin\u00e9e.
+Success_Action=L'op\u00e9ration %1% a \u00e9t\u00e9 effectu\u00e9e.
+Success_OtpSetup=L'inscription de votre p\u00e9riph\u00e9rique a \u00e9t\u00e9 effectu\u00e9e.
