--- a/src/main/resources/password/pwm/i18n/Message_nl.properties
+++ b/src/main/resources/password/pwm/i18n/Message_nl.properties
@@ -20,75 +20,150 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-EventLog_ActivateUser=Gebruikersaccount activeren
+EventLog_Startup=Toepassing opstarten
+EventLog_Shutdown=Toepassing afsluiten
+EventLog_FatalEvent=Fatale gebeurtenis
+EventLog_ModifyConfiguration=Configuratie gewijzigd
+EventLog_IntruderAttempt=Poging tot indringen
+EventLog_IntruderLockout=Uitsluiten van indringer
+EventLog_ActivateUser=Account activeren
+EventLog_Authenticate=Verificatie
+EventLog_AgreementPassed=Overeenkomst bereikt
 EventLog_ChangePassword=Wachtwoord wijzigen
-EventLog_HelpdeskClearResponses=Helpdesk Antwoorden wissen
-EventLog_HelpdeskClearOtpSecret=Helpdesk Geheim voor eenmalig wachtwoord wissen
-EventLog_HelpdeskSetPassword=Helpdesk Wachtwoord instellen
-EventLog_HelpdeskUnlockPassword=Helpdesk Wachtwoord ontgrendelen
-EventLog_IntruderLockout=Indringers uitsluiten
-EventLog_RecoverPassword=Vergeten wachtwoord achterhalen
-EventLog_SetupResponses=Antwoorden voor wachtwoordherstel opstellen
-Eventlog_SetupOtpSecret=Code voor eenmalig wachtwoord instellen
-EventLog_UpdateProfile=Attributen wijzigen
-Requirement_ADComplexity=Moet minimaal drie van de volgende types bevatten: <ul><li>Hoofdletters (A-Z)</li><li>Kleine letters (a-z)</li><li>Nummers (0-9)</li><li>Speciale karakters (!, #, $, etc.)</li></ul>
-Requirement_AllowNumeric=Mag geen enkel numeriek karakter bevatten.
-Requirement_AllowSpecial=Mag geen speciale karakters bevatten.
+EventLog_UnlockPassword=Wachtwoord ontgrendelen
+EventLog_CreateUser=Account maken
+EventLog_HelpdeskAction=Helpdesk: actie
+EventLog_HelpdeskClearResponses=Helpdesk: antwoorden wissen
+EventLog_HelpdeskClearOtpSecret=Helpdesk: OTP-geheim wissen
+EventLog_HelpdeskSetPassword=Helpdesk: wachtwoord instellen
+EventLog_HelpdeskUnlockPassword=Helpdesk: wachtwoord ontgrendelen
+EventLog_HelpdeskDeleteUser=Helpdesk: gebruiker verwijderen
+EventLog_HelpdeskViewDetail=Helpdesk: details weergeven
+EventLog_HelpdeskVerifyOtp=Helpdesk: OTP verifi\u00ebren
+EventLog_HelpdeskVerifyOtpIncorrect=Helpdesk: verificatie mislukt vanwege onjuist OTP
+EventLog_HelpdeskVerifyToken=Helpdesk: token verifi\u00ebren
+EventLog_HelpdeskVerifyTokenIncorrect=Helpdesk: verificatie mislukt vanwege onjuist token
+EventLog_HelpdeskVerifyAttributes=Helpdesk: attributen verifi\u00ebren
+EventLog_HelpdeskVerifyAttributesIncorrect=Helpdesk: onjuiste attributen verifi\u00ebren
+EventLog_IntruderUserLock=Uitsluiten van indringer
+EventLog_TokenIssued=Token uitgegeven
+EventLog_TokenClaimed=Token geclaimd
+EventLog_ClearResponses=Antwoorden wissen
+EventLog_RecoverPassword=Vergeten wachtwoord herstellen
+EventLog_SetupResponses=Wachtwoordantwoorden instellen
+Eventlog_SetupOtpSecret=OTP-geheim instellen
+EventLog_UpdateProfile=Attributen bijwerken
+Requirement_ADComplexity=Moet minimaal drie typen tekens (naar keuze) bevatten: <ul><li>hoofdletters (A-Z)</li><li>kleine letters (a-z)</li><li>cijfers (0-9)</li><li>speciale tekens (!, #, $, enzovoort)</li></ul>
+Requirement_ADComplexity2008=Moet minimaal %1% typen tekens (naar keuze) bevatten: <ul><li>hoofdletters (A-Z)</li><li>kleine letters (a-z)</li><li>cijfers (0-9)</li><li>speciale tekens (!, #, $, enzovoort)</li><li>Tekens van andere talen worden hierboven niet weergegeven</li></ul>
+Requirement_AllowNumeric=Mag geen enkel numeriek teken bevatten.
+Requirement_AllowSpecial=Mag alleen bestaan uit letters en/of cijfers.
 Requirement_CaseSensitive=Het wachtwoord is hoofdlettergevoelig.
-Requirement_DisAllowedAttributes=Mag niet deels overeenkomen met uw naam of login naam.
-Requirement_DisAllowedValues=Mag niet \u00e9\u00e9n van de volgende waardes bevatten: %1%
-Requirement_FirstNumeric=Het eerste karakter mag niet numeriek zijn.
-Requirement_FirstSpecial=Het eerste karakter mag geen speciaal karakter zijn.
-Requirement_LastNumeric=Het laatste karakter mag niet numeriek zijn.
-Requirement_LastSpecial=Het laatste karakter mag geen speciaal karakter zijn.
-Requirement_MaxAlpha=Mag niet maar dan %1% letter(s) bevatten.
-Requirement_MaxAlphaPlural=Mag niet maar dan %1% letters bevatten.
-Requirement_MaxLength=Mag niet langer dan %1% karakter(s) zijn.
-Requirement_MaxLengthPlural=Mag niet langer dan %1% karakters zijn.
-Requirement_MaxLower=Mag niet meer dan %1% kleine letter(s) bevatten.
+Requirement_DisAllowedAttributes=Mag geen gedeelte van uw naam of gebruikersnaam bevatten.
+Requirement_DisAllowedValues=Mag niet een van de volgende waarden bevatten: %1%
+Requirement_FirstNumeric=Het eerste teken mag niet numeriek zijn.
+Requirement_FirstSpecial=Het eerste teken moet een letter of cijfer zijn.
+Requirement_LastNumeric=Het laatste teken mag niet numeriek zijn.
+Requirement_LastSpecial=Het laatste teken moet een letter of cijfer zijn.
+Requirement_MaxAlpha=Mag niet meer dan %1% letter bevatten.
+Requirement_MaxAlphaPlural=Mag niet meer dan %1% letters bevatten.
+Requirement_MaxLength=Mag niet langer zijn dan %1% teken.
+Requirement_MaxLengthPlural=Mag niet langer zijn dan %1% tekens.
+Requirement_MaxLower=Mag niet meer dan %1% kleine letter bevatten.
 Requirement_MaxLowerPlural=Mag niet meer dan %1% kleine letters bevatten.
-Requirement_MaxNumeric=Kan niet meer dan %1% numeriek karakter(s) bevatten.
-Requirement_MaxNumericPlural=Kan niet meer dan %1% numerieke karakters bevatten.
-Requirement_MaxRepeat=Mag geen karakter meer dan %1% keer herhalen.
-Requirement_MaxRepeatPlural=Mag geen karakter meer dan %1% keer herhalen.
-Requirement_MaxSeqRepeat=Mag een karakter niet meer dan %1% keer sequentieel herhalen.
-Requirement_MaxSeqRepeatPlural=Mag een karakter niet meer dan %1% keer sequentieel herhalen.
-Requirement_MaxSpecial=Mag niet meer dan %1% speciaal karakter bevatten.
-Requirement_MaxSpecialPlural=Mag niet meer dan %1% speciale karakters bevatten.
-Requirement_MaxUpper=Mag niet meer dan %1% hoofdletter(s) bevatten.
+Requirement_MaxNumeric=Mag niet meer dan %1% cijfer bevatten.
+Requirement_MaxNumericPlural=Mag niet meer dan %1% cijfers bevatten.
+Requirement_MaxRepeat=Mag geen teken meer dan %1% keer herhalen.
+Requirement_MaxRepeatPlural=Elk teken mag niet meer dan %1% keer voorkomen.
+Requirement_MaxSeqRepeat=Elk teken mag niet meer dan %1% keer achter elkaar voorkomen.
+Requirement_MaxSeqRepeatPlural=Elk teken mag niet meer dan %1% keer achter elkaar voorkomen.
+Requirement_MaxSpecial=Mag niet meer dan %1% speciaal teken (teken dat geen letter of cijfer is) bevatten.
+Requirement_MaxSpecialPlural=Mag niet meer dan %1% speciale tekens (tekens die geen letter of cijfer zijn) bevatten.
+Requirement_MaxUpper=Mag niet meer dan %1% hoofdletter bevatten.
 Requirement_MaxUpperPlural=Mag niet meer dan %1% hoofdletters bevatten.
 Requirement_MinAlpha=Moet minimaal %1% letter bevatten.
 Requirement_MinAlphaPlural=Moet minimaal %1% letters bevatten.
 Requirement_MinimumFrequency=Kan niet vaker dan \u00e9\u00e9n keer per %1% worden gewijzigd.
-Requirement_MinLength=Moet minimaal %1% karakter(s) lang zijn.
-Requirement_MinLengthPlural=Moet minimaal %1% karakters lang zijn.
-Requirement_MinLower=Moet minimaal %1% kleine letter(s) bevatten.
+Requirement_MinLength=Moet minimaal %1% teken lang zijn.
+Requirement_MinLengthPlural=Moet minimaal %1% tekens lang zijn.
+Requirement_MinLower=Moet minimaal %1% kleine letter bevatten.
 Requirement_MinLowerPlural=Moet minimaal %1% kleine letters bevatten.
-Requirement_MinNumeric=Moet minimaal %1% numeriek(e) karakter(e) bevatten.
-Requirement_MinNumericPlural=Moet minimaal %1% numerieke karakters bevatten.
-Requirement_MinSpecial=Moet minimaal %1% speciaal karakter bevatten.
-Requirement_MinSpecialPlural=Moet minimaal %1% speciale karakters bevatten.
-Requirement_MinUnique=Moet minimaal %1% uniek(e) karakter(s) bevatten.
-Requirement_MinUniquePlural=Moet minimaal %1% unieke karakters bevatten.
-Requirement_MinUpper=Moet minimaal %1% hoofdletter(s) bevatten.
+Requirement_MinNumeric=Moet minimaal %1% cijfer bevatten.
+Requirement_MinNumericPlural=Moet minimaal %1% cijfers bevatten.
+Requirement_MinSpecial=Moet minimaal %1% speciaal teken (teken dat geen letter of cijfer is) bevatten.
+Requirement_MinSpecialPlural=Moet minimaal %1% speciale tekens (tekens die geen letter of cijfer zijn) bevatten.
+Requirement_MinUnique=Moet minimaal %1% uniek teken bevatten.
+Requirement_MinUniquePlural=Moet minimaal %1% unieke tekens bevatten.
+Requirement_MinUpper=Moet minimaal %1% hoofdletter bevatten.
 Requirement_MinUpperPlural=Moet minimaal %1% hoofdletters bevatten.
 Requirement_NotCaseSensitive=Het wachtwoord is niet hoofdlettergevoelig.
-Requirement_OldChar=Mag niet meer dan %1% karakter(s) van uw oude wachtwoord bevatten.
-Requirement_OldCharPlural=Mag niet meer dan %1% karakters van uw oude wachtwoord bevatten.
-Requirement_RequiredChars=Moet minimaal \u00e9\u00e9n van de volgende karakters bevatten:
-Requirement_UniqueRequired=Nieuwe wachtwoorden mogen niet eerder gebruikt zijn.
-Requirement_WordList=Mag geen algemeen woord of algemeen gebruikte karakter volgorde bevatten.
-Success_ActivateUser=Uw nieuwe gebruikersaccount is succesvol geactiveerd. Doorloop het verdere proces volledig, of u zult niet in staat zijn om uzelf aan te melden.
-Success_ConfigFileUpload=Het configuratiebestand is succesvol geladen.
-Success_CreateGuest=Het nieuwe gastaccount is succesvol aangemaakt. De gastgebruiker ontvangt een bericht indien het e-mailadres is ingevuld. Mogelijk is nog activatie vereist.
-Success_CreateUser=Uw nieuwe gebruikersaccount is succesvol aangemaakt.
-Success_NewUserForm=Uw account is gereed om aangemaakt te worden. Ga verder als u gereed bent.
+Requirement_OldChar=Mag niet meer dan %1% teken van uw huidige wachtwoord bevatten.
+Requirement_OldCharPlural=Mag niet meer dan %1% tekens van uw huidige wachtwoord bevatten.
+Requirement_RequiredChars=Moet minimaal \u00e9\u00e9n van de volgende tekens bevatten:
+Requirement_UniqueRequired=Nieuw wachtwoord mag niet eerder zijn gebruikt.
+Requirement_WordList=Mag geen gebruikelijk woord of gebruikelijke tekenvolgorde bevatten.
+Rule_PolicyEnabled=Beleid ingeschakeld
+Rule_MinimumLength=Minimale lengte
+Rule_MaximumLength=Maximale lengte
+Rule_MinimumUpperCase=Minimum aantal hoofdletters
+Rule_MaximumUpperCase=Maximum aantal hoofdletters
+Rule_MinimumLowerCase=Minimum aantal kleine letters
+Rule_MaximumLowerCase=Maximum aantal kleine letters
+Rule_AllowNumeric=Numeriek toestaan
+Rule_MinimumNumeric=Minimaal numeriek
+Rule_MaximumNumeric=Maximaal numeriek
+Rule_MinimumUnique=Minimaal uniek
+Rule_MaximumUnique=Maximaal uniek
+Rule_AllowFirstCharNumeric=Numeriek teken als eerste teken toestaan
+Rule_AllowLastCharNumeric=Numeriek teken als laatste teken toestaan
+Rule_AllowSpecial=Speciaal toestaan
+Rule_MinimumSpecial=Minimaal speciaal
+Rule_MaximumSpecial=Maximaal speciaal
+Rule_AllowFirstCharSpecial=Speciaal teken als eerste teken toestaan
+Rule_AllowLastCharSpecial=Speciaal teken als laatste teken toestaan
+Rule_MaximumRepeat=Maximum herhaald
+Rule_MaximumSequentialRepeat=Maximum achter elkaar herhaald
+Rule_ChangeMessage=Bericht wijzigen
+Rule_ExpirationInterval=Verloopinterval
+Rule_MinimumLifetime=Minimale levensduur
+Rule_CaseSensitive=Hoofdlettergevoelig
+Rule_EnforceAtLogin=Afdwingen bij aanmelding
+Rule_ChallengeResponseEnabled=Challenge-response ingeschakeld
+Rule_UniqueRequired=Unieke tekens vereist
+Rule_DisallowedValues=Niet-toegestane waarden
+Rule_DisallowedAttributes=Niet-toegestane attributen
+Rule_ADComplexity=AD-complexiteit
+Rule_DisallowCurrent=Huidige wachtwoord niet toestaan
+Rule_MaximumOldChars=Maximum oude tekens
+Rule_RegExMatch=Reguliere expressie: overeenkomst
+Rule_RegExNoMatch=Reguliere expressie: geen overeenkomst
+Rule_MinimumAlpha=Minimum alfa
+Rule_MaximumAlpha=Maximum alfa
+Rule_MinimumNonAlpha=Minimum niet-alfa
+Rule_MaximumNonAlpha=Maximum niet-alfa
+Rule_EnableWordlist=Woordenlijst inschakelen
+Rule_MinimumStrength=Minimale sterkte
+Rule_MaximumConsecutive=Maximaal opeenvolgend
+Rule_CharGroupsValues=Tekengroepwaarden
+Rule_CharGroupsMinMatch=Minimum tekengroepen vereist
+Rule_AllowUserChange=Wijzigen wachtwoord door beheerder toestaan
+Rule_AllowAdminChange=Wijzigen wachtwoord door gebruiker toestaan
+Rule_ADComplexityLevel=AD-complexiteitsniveau
+Rule_ADComplexityMaxViolations=Maximale schendingen AD-complexiteit
+Success_ActivateUser=Uw gebruikersaccount is geactiveerd. Voltooi het proces volledig. Anders krijgt u geen toegang tot uw account.
+Success_ConfigFileUpload=Het configuratiebestand is ge\u00fcpload.
+Success_ClearResponse=Uw geheime vragen en antwoorden zijn verwijderd.
+Success_CreateGuest=De nieuwe gastaccount is gemaakt. De gastgebruiker ontvangt een bericht als het e-mailadres is ingevoerd. Mogelijk moet de gastaccount nog worden geactiveerd.
+Success_CreateUser=Uw nieuwe gebruikersaccount is gemaakt.
+Success_NewUserForm=Uw account kan worden gemaakt. Ga verder als u gereed bent.
 Success_PasswordChange=Uw wachtwoord is gewijzigd.
-Success_PasswordReset=Het wachtwoord voor %1% is met succes ingesteld.
-Success_PasswordSend=Het nieuwe wachtwoord is verzonden naar %1%.  Sluit dit venster en gebruik het nieuwe wachtwoord om opnieuw aan te melden.
-Success_ResponsesMeetRules=Antwoorden moeten aan de eisen voldoen.
-Success_SetupResponse=De beveiligingsvragen en bijbehorende antwoorden zijn opgeslagen.
-Success_Unknown=De bewerking is correct uitgevoerd.
-Success_UnlockAccount=Uw gebruikersaccount is succesvol ontgrendeld.
-Success_UpdateGuest=Het gastaccount is succesvol gewijzigd. De gastgebruiker ontvangt een bericht indien het e-mailadres is ingevuld.
-Success_UpdateProfile=Uw gebruikersinformatie is succesvol bijgewerkt.
+Success_PasswordReset=Het wachtwoord voor %1% is ingesteld.
+Success_PasswordSend=Uw nieuwe wachtwoord is verzonden naar %1%. Sluit dit venster en gebruik het nieuwe wachtwoord om u opnieuw aan te melden.
+Success_ResponsesMeetRules=Uw antwoorden voldoen aan de vereisten. Klik op Antwoorden opslaan als u gereed bent.
+Success_SetupResponse=Bedankt. De beveiligingsvragen en bijbehorende antwoorden zijn opgeslagen. U kunt de antwoorden op deze vragen gebruiken om uw wachtwoord opnieuw in te stellen als u uw wachtwoord ooit vergeet.
+Success_Unknown=De bewerking is voltooid.
+Success_UnlockAccount=Uw account is ontgrendeld.
+Success_UpdateGuest=De gastaccount is bijgewerkt. De gastgebruiker ontvangt een bericht als het e-mailadres is ingevoerd.
+Success_UpdateProfile=Uw gebruikersgegevens zijn bijgewerkt.
+Success_UpdateForm=Uw profiel kan worden bijgewerkt. Ga verder als u gereed bent.
+Success_Action=De actie %1% is voltooid.
+Success_OtpSetup=Uw apparaatinschrijving is voltooid.
