--- a/src/main/resources/password/pwm/i18n/Message_sv.properties
+++ b/src/main/resources/password/pwm/i18n/Message_sv.properties
@@ -39,7 +39,12 @@ EventLog_HelpdeskSetPassword=Supportavdelningen anger l\u00f6senord
 EventLog_HelpdeskUnlockPassword=Supportavdelningen l\u00e5ser upp l\u00f6senord
 EventLog_HelpdeskDeleteUser=Supportavdelningen tar bort anv\u00e4ndare
 EventLog_HelpdeskViewDetail=Supportavdelningen visar information
-EventLog_HelpdeskVerifyOtp=Supportavdelningen verifierar eng\u00e5ngsl\u00f6senord
+EventLog_HelpdeskVerifyOtp=Supportverifiering \u2013 eng\u00e5ngsl\u00f6senord
+EventLog_HelpdeskVerifyOtpIncorrect=Supportverifiering \u2013 felaktigt eng\u00e5ngsl\u00f6senord
+EventLog_HelpdeskVerifyToken=Supportverifiering \u2013 token
+EventLog_HelpdeskVerifyTokenIncorrect=Supportverifiering \u2013 felaktig token
+EventLog_HelpdeskVerifyAttributes=Supportverifiering \u2013 attribut
+EventLog_HelpdeskVerifyAttributesIncorrect=Supportverifiering \u2013 felaktiga attribut
 EventLog_IntruderUserLock=Utest\u00e4ngning av st\u00f6rande anv\u00e4ndare
 EventLog_TokenIssued=Token utf\u00e4rdad
 EventLog_TokenClaimed=Token inl\u00f6st
@@ -59,13 +64,13 @@ Requirement_FirstNumeric=Det f\u00f6rsta tecknet f\u00e5r inte vara en siffra.
 Requirement_FirstSpecial=Det f\u00f6rsta tecknet f\u00e5r inte vara ett symboltecken (tecken som inte \u00e4r bokst\u00e4ver eller siffror).
 Requirement_LastNumeric=Det sista tecknet f\u00e5r inte vara en siffra.
 Requirement_LastSpecial=Det sista tecknet f\u00e5r inte vara ett symboltecken (tecken som inte \u00e4r bokst\u00e4ver eller siffror).
-Requirement_MaxAlpha=Du f\u00e5r inte ha fler \u00e4n %1% bokstav.
-Requirement_MaxAlphaPlural=Du f\u00e5r inte ha fler \u00e4n %1% bokst\u00e4ver.
+Requirement_MaxAlpha=F\u00e5r inte ha fler \u00e4n %1% bokstav.
+Requirement_MaxAlphaPlural=F\u00e5r inte ha fler \u00e4n %1% bokst\u00e4ver.
 Requirement_MaxLength=F\u00e5r vara h\u00f6gst %1% tecken l\u00e5ngt.
 Requirement_MaxLengthPlural=F\u00e5r vara h\u00f6gst %1% tecken l\u00e5ngt.
-Requirement_MaxLower=Du f\u00e5r inte ha fler \u00e4n %1% gemen.
-Requirement_MaxLowerPlural=Du f\u00e5r inte ha fler \u00e4n %1% gemener.
-Requirement_MaxNumeric=Du f\u00e5r inte ha fler \u00e4n %1% siffra.
+Requirement_MaxLower=F\u00e5r inte ha fler \u00e4n %1% gemen.
+Requirement_MaxLowerPlural=F\u00e5r inte ha fler \u00e4n %1% gemener.
+Requirement_MaxNumeric=F\u00e5r inte ha fler \u00e4n %1% siffra.
 Requirement_MaxNumericPlural=F\u00e5r inte ha fler \u00e4n %1% siffror.
 Requirement_MaxRepeat=F\u00e5r inte upprepa n\u00e5got tecken mer \u00e4n %1% g\u00e5ng.
 Requirement_MaxRepeatPlural=F\u00e5r inte upprepa n\u00e5got tecken mer \u00e4n %1% g\u00e5nger.
@@ -93,7 +98,7 @@ Requirement_MinUpperPlural=M\u00e5ste ha minst %1% versaler.
 Requirement_NotCaseSensitive=L\u00f6senordet \u00e4r inte skiftl\u00e4gesk\u00e4nsligt.
 Requirement_OldChar=F\u00e5r inte ha fler \u00e4n %1% tecken fr\u00e5n ditt nuvarande l\u00f6senord.
 Requirement_OldCharPlural=F\u00e5r inte ha fler \u00e4n %1% tecken fr\u00e5n ditt nuvarande l\u00f6senord.
-Requirement_RequiredChars=M\u00e5ste inneh\u00e5lla minst en av vardera av f\u00f6ljande tecken:
+Requirement_RequiredChars=M\u00e5ste inneh\u00e5lla minst en f\u00f6rekomst vardera av f\u00f6ljande tecken:
 Requirement_UniqueRequired=Det nya l\u00f6senordet f\u00e5r inte ha anv\u00e4nts tidigare.
 Requirement_WordList=F\u00e5r inte inneh\u00e5lla ett vanligt ord eller en vanligt f\u00f6rekommande teckensekvens.
 Rule_PolicyEnabled=Policy aktiverad
@@ -137,17 +142,17 @@ Rule_MinimumNonAlpha=Min icke-alfabetiska
 Rule_MaximumNonAlpha=Max icke-alfabetiska
 Rule_EnableWordlist=Aktivera ordlista
 Rule_MinimumStrength=Minsta styrka
-Rule_MaximumConsecutive=H\u00f6gsta antal i f\u00f6ljd
+Rule_MaximumConsecutive=Max antal i f\u00f6ljd
 Rule_CharGroupsValues=Teckengruppsv\u00e4rden
 Rule_CharGroupsMinMatch=Teckengrupper, minimikrav
 Rule_AllowUserChange=Till\u00e5t administrat\u00f6ren att \u00e4ndra l\u00f6senord
 Rule_AllowAdminChange=Till\u00e5t anv\u00e4ndaren att \u00e4ndra l\u00f6senord
-Rule_ADComplexityLevel=AD-komplexitet
+Rule_ADComplexityLevel=AD-komplexitetsniv\u00e5
 Rule_ADComplexityMaxViolations=H\u00f6gsta antal brott mot AD-komplexitet
 Success_ActivateUser=Ditt anv\u00e4ndarkonto har aktiverats. Du m\u00e5ste slutf\u00f6ra processen, annars kommer du inte att kunna komma \u00e5t ditt konto.
 Success_ConfigFileUpload=Konfigurationsfilen har \u00f6verf\u00f6rts.
 Success_ClearResponse=Dina hemliga fr\u00e5gor och svar har tagits bort.
-Success_CreateGuest=G\u00e4stkontot har skapats. G\u00e4stanv\u00e4ndaren f\u00e5r en avisering om du angav en e-postadress. G\u00e4stkontot kan fortfarande beh\u00f6va aktiveras.
+Success_CreateGuest=G\u00e4stkontot har skapats. G\u00e4stanv\u00e4ndaren f\u00e5r en avisering om en e-postadress har angetts. G\u00e4stkontot kan fortfarande beh\u00f6va aktiveras.
 Success_CreateUser=Ditt nya anv\u00e4ndarkonto har skapats.
 Success_NewUserForm=Ditt konto \u00e4r klart att skapas. Forts\u00e4tt n\u00e4r du \u00e4r klar.
 Success_PasswordChange=Ditt l\u00f6senord har \u00e4ndrats.
@@ -157,7 +162,7 @@ Success_ResponsesMeetRules=Dina svar uppfyller kraven. Klicka p\u00e5 Spara svar
 Success_SetupResponse=Tack. Dina hemliga fr\u00e5gor och svar har sparats. Om du gl\u00f6mmer bort ditt l\u00f6senord kan du anv\u00e4nda svaren p\u00e5 fr\u00e5gorna f\u00f6r att \u00e5terst\u00e4lla l\u00f6senordet.
 Success_Unknown=\u00c5tg\u00e4rden har slutf\u00f6rts.
 Success_UnlockAccount=Ditt konto har l\u00e5sts upp.
-Success_UpdateGuest=G\u00e4stkontot har uppdaterats. G\u00e4stanv\u00e4ndaren f\u00e5r en avisering om du angav en e-postadress.
+Success_UpdateGuest=G\u00e4stkontot har uppdaterats. G\u00e4stanv\u00e4ndaren f\u00e5r en avisering om en e-postadress har angetts.
 Success_UpdateProfile=Din anv\u00e4ndarinformation har uppdaterats.
 Success_UpdateForm=Din profil \u00e4r klar att uppdateras. Forts\u00e4tt n\u00e4r du \u00e4r klar.
 Success_Action=\u00c5tg\u00e4rden %1% har slutf\u00f6rts.
