--- a/src/main/resources/password/pwm/i18n/Error.properties
+++ b/src/main/resources/password/pwm/i18n/Error.properties
@@ -66,8 +66,8 @@ Password_NotEnoughGroups=New password does not contain enough different types of
 Password_TooManyConsecutive=New password has too many consecutive characters (such as 123456... or abcdef...)
 
 Error_WrongResponse=One or more responses are not correct.  Please try again.
-Error_WrongPassword=The username or password is not valid.  Please try again.
-Error_Response_NoResponse=The username is not valid or is not eligible to use this feature
+Error_WrongPassword=The user name or password is not valid.  Please try again.
+Error_Response_NoResponse=The user name is not valid or is not eligible to use this feature
 Error_Response_TooShort=The response for question "%1%" is too short
 Error_Response_Wordlist=The response for question "%1%" is too commonly used
 Error_Response_TooLong=The response for question "%1%" is too long
@@ -76,10 +76,10 @@ Error_Challenge_Duplicate=Each question must be unique.
 Error_Missing_Challenge_Text=Missing text for a user supplied question
 Error_UserAuthenticated=You are already authenticated.
 Error_MissingParameter=A required parameter is missing.
-Error_DirectoryUnavailable=Directory unavailable.  If this error occurs repeatedly please contact your helpdesk.
-Error_Unknown=An error has occurred.  If this error occurs repeatedly please contact your helpdesk.
+Error_DirectoryUnavailable=Directory unavailable.  If this error occurs repeatedly please contact your help desk.
+Error_Unknown=An error has occurred.  If this error occurs repeatedly please contact your help desk.
 Error_ActivationValidationFailed=One or more values are not correct.
-Error_CantMatchUser=Unable to find username.  Please try again.
+Error_CantMatchUser=Unable to find user name.  Please try again.
 Error_ServiceNotAvailable=Service is not enabled.
 Error_UserMisMatch=Authentication error, please close your browser.
 Error_ActivateUserNoQueryMatch=Your user account is not eligible for activation.
@@ -94,7 +94,7 @@ Error_BadSession=Unable to establish a session with your browser.  Please close 
 Error_MissingRequiredResponse=Please type all of the required responses.
 Error_MissingRandomResponse=Please add an additional random response.
 Error_BadCaptchaResponse=Incorrect verification code, please try again.
-Error_CaptchaAPIError=An error occurred while validating captcha response.  Please close your browser and try again.  If this error occurs repeatedly contact your helpdesk.
+Error_CaptchaAPIError=An error occurred while validating CAPTCHA response.  Please close your browser and try again.  If this error occurs repeatedly contact your help desk.
 Error_InvalidConfig=The configuration is invalid or corrupt.  Please correct the error, or remove the configuration file.
 Error_InvalidFormID=The browser session is invalid or has expired.  Please try again.
 Error_TokenMissingContact=There is no contact information available for your account.  Please contact your administrator.
@@ -120,7 +120,7 @@ Error_InvalidSecurityKey=Security Key is missing or invalid.
 Error_Clearing_Responses=An error occurred during the clearing of the response questions.  Please contact your administrator.
 Error_ServiceUnreachable=A required service is unavailable.  Please try again later.
 Error_ChallengeInResponse=The response for question "%1%" cannot contain part of the question text.
-Error_Multi_Username=Multiple users match the given username "%1%". Please refine your search.
+Error_Multi_Username=Multiple users match the given user name "%1%". Please refine your search.
 Error_CertificateError=A certificate error has been encountered: %1%.
 Error_SyslogWriteError=A problem writing to the syslog server has been encountered, error: %1%
 Error_TooManyThreads=Maximum thread count limit exceeded, please try again later
