--- a/src/main/resources/password/pwm/i18n/Error_es.properties
+++ b/src/main/resources/password/pwm/i18n/Error_es.properties
@@ -20,7 +20,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-Password_MissingConfirm=La contrase\u00f1a cumple los requisitos. Escriba la contrase\u00f1a de confirmaci\u00f3n.
+Password_MissingConfirm=La contrase\u00f1a cumple los requisitos. Escriba la contrase\u00f1a de confirmaci\u00f3n
 Password_DoesNotMatch=Las contrase\u00f1as no coinciden
 Password_Missing=Falta la contrase\u00f1a
 Password_PreviouslyUsed=La nueva contrase\u00f1a se ha utilizado anteriormente
@@ -51,7 +51,7 @@ Password_LastIsNumeric=El \u00faltimo car\u00e1cter no debe ser num\u00e9rico
 Password_FirstIsSpecial=El primer car\u00e1cter no debe ser un car\u00e1cter de s\u00edmbolo (no alfanum\u00e9rico)
 Password_LastIsSpecial=El \u00faltimo car\u00e1cter no debe ser un car\u00e1cter de s\u00edmbolo (no alfanum\u00e9rico)
 Password_HistoryFull=El historial de nueva contrase\u00f1a est\u00e1 lleno
-Password_MeetsRules=Contrase\u00f1a nueva aceptada. Haga clic para cambiar la contrase\u00f1a.
+Password_MeetsRules=Contrase\u00f1a nueva aceptada. Haga clic en Cambiar contrase\u00f1a
 Password_TooSoon=No ha transcurrido suficiente tiempo desde el \u00faltimo cambio de contrase\u00f1a
 Password_UsingDisallowedValue=La nueva contrase\u00f1a usa un valor no permitido
 Password_TooWeak=La contrase\u00f1a es demasiado d\u00e9bil. Pruebe a a\u00f1adir m\u00e1s n\u00fameros, s\u00edmbolos o letras en may\u00fascula y min\u00fascula.
@@ -66,11 +66,11 @@ Password_NotEnoughGroups=La nueva contrase\u00f1a no tiene suficientes tipos de 
 Password_TooManyConsecutive=La nueva contrase\u00f1a tiene demasiados caracteres consecutivos (por ejemplo 123456... o abcdef...)
 
 Error_WrongResponse=Una o varias respuestas no son correctas. Int\u00e9ntelo de nuevo.
-Error_WrongPassword=El nombre de usuario o la contrase\u00f1a no es v\u00e1lido. Int\u00e9ntelo de nuevo.
+Error_WrongPassword=El nombre de usuario o la contrase\u00f1a no son v\u00e1lidos. Int\u00e9ntelo de nuevo.
 Error_Response_NoResponse=El nombre de usuario no es v\u00e1lido o no puede utilizar esta funci\u00f3n
 Error_Response_TooShort=La respuesta a la pregunta "%1%" es demasiado corta
 Error_Response_Wordlist=La respuesta a la pregunta "%1%" se utiliza con demasiada frecuencia
-Error_Response_TooLong=La respuest a la pregunta "%1%" es demasiado larga
+Error_Response_TooLong=La respuesta a la pregunta "%1%" es demasiado larga
 Error_Response_Duplicate=La respuesta a la pregunta "%1%" no puede ser igual que otra respuesta
 Error_Challenge_Duplicate=Cada pregunta debe ser exclusiva.
 Error_Missing_Challenge_Text=Falta texto de una pregunta facilitada por el usuario
@@ -81,7 +81,7 @@ Error_Unknown=Se ha producido un error. Si este error se produce de forma reiter
 Error_ActivationValidationFailed=Uno o varios valores no son correctos.
 Error_CantMatchUser=No se encuentra el nombre de usuario. Int\u00e9ntelo de nuevo.
 Error_ServiceNotAvailable=El servicio no est\u00e1 habilitado.
-Error_UserMisMatch=Error de autenticaci\u00f3n; elija el explorador.
+Error_UserMisMatch=Error de autenticaci\u00f3n; cierre el navegador.
 Error_ActivateUserNoQueryMatch=Su cuenta de usuario no cumple los requisitos para la activaci\u00f3n.
 Error_AuthenticationRequired=Se requiere autenticaci\u00f3n.
 Error_NoChallenges=No se ha configurado ninguna pregunta desaf\u00edo.
@@ -90,7 +90,7 @@ Error_AddressIntruder=Se ha superado el n\u00famero m\u00e1ximo de intentos de e
 Error_SessionIntruder=Se ha superado el n\u00famero m\u00e1ximo de intentos de entrada de esta sesi\u00f3n. Int\u00e9ntelo m\u00e1s tarde.
 Error_BadSessionPassword=No es posible establecer la contrase\u00f1a de la sesi\u00f3n.
 Error_Unauthorized=No tiene permiso para realizar la acci\u00f3n solicitada.
-Error_BadSession=No es posible establecer una sesi\u00f3n con el navegador. Cierre el navegador e int\u00e9ntelo de nuevo.
+Error_BadSession=No es posible establecer una sesi\u00f3n con el navegador. Ci\u00e9rrelo e int\u00e9ntelo de nuevo.
 Error_MissingRequiredResponse=Introduzca todas las respuestas obligatorias.
 Error_MissingRandomResponse=A\u00f1ada una respuesta aleatoria adicional.
 Error_BadCaptchaResponse=C\u00f3digo de verificaci\u00f3n incorrecto. Int\u00e9ntelo de nuevo.
@@ -99,7 +99,7 @@ Error_InvalidConfig=La configuraci\u00f3n no es v\u00e1lida o est\u00e1 da\u00f1
 Error_InvalidFormID=La sesi\u00f3n del navegador no es v\u00e1lida o ha caducado. Int\u00e9ntelo de nuevo.
 Error_TokenMissingContact=No hay informaci\u00f3n de contacto disponible para su cuenta. P\u00f3ngase en contacto con el administrador.
 Error_TokenIncorrect=C\u00f3digo incorrecto. Int\u00e9ntelo de nuevo.
-Error_BadCurrentPassword=La contrase\u00f1a actual es incorrecta; int\u00e9ntelo de nuevo.
+Error_BadCurrentPassword=La contrase\u00f1a actual es incorrecta. Int\u00e9ntelo de nuevo.
 Error_Closing=La operaci\u00f3n no puede realizarse porque la aplicaci\u00f3n se est\u00e1 cerrando.
 Error_Missing_GUID=No es posible localizar un GUID para el usuario. P\u00f3ngase en contacto con el administrador.
 Error_TokenExpired=El testigo que ha introducido ha caducado y ya no es v\u00e1lido. Int\u00e9ntelo de nuevo.
@@ -112,9 +112,9 @@ Error_Activation_Failure=Se ha producido un error al activar su cuenta. P\u00f3n
 Error_NewUser_Failure=Se ha producido un error al crear la nueva cuenta de usuario. P\u00f3ngase en contacto con el administrador.
 Error_Activation=No es posible activar su cuenta con la informaci\u00f3n que ha facilitado. Int\u00e9ntelo de nuevo.
 Error_DB_Unavailable=Base de datos no disponible. Si este error se produce de forma reiterada, p\u00f3ngase en contacto con el servicio de ayuda t\u00e9cnica.
-Error_LocalDB_Unavailable=BD local no disponible. P\u00f3ngase en contacto con su administrador.
+Error_LocalDB_Unavailable=LocalDB no disponible. P\u00f3ngase en contacto con el administrador.
 Error_App_Unavailable=La aplicaci\u00f3n no est\u00e1 disponible o se esta reiniciando. Si este error se produce de forma reiterada, p\u00f3ngase en contacto con el servicio de ayuda t\u00e9cnica.
-Error_IncorrectRequestSequence=Se ha recibido una petici\u00f3n de p\u00e1gina fuera de servicio. No utilice el bot\u00f3n Atr\u00e1s del navegador. Int\u00e9ntelo de nuevo.
+Error_IncorrectRequestSequence=Se ha recibido una petici\u00f3n de p\u00e1gina fuera de secuencia. No utilice el bot\u00f3n para volver del navegador. Int\u00e9ntelo de nuevo.
 Error_UnreachableCloudService=El servicio remoto no estaba accesible.
 Error_InvalidSecurityKey=Falta la clave de seguridad o no es v\u00e1lida.
 Error_Clearing_Responses=Se ha producido un error al borrar las preguntas de respuesta. P\u00f3ngase en contacto con el administrador.
@@ -122,8 +122,8 @@ Error_ServiceUnreachable=Un servicio necesario no est\u00e1 disponible. Int\u00e
 Error_ChallengeInResponse=La respuesta a la pregunta "%1%" no puede incluir parte del texto de la pregunta.
 Error_Multi_Username=Hay varios usuarios que coinciden con el nombre de usuario "%1%" indicado. Delimite su b\u00fasqueda.
 Error_CertificateError=Se ha encontrado un error de certificado: %1%.
-Error_SyslogWriteError=Ha ocurrido un problema al escribir en el servidor syslog, error: %1%
-Error_TooManyThreads=Se ha superado el l\u00edmite m\u00e1ximo de hilos; int\u00e9ntelo m\u00e1s tarde.
+Error_SyslogWriteError=Error al escribir en el servidor syslog, error: %1%
+Error_TooManyThreads=Se ha superado el l\u00edmite m\u00e1ximo de hilos. Int\u00e9ntelo m\u00e1s tarde.
 Error_SecurityViolation=Se ha producido una infracci\u00f3n de seguridad. Int\u00e9ntelo m\u00e1s tarde.
 Error_NoOtpConfiguration=No se ha configurado una contrase\u00f1a para una vez.
 Error_TrialViolation=Se han superado los l\u00edmites de prueba.
@@ -143,25 +143,27 @@ Error_FieldTooLong=%1% es demasiado largo
 Error_FieldDuplicate=%1% ya est\u00e1 en uso; use un valor diferente.
 Error_FieldBadConfirm=%1% campos no coinciden
 Error_FieldRegexNoMatch=%1% no tiene el formato correcto
-Error_Orig_Admin_Only=Solo el administrador original puede llevar a cabo esta propiedad
+Error_Orig_Admin_Only=Solo el administrador original puede llevar a cabo esta operaci\u00f3n
 Error_PasswordRequired=Se requiere una contrase\u00f1a para realizar esta operaci\u00f3n
 Error_ReportingError=Se ha producido un error al generar el informe
 Error_TokenDestIntruder=Se ha superado el n\u00famero m\u00e1ximo de intentos. Int\u00e9ntelo m\u00e1s tarde.
 Error_OtpRecoveryUsed=Es posible que se haya utilizado anteriormente la recuperaci\u00f3n y no se pueda volver a utilizar.
-Error_RedirectIllegal=La url de redireccionamiento solicitada no est\u00e1 permitida.
+Error_RedirectIllegal=La URL de redireccionamiento solicitada no est\u00e1 permitida.
 Error_CryptError=Se ha producido un error de cifrado inesperado.
 Error_SmsSendError=No es posible enviar mensaje sms: %1%
-Error_LdapDataError=Se ha producido un error de datos de LDAP.
-Error_MacroParseError=Error de macro an\u00e1lisis: %1%
+Error_LdapDataError=Error de datos de LDAP.
+Error_MacroParseError=Error al analizar macro: %1%
 Error_NoProfileAssigned=No se ha asignado un perfil para esta operaci\u00f3n.
-Error_StartupError=Se ha producido un error al iniciar la aplicaci\u00f3n. Consulte los archivos de registro para ver m\u00e1s informaci\u00f3n.
+Error_StartupError=Error al iniciar la aplicaci\u00f3n. Consulte los archivos de registro para ver m\u00e1s informaci\u00f3n.
+Error_EnvironmentError=Un error en el entorno de la aplicaci\u00f3n ha impedido que la aplicaci\u00f3n se inicie.
+Error_ApplicationNotRunning=Esta funcionalidad no estar\u00e1 disponible hasta que se limite la configuraci\u00f3n de la aplicaci\u00f3n.
 
 Error_RemoteErrorValue=Error remoto: %1%
 
 Error_ConfigUploadSuccess=Archivo cargado correctamente
 Error_ConfigUploadFailure=Error al cargar el archivo.
 Error_ConfigSaveSuccess=La configuraci\u00f3n se guard\u00f3 correctamente. Se ha solicitado el reinicio de la aplicaci\u00f3n. Es posible que la aplicaci\u00f3n no est\u00e9 disponible mientras se reinicia. Si la petici\u00f3n de reinicio falla, puede que sea necesario reiniciar manualmente el servidor de aplicaciones.
-Error_ConfigFormatError=Error de formato de configuraci\u00f3n:  %1%
+Error_ConfigFormatError=Error de formato de configuraci\u00f3n: %1%
 Error_ConfigLdapFailure=No es posible la conexi\u00f3n con el servidor de directorio LDAP.
 Error_ConfigLdapSuccess=Se ha establecido correctamente la conexi\u00f3n al servidor de directorio LDAP
 
