--- a/src/main/resources/password/pwm/i18n/Error_it.properties
+++ b/src/main/resources/password/pwm/i18n/Error_it.properties
@@ -20,106 +20,151 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-Password_MissingConfirm=La password soddisfa i requisiti, inserirla di nuovo per conferma
+Password_MissingConfirm=La password soddisfa i requisiti. Inserirla di nuovo per conferma
 Password_DoesNotMatch=Le password non corrispondono
 Password_Missing=Password mancante
 Password_PreviouslyUsed=La nuova password \u00e8 gi\u00e0 stata usata
-Password_BadPassword=La password non soddisfa i requisiti delle regole
-# Password_BadOldPassword=La vecchia password non \u00e8 corretta
+Password_BadPassword=La nuova password non soddisfa i requisiti
 Password_TooLong=La nuova password \u00e8 troppo lunga
-Password_TooShort=La nuova password \u00e8 troppo corta
-Password_NotEnoughNum=I numeri nella nuova password non sono sufficienti
-Password_NotEnoughAlpha=Le lettere nella nuova password non sono sufficienti
-Password_NotEnoughUpper=Le lettere maiuscole nella nuova password non sono sufficienti
-Password_NotEnoughLower=Le lettere minuscole nella nuova password non sono sufficienti
-Password_NotEnoughSpecial=I simboli (caratteri non alfanumerici) nella nuova password non sono sufficienti
-Password_NotEnoughUnique=I caratteri unici nella nuova password non sono sufficienti
-Password_TooManyRepeat=La nuova password contiene troppi caratteri che si ripetono
+Password_TooShort=La nuova password \u00e8 troppo breve
+Password_NotEnoughNum=I numeri della nuova password non sono sufficienti
+Password_NotEnoughAlpha=Le lettere della nuova password non sono sufficienti
+Password_NotEnoughUpper=Le lettere maiuscole della nuova password non sono sufficienti
+Password_NotEnoughLower=Le lettere minuscole della nuova password non sono sufficienti
+Password_NotEnoughSpecial=I simboli (caratteri non alfanumerici) della nuova password non sono sufficienti
+Password_NotEnoughUnique=I caratteri univoci della nuova password non sono sufficienti
+Password_TooManyRepeat=La nuova password contiene troppi caratteri ripetuti
 Password_TooManySpecial=La nuova password contiene troppi caratteri speciali (caratteri non alfanumerici)
 Password_TooManyAlpha=La nuova password contiene troppe lettere
 Password_TooManyNumeric=La nuova password contiene troppi numeri
 Password_TooManyLower=La nuova password contiene troppe lettere minuscole
 Password_TooManyUpper=La nuova password contiene troppe lettere maiuscole
-Password_TooManyOldChars=La nuova password contiene troppi vecchi caratteri
+Password_TooManyOldChars=La nuova password contiene troppi caratteri della password precedente
 Password_TooManyNonAlphaSpecial=La nuova password contiene troppi simboli (caratteri non alfanumerici)
-Password_InvalidChar=La nuova password contiene caratteri non validi
-Password_RequiredMissing=Un carattere nella nuova password risulta mancante
-Password_InWordlist=La nuova password \u00e8 troppo ovvia
-Password_SameAsOld=La nuova password \u00e8 uguale alla vecchia
+Password_InvalidChar=La nuova password contiene un carattere non valido
+Password_RequiredMissing=Nella nuova password manca uno dei caratteri obbligatori
+Password_InWordlist=La nuova password \u00e8 troppo comune
+Password_SameAsOld=La nuova password \u00e8 uguale a quella attuale
 Password_SameAsAttr=La nuova password \u00e8 troppo ovvia
-Password_FirstIsNumeric=Il primo carattere deve essere numerico
-Password_LastIsNumeric=L'ultimo carattere deve essere numerico
-Password_FirstIsSpecial=Il primo carattere non deve essere un simbolo (carattere non alfanumerico)
-Password_LastIsSpecial=L'ultimo carattere non deve essere un simbolo (carattere non alfanumerico)
-Password_HistoryFull=L'elenco delle password gi\u00e0 usate \u00e8 pieno
-Password_MeetsRules=La nuova password soddisfa i requisiti imposti dalle regole
-Password_TooSoon=Non \u00e8 passato abbastanza tempo dall'ultimo cambio password
-Password_UsingDisallowedValue=La nuova password contiene un valore non permesso
-Password_TooWeak=La password \u00e8 troppo semplice. Provare ad aggiungere pi\u00f9 numeri, simboli o lettere maiuscole e minuscole mescolate
+Password_FirstIsNumeric=Il primo carattere non deve essere numerico
+Password_LastIsNumeric=L'ultimo carattere non deve essere numerico
+Password_FirstIsSpecial=Il primo carattere non deve essere un simbolo (caratteri non alfanumerici)
+Password_LastIsSpecial=L'ultimo carattere non deve essere un simbolo (caratteri non alfanumerici)
+Password_HistoryFull=La cronologia della nuova password \u00e8 piena
+Password_MeetsRules=Nuova password accettata. Fare clic su Modifica password
+Password_TooSoon=Non \u00e8 trascorso un tempo sufficiente dall'ultima modifica della password
+Password_UsingDisallowedValue=La nuova password contiene un valore non consentito
+Password_TooWeak=La password \u00e8 troppo semplice. Provare ad aggiungere pi\u00f9 numeri, simboli o lettere maiuscole e minuscole mescolate.
 Password_TooManyNonAlpha=La nuova password contiene troppi caratteri non alfabetici
-Password_NotEnoughNonAlpha=La nuova password non contiene abbastanza caratteri non alfabetici
-Password_UnknownValidation=La nuova password non soddisfa i requisiti imposti dalla regole. Provare con una password diversa
+Password_NotEnoughNonAlpha=I caratteri non alfabetici della nuova password non sono sufficienti
+Password_UnknownValidation=La nuova password non soddisfa i requisiti. Provare a utilizzare una password diversa.
+Password_NewPasswordRequired=Per continuare \u00e8 necessario specificare una nuova password.
+Password_Expired=La password \u00e8 scaduta.
+Password_CustomError=La nuova password non soddisfa i requisiti
+Password_BadOldPassword=La vecchia password \u00e8 errata
+Password_NotEnoughGroups=I tipi di caratteri della nuova password non sono sufficienti
+Password_TooManyConsecutive=La nuova password contiene troppi caratteri consecutivi (ad es. 123456\u2026 o abcdef\u2026)
 
-Error_WrongResponse=La risposta non \u00e8 corretta
-Error_WrongPassword=Password o nome utente non valido
-Error_Response_NoResponse=Il nome utente non \u00e8 valido e non \u00e8 stato configurato alcun suggerimento
-Error_Response_TooShort=La risposta alla domanda "%1%" \u00e8 troppo corta
-Error_Response_Wordlist=La risposta alla domanda "%1%" \u00e8 troppo semplice da indovinare
+Error_WrongResponse=Una o pi\u00f9 risposte sono errate. Riprovare.
+Error_WrongPassword=Password o nome utente non valido. Riprovare.
+Error_Response_NoResponse=Il nome utente non \u00e8 valido o non \u00e8 idoneo per l'utilizzo di questa funzione
+Error_Response_TooShort=La risposta alla domanda "%1%" \u00e8 troppo breve
+Error_Response_Wordlist=La risposta alla domanda "%1%" \u00e8 di uso troppo comune
 Error_Response_TooLong=La risposta alla domanda "%1%" \u00e8 troppo lunga
-Error_Response_Duplicate=La risposta alla domanda "%1%" non pu\u00f2 essere uguale ad un'altra risposta
-Error_Challenge_Duplicate=Non si pu\u00f2 la stessa domanda due volte
-Error_Missing_Challenge_Text=Manca del testo per una domanda a piacere
-Error_UserAuthenticated=Questo utente \u00e8 gi\u00e0 stato autenticato
-Error_MissingParameter=Un parametro necessario \u00e8 mancante
-Error_DirectoryUnavailable=Directory non disponibile
-Error_Unknown=Errore sconosciuto
-Error_ActivationValidationFailed=Valore errato per questo campo
-Error_CantMatchUser=Nome utente non trovato
-Error_ServiceNotAvailable=Servizio non abilitato
-Error_UserMisMatch=Errore di autenticazione. Chiudere la finestra del browser
-Error_ActivateUserNoQueryMatch=L'account utente non \u00e8 idoneo per l'attivazione
-Error_AuthenticationRequired=Autenticazione necessaria
-Error_NoChallenges=Non sono state configurate le richieste di autorizzazione
-Error_UserIntruder=\u00c8 stato superato il numero massimo di tentativi di apertura sessione per l'ID utente immesso.  Riprovare pi\u00f9 tardi.
-Error_AddressIntruder=\u00c8 stato superato il numero massimo di tentativi per l'indirizzo IP.  Riprovare pi\u00f9 tardi.
-Error_SessionIntruder=\u00c8 stato superato il numero massimo di tentativi per questa sessione.
+Error_Response_Duplicate=La risposta alla domanda "%1%" non pu\u00f2 essere uguale a un'altra risposta
+Error_Challenge_Duplicate=Ogni domanda deve essere univoca.
+Error_Missing_Challenge_Text=Testo mancante per una domanda fornita dall'utente
+Error_UserAuthenticated=Utente gi\u00e0 autenticato.
+Error_MissingParameter=Manca un parametro obbligatorio.
+Error_DirectoryUnavailable=Directory non disponibile. Se l'errore si ripete pi\u00f9 volte, contattare l'help desk.
+Error_Unknown=Si \u00e8 verificato un errore. Se l'errore si ripete pi\u00f9 volte, contattare l'help desk.
+Error_ActivationValidationFailed=Uno o pi\u00f9 valori non sono corretti.
+Error_CantMatchUser=Nome utente non trovato. Riprovare.
+Error_ServiceNotAvailable=Servizio non abilitato.
+Error_UserMisMatch=Errore di autenticazione. Chiudere il browser.
+Error_ActivateUserNoQueryMatch=L'account utente non \u00e8 idoneo per l'attivazione.
+Error_AuthenticationRequired=Autenticazione necessaria.
+Error_NoChallenges=Non \u00e8 stata configurata alcuna domanda di autenticazione.
+Error_UserIntruder=\u00c8 stato superato il numero massimo di tentativi di login per l'ID utente. Riprovare pi\u00f9 tardi.
+Error_AddressIntruder=\u00c8 stato superato il numero massimo di tentativi di login. Riprovare pi\u00f9 tardi.
+Error_SessionIntruder=\u00c8 stato superato il numero massimo di tentativi di login per questa sessione. Riprovare pi\u00f9 tardi.
 Error_BadSessionPassword=Impossibile determinare la password della sessione.
-Error_Unauthorized=Lei non dispone dei diritti necessari a completare l'operazione richiesta.
-Error_BadSession=Impossibile aprire una sessione con il suo browser. Chiudere il browser e riprovare.
-Error_MissingRequiredResponse=Completare tutte le risposte.
-Error_MissingRandomResponse=Completare tutte le risposte.
-Error_BadCaptchaResponse=Codice di sicurezza errato, riprovare.
-Error_CaptchaAPIError=Si \u00e8 verificato un errore validando il codice di sicurezza. Chiudere il browser e riprovare. Se questo errore continua a ripetersi, contattare l'assistenza clienti.
-Error_InvalidConfig=La configurazione di PWM \u00e8 assente o errata. Controllare il log degli errori.
-Error_InvalidFormID=La sessione di navigazione \u00e8 invalida o scaduta. Chiudere il browser e riprovare.
-Error_TokenMissingContact=Non ci sono informazioni di contatto per il suo utente. Contattare l'amministratore di sistema.
-Error_TokenIncorrect=Codice sbagliato, riprovare.
-Error_BadCurrentPassword=La password corrente \u00e8 sbagliata, riprovare.
-Error_Closing=L'operazione non pu\u00f2 essere completata, il sistema si sta chiudendo.
-Error_Missing_GUID=Impossibile individuare un GUID per l'account utente. Contattare l'amministratore di sistema.
-Error_TokenExpired=Il codice inserito non \u00e8 pi\u00f9 valido. Contattare l'amministratore di sistema.
-Error_SecureRequestRequired=Non sono permesse connessioni a questo sistema non sicure (HTTP). Riprovare usando una connessione sicura (HTTPS).
-Error_Writing_Responses=Si \u00e8 verificato un errore durante il salvataggio delle risposte. Contattare l'amministratore di sistema.
-Error_Unlock_Failure=Si \u00e8 verificato un errore sbloccando il vostro utente. Contattare l'amministratore di sistema.
-Error_Update_Attrs_Failure=Si \u00e8 verificato un errore salvando le vostre informazioni di profilo. Contattare l'amministratore di sistema.
-Error_Activation_Failure=Si \u00e8 verificato un errore attivando il vostro utente. Contattare l'amministratore di sistema.
-Error_NewUser_Failure=Si \u00e8 verificato un errore creando il vostro nuovo utente. Contattare l'amministratore di sistema.
-Error_Activation=Impossibile attivare il vostro utente usando le informazioni fornite. Riprovare.
-Error_DB_Unavailable=Database non disponibile. Se questo errore continua a ripetersi, contattare l'assistenza clienti.
-
+Error_Unauthorized=Non si dispone dell'autorizzazione necessaria per eseguire l'azione richiesta.
+Error_BadSession=Impossibile aprire una sessione nel browser. Chiudere il browser e riprovare.
+Error_MissingRequiredResponse=Digitare tutte le risposte richieste.
+Error_MissingRandomResponse=Aggiungere una domanda/risposta casuale.
+Error_BadCaptchaResponse=Codice di verifica errato. Riprovare.
+Error_CaptchaAPIError=Errore durante la convalida della risposta CAPTCHA. Chiudere il browser e riprovare. Se l'errore si ripete pi\u00f9 volte, contattare l'help desk.
+Error_InvalidConfig=La configurazione non \u00e8 valida o \u00e8 danneggiata. Correggere l'errore o rimuovere il file di configurazione.
+Error_InvalidFormID=La sessione del browser non \u00e8 valida o \u00e8 scaduta. Riprovare.
+Error_TokenMissingContact=L'account dell'utente non contiene informazioni di contatto. Contattare l'amministratore.
+Error_TokenIncorrect=Codice errato. Riprovare.
+Error_BadCurrentPassword=La password attuale \u00e8 errata. Riprovare.
+Error_Closing=L'operazione non pu\u00f2 essere eseguita perch\u00e9 \u00e8 in corso la chiusura dell'applicazione.
+Error_Missing_GUID=Impossibile individuare un GUID per l'utente. Contattare l'amministratore.
+Error_TokenExpired=Il token immesso \u00e8 scaduto e non \u00e8 pi\u00f9 valido. Riprovare.
+Error_SecureRequestRequired=Non \u00e8 possibile eseguire connessioni non sicure (HTTP) a questo sistema. Riprovare usando una connessione sicura (HTTPS).
+Error_Writing_Responses=Errore nel salvataggio delle domande/risposte di autenticazione. Contattare l'amministratore.
+Error_Writing_Otp_Secret=Errore nel salvataggio del segreto OTP. Contattare l'amministratore.
+Error_Unlock_Failure=Errore nello sblocco dell'account. Contattare l'amministratore.
+Error_Update_Attrs_Failure=Errore nel salvataggio delle informazioni del profilo. Contattare l'amministratore.
+Error_Activation_Failure=Errore nell'attivazione dell'account. Contattare l'amministratore.
+Error_NewUser_Failure=Errore nella creazione del nuovo account utente. Contattare l'amministratore.
+Error_Activation=Impossibile attivare l'account con le informazioni fornite. Riprovare.
+Error_DB_Unavailable=Database non disponibile. Se l'errore si ripete pi\u00f9 volte, contattare l'help desk.
+Error_LocalDB_Unavailable=LocalDB non disponibile. Contattare l'amministratore.
+Error_App_Unavailable=L'applicazione non \u00e8 disponibile o \u00e8 in corso il riavvio. Se l'errore si ripete pi\u00f9 volte, contattare l'help desk.
+Error_IncorrectRequestSequence=Richiesta delle pagine non ricevuta nell'ordine previsto. Non utilizzare il pulsante Indietro del browser. Riprovare.
+Error_UnreachableCloudService=Uno dei servizi remoti non \u00e8 raggiungibile.
+Error_InvalidSecurityKey=Chiave di sicurezza mancante o non valida.
+Error_Clearing_Responses=Errore nell'eliminazione delle domande/risposte di autenticazione. Contattare l'amministratore.
+Error_ServiceUnreachable=Uno dei servizi richiesti non \u00e8 disponibile. Riprovare pi\u00f9 tardi.
+Error_ChallengeInResponse=La risposta alla domanda "%1%" non pu\u00f2 contenere parte del testo della domanda stessa.
+Error_Multi_Username=Al nome utente "%1%" corrispondono pi\u00f9 utenti. Restringere la ricerca.
+Error_CertificateError=Si \u00e8 verificato un errore di certificato: %1%.
+Error_SyslogWriteError=Problema durante la scrittura nel server Syslog. Errore: %1%
+Error_TooManyThreads=\u00c8 stato superato il limite massimo di thread. Riprovare pi\u00f9 tardi
+Error_SecurityViolation=Si \u00e8 verificata una violazione di sicurezza. Riprovare pi\u00f9 tardi.
+Error_NoOtpConfiguration=Non \u00e8 stata configurata alcuna OTP.
+Error_TrialViolation=Limite della versione di prova superati.
+Error_AccountDisabled=L'account \u00e8 disabilitato.
+Error_AccountExpired=L'account \u00e8 scaduto.
+Error_WrongOtpToken=OTP errata.
+Error_AttrIntruder=\u00c8 stato superato il numero massimo di tentativi di ricerca. Riprovare pi\u00f9 tardi.
+Error_AuditWrite=Impossibile scrivere il record di controllo.
+Error_LdapIntruder=\u00c8 stato superato il numero massimo di tentativi di login per l'ID utente. Riprovare pi\u00f9 tardi.
+Error_NoLdapConnection=Non \u00e8 disponibile una connessione alla directory richiesta.
+Error_OAuthError=Errore durante l'uso del protocollo di autenticazione OAuth. Riprovare pi\u00f9 tardi.
 Error_FieldRequired=%1% \u00e8 obbligatorio
 Error_FieldNotANumber=%1% deve essere un numero
 Error_FieldInvalidEmail=%1% non \u00e8 un indirizzo e-mail valido
 Error_FieldTooShort=%1% \u00e8 troppo breve
-Error_FieldTooLong=%1% \u00e8 troppo lungo
-Error_FieldDuplicate=%1% \u00e8 gi\u00e0 in uso
+Error_FieldTooLong=%1% \u00e8 troppo lunga
+Error_FieldDuplicate=%1% \u00e8 gi\u00e0 in uso. Utilizzare un valore diverso
 Error_FieldBadConfirm=I campi %1% non corrispondono
+Error_FieldRegexNoMatch=%1% non \u00e8 il formato corretto
+Error_Orig_Admin_Only=Questa operazione pu\u00f2 essere eseguita solo dall'amministratore originario
+Error_PasswordRequired=Per eseguire questa operazione \u00e8 necessaria una password
+Error_ReportingError=Errore nella generazione del rapporto
+Error_TokenDestIntruder=\u00c8 stato superato il numero massimo di tentativi. Riprovare pi\u00f9 tardi.
+Error_OtpRecoveryUsed=\u00c8 possibile che il recupero sia gi\u00e0 stato usato e non pu\u00f2 essere pi\u00f9 utilizzato.
+Error_RedirectIllegal=L'URL di ridirezionamento non \u00e8 consentito.
+Error_CryptError=Si \u00e8 verificato un errore imprevisto di cifratura.
+Error_SmsSendError=Impossibile inviare l'SMS: %1%
+Error_LdapDataError=Si \u00e8 verificato un errore dati LDAP.
+Error_MacroParseError=Errore di analisi sintattica macro: %1%
+Error_NoProfileAssigned=Nessun profilo assegnato all'operazione.
+Error_StartupError=Errore nell'avvio dell'applicazione. Per informazioni, vedere i file di log.
+Error_EnvironmentError=Errore nell'ambiente applicativo che ha impedito l'avvio dell'applicazione.
+Error_ApplicationNotRunning=La funzionalit\u00e0 non \u00e8 disponibile poich\u00e9 la configurazione dell'applicazione \u00e8 soggetta a restrizioni.
 
-Error_ConfigUploadSuccess=File caricato con successo
-Error_ConfigUploadFailure=\u00c8 fallito il caricamento del file: %1%
-Error_ConfigSaveSuccess=Configurazione salvata con successo. Il riavvio di PWM \u00e8 stato avviato. PWM potrebbe non essere disponibile durante il riavvio. Se il riavvio fallisce potrebbe essere necessario riavviare PWM manualmente.
-Error_ConfigFormatError=Errore nella sintassi della configurazione: %1%
-Error_ConfigLdapFailure=Impossibile collegarsi al directory LDAP: %1%
-Error_ConfigLdapSuccess=Connesso con successo al directory LDAP
+Error_RemoteErrorValue=Errore remoto: %1%
 
-Error_HTTP_404=La pagina richiesta non esiste.
+Error_ConfigUploadSuccess=Upload del file completato
+Error_ConfigUploadFailure=Upload del file non riuscito.
+Error_ConfigSaveSuccess=Salvataggio della configurazione eseguito. \u00c8 stato richiesto il riavvio dell'applicazione, la quale potrebbe non essere disponibile durante tale operazione. Se la richiesta di riavvio ha esito negativo, potrebbe essere necessario riavviare manualmente il server per applicazioni.
+Error_ConfigFormatError=Errore di formato nella configurazione: %1%
+Error_ConfigLdapFailure=Impossibile eseguire la connessione al server di directory LDAP.
+Error_ConfigLdapSuccess=Connessione eseguita al server di directory LDAP
+
+Error_HTTP_404=Impossibile trovare la pagina richiesta.
