--- a/src/main/resources/password/pwm/i18n/Message_de.properties
+++ b/src/main/resources/password/pwm/i18n/Message_de.properties
@@ -33,14 +33,19 @@ EventLog_ChangePassword=Passwort \u00e4ndern
 EventLog_UnlockPassword=Passwort entsperren
 EventLog_CreateUser=Konto erstellen
 EventLog_HelpdeskAction=Helpdesk-Aktion
-EventLog_HelpdeskClearResponses=Helpdesk, Antworten l\u00f6schen
-EventLog_HelpdeskClearOtpSecret=Helpdesk, OTP-Geheimnis l\u00f6schen
-EventLog_HelpdeskSetPassword=Helpdesk, Passwort festlegen
-EventLog_HelpdeskUnlockPassword=Helpdesk, Passwort entsperren
+EventLog_HelpdeskClearResponses=Helpdesk - Antworten l\u00f6schen
+EventLog_HelpdeskClearOtpSecret=Helpdesk - OTP-Geheimnis l\u00f6schen
+EventLog_HelpdeskSetPassword=Helpdesk - Passwort festlegen
+EventLog_HelpdeskUnlockPassword=Helpdesk - Passwort entsperren
 EventLog_HelpdeskDeleteUser=Helpdesk - Benutzer l\u00f6schen
 EventLog_HelpdeskViewDetail=Helpdesk - Detail anzeigen
-EventLog_HelpdeskVerifyOtp=Helpdesk - OTP best\u00e4tigen
-EventLog_IntruderUser=Unbefugtensperre
+EventLog_HelpdeskVerifyOtp=Helpdesk - Einmalpasswort \u00fcberpr\u00fcfen
+EventLog_HelpdeskVerifyOtpIncorrect=Helpdesk - falsches Einmalpasswort - \u00fcberpr\u00fcfen
+EventLog_HelpdeskVerifyToken=Helpdesk - Token \u00fcberpr\u00fcfen
+EventLog_HelpdeskVerifyTokenIncorrect=Helpdesk - falsches Token - \u00fcberpr\u00fcfen
+EventLog_HelpdeskVerifyAttributes=Helpdesk - Attribute \u00fcberpr\u00fcfen
+EventLog_HelpdeskVerifyAttributesIncorrect=Helpdesk - falsche Attribute - \u00fcberpr\u00fcfen
+EventLog_IntruderUserLock=Unbefugter Benutzer - Sperre
 EventLog_TokenIssued=Token ausgestellt
 EventLog_TokenClaimed=Token beansprucht
 EventLog_ClearResponses=Antworten l\u00f6schen
@@ -52,13 +57,13 @@ Requirement_ADComplexity=Muss mindestens drei der folgenden Zeichenarten enthalt
 Requirement_ADComplexity2008=Muss mindestens %1% der folgenden Zeichenarten enthalten: <ul><li>Gro\u00dfbuchstaben (A-Z)</li><li>Kleinbuchstaben (a-z)</li><li>Zahlen (0-9)</li><li>Symbole (!, #, $ usw.)</li><li>Sonstige Sprachzeichen, die nicht oben aufgef\u00fchrt sind</li></ul>
 Requirement_AllowNumeric=Darf kein numerisches Zeichen enthalten.
 Requirement_AllowSpecial=Darf keine Symbolzeichen (nicht alphanumerische Zeichen) enthalten.
-Requirement_CaseSensitive=Die Gro\u00df- und Kleinschreibung des Passworts muss ber\u00fccksichtigt werden.
+Requirement_CaseSensitive=Die Gro\u00df- und Kleinschreibung des Passworts muss beachtet werden.
 Requirement_DisAllowedAttributes=Darf keinen Teil Ihres Namens oder Benutzernamens enthalten.
 Requirement_DisAllowedValues=Darf keinen der folgenden Werte enthalten: %1%
 Requirement_FirstNumeric=Das erste Zeichen darf keine Zahl sein.
-Requirement_FirstSpecial=Das erste Zeichen darf kein Symbol (nicht alphanumerisches Zeichen) sein.
+Requirement_FirstSpecial=Das erste Zeichen darf kein Symbol (nicht-alphanumerisches Zeichen) sein.
 Requirement_LastNumeric=Das letzte Zeichen darf keine Zahl sein.
-Requirement_LastSpecial=Das letzte Zeichen darf kein Symbol (nicht alphanumerisches Zeichen) sein.
+Requirement_LastSpecial=Das letzte Zeichen darf kein Symbol (nicht-alphanumerisches Zeichen) sein.
 Requirement_MaxAlpha=Darf h\u00f6chstens %1% Buchstaben enthalten.
 Requirement_MaxAlphaPlural=Darf h\u00f6chstens %1% Buchstaben enthalten.
 Requirement_MaxLength=Darf h\u00f6chstens %1% Zeichen lang sein.
@@ -91,14 +96,14 @@ Requirement_MinUniquePlural=Muss mindestens %1% eindeutige Zeichen enthalten.
 Requirement_MinUpper=Muss mindestens %1% Gro\u00dfbuchstaben enthalten.
 Requirement_MinUpperPlural=Muss mindestens %1% Gro\u00dfbuchstaben enthalten.
 Requirement_NotCaseSensitive=Die Gro\u00df- und Kleinschreibung des Passworts muss nicht beachtet werden.
-Requirement_OldChar=Darf h\u00f6chstens %1% Zeichen vom aktuellen Passwort enthalten.
-Requirement_OldCharPlural=Darf h\u00f6chstens %1% Zeichen vom aktuellen Passwort enthalten.
+Requirement_OldChar=Darf h\u00f6chstens %1% Zeichen des aktuellen Passworts enthalten.
+Requirement_OldCharPlural=Darf h\u00f6chstens %1% Zeichen des aktuellen Passworts enthalten.
 Requirement_RequiredChars=Muss mindestens jeweils eines der folgenden Zeichen enthalten:
 Requirement_UniqueRequired=Das neue Passwort darf nicht zuvor verwendet worden sein.
 Requirement_WordList=Darf kein h\u00e4ufiges Wort und keine h\u00e4ufig verwendete Zeichenfolge enthalten.
 Rule_PolicyEnabled=Richtlinie aktiviert
 Rule_MinimumLength=Mindestl\u00e4nge
-Rule_MaximumLength=Maximale L\u00e4nge
+Rule_MaximumLength=H\u00f6chstl\u00e4nge
 Rule_MinimumUpperCase=Mindestanzahl Gro\u00dfbuchstaben
 Rule_MaximumUpperCase=H\u00f6chstanzahl Gro\u00dfbuchstaben
 Rule_MinimumLowerCase=Mindestanzahl Kleinbuchstaben
@@ -116,13 +121,13 @@ Rule_MaximumSpecial=H\u00f6chstanzahl Sonderzeichen
 Rule_AllowFirstCharSpecial=Sonderzeichen als erstes Zeichen zulassen
 Rule_AllowLastCharSpecial=Sonderzeichen als letztes Zeichen zulassen
 Rule_MaximumRepeat=H\u00f6chstanzahl wiederholte Zeichen
-Rule_MaximumSequentialRepeat=H\u00f6chstanzahl aufeinanderfolgende Zeichen
+Rule_MaximumSequentialRepeat=H\u00f6chstanzahl hintereinander wiederholte Zeichen
 Rule_ChangeMessage=Nachricht \u00e4ndern
 Rule_ExpirationInterval=Intervall f\u00fcr das Ablaufdatum
 Rule_MinimumLifetime=Mindestlebensdauer
 Rule_CaseSensitive=Gro\u00df-/Kleinschreibung beachten
 Rule_EnforceAtLogin=Bei Anmeldung erzwingen
-Rule_ChallengeResponseEnabled=Sicherheitsantwort aktiviert
+Rule_ChallengeResponseEnabled=Sicherheitsabfrage aktiviert
 Rule_UniqueRequired=Muss eindeutig sein
 Rule_DisallowedValues=Nicht zugelassene Werte
 Rule_DisallowedAttributes=Nicht zugelassene Attribute
@@ -146,18 +151,18 @@ Rule_ADComplexityLevel=AD-Komplexit\u00e4tsgrad
 Rule_ADComplexityMaxViolations=H\u00f6chstanzahl der Verletzungen der AD-Komplexit\u00e4t
 Success_ActivateUser=Das Benutzerkonto wurde erfolgreich aktiviert. Schlie\u00dfen Sie diesen Vorgang vollst\u00e4ndig ab, damit Sie auf das Konto zugreifen k\u00f6nnen.
 Success_ConfigFileUpload=Die Konfigurationsdatei wurde erfolgreich heraufgeladen.
-Success_ClearResponse=Die Geheimnisfragen und -antworten wurden erfolgreich entfernt.
-Success_CreateGuest=Das neue Gastkonto wurde erfolgreich erstellt. Der Gastbenutzer erh\u00e4lt eine Benachrichtigung, wenn eine Email-Adresse eingegeben wurde. Das Gastkonto muss m\u00f6glicherweise noch aktiviert werden.
+Success_ClearResponse=Die Sicherheitsfragen und -antworten wurden erfolgreich entfernt.
+Success_CreateGuest=Das neue Gastkonto wurde erfolgreich erstellt. Wenn eine Email-Adresse eingegeben wurde, erh\u00e4lt der Gastbenutzer eine entsprechende Benachrichtigung. Das Gastkonto muss m\u00f6glicherweise noch aktiviert werden.
 Success_CreateUser=Das neue Benutzerkonto wurde erfolgreich erstellt.
 Success_NewUserForm=Das Konto ist bereit zur Erstellung. Fahren Sie fort, wenn Sie bereit sind.
-Success_PasswordChange=Ihr Passwort wurde erfolgreich ge\u00e4ndert.
+Success_PasswordChange=Das Passwort wurde erfolgreich ge\u00e4ndert.
 Success_PasswordReset=Passwort f\u00fcr %1% wurde erfolgreich festgelegt.
 Success_PasswordSend=Das neue Passwort wurde an %1% gesendet. Schlie\u00dfen Sie dieses Fenster und melden Sie sich dann mit dem neuen Passwort an.
 Success_ResponsesMeetRules=Die Antworten erf\u00fcllen die Anforderungen. Klicken Sie auf 'Antworten speichern', wenn Sie bereit sind.
-Success_SetupResponse=Vielen Dank. Die Geheimnisfragen und -antworten wurden erfolgreich gespeichert. Falls Sie Ihr Passwort vergessen, k\u00f6nnen Sie es anhand der Antworten auf diese Fragen zur\u00fccksetzen.
+Success_SetupResponse=Vielen Dank. Die Sicherheitsfragen und Antworten wurden erfolgreich gespeichert. Falls Sie Ihr Passwort vergessen, k\u00f6nnen Sie es anhand der Antworten auf diese Fragen zur\u00fccksetzen.
 Success_Unknown=Der Vorgang wurde erfolgreich abgeschlossen.
 Success_UnlockAccount=Das Konto wurde entsperrt.
-Success_UpdateGuest=Das Gastkonto wurde erfolgreich aktualisiert. Der Gastbenutzer erh\u00e4lt eine Benachrichtigung, wenn eine Email-Adresse eingegeben wurde.
+Success_UpdateGuest=Das Gastkonto wurde erfolgreich aktualisiert. Wenn eine Email-Adresse eingegeben wurde, erh\u00e4lt der Gastbenutzer eine entsprechende Benachrichtigung.
 Success_UpdateProfile=Die Benutzerinformationen wurden erfolgreich aktualisiert.
 Success_UpdateForm=Das Profil ist nun bereit zur Aktualisierung. Fahren Sie fort, wenn Sie bereit sind.
 Success_Action=Die Aktion %1% wurde erfolgreich abgeschlossen.
