--- a/src/main/resources/password/pwm/i18n/Message_es.properties
+++ b/src/main/resources/password/pwm/i18n/Message_es.properties
@@ -25,21 +25,26 @@ EventLog_Shutdown=Cierre de la aplicaci\u00f3n
 EventLog_FatalEvent=Evento irrecuperable
 EventLog_ModifyConfiguration=Configuraci\u00f3n modificada
 EventLog_IntruderAttempt=Intento de intrusi\u00f3n
-EventLog_IntruderLockout=Bloqueo de intruso
+EventLog_IntruderLockout=Bloqueo de intrusos
 EventLog_ActivateUser=Activar cuenta
 EventLog_Authenticate=Autenticaci\u00f3n
 EventLog_AgreementPassed=Acuerdo aprobado
 EventLog_ChangePassword=Cambiar contrase\u00f1a
 EventLog_UnlockPassword=Desbloquear contrase\u00f1a
 EventLog_CreateUser=Crear cuenta
-EventLog_HelpdeskAction=Acci\u00f3n del Servicio de ayuda t\u00e9cnica
-EventLog_HelpdeskClearResponses=Respuestas borradas por el Servicio de ayuda t\u00e9cnica
-EventLog_HelpdeskClearOtpSecret=Eliminar secreto de contrase\u00f1a para una vez mediante el Servicio de ayuda t\u00e9cnica
-EventLog_HelpdeskSetPassword=Establecer contrase\u00f1a con el Servicio de ayuda t\u00e9cnica
-EventLog_HelpdeskUnlockPassword=Desbloquear contrase\u00f1a con el Servicio de ayuda t\u00e9cnica
-EventLog_HelpdeskDeleteUser=Suprimir usuario de servicio de ayuda t\u00e9cnica
-EventLog_HelpdeskViewDetail=Detalle de la vista de la l\u00ednea de asistencia
-EventLog_HelpdeskVerifyOtp=Verificar contrase\u00f1a para una vez con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskAction=Acci\u00f3n del servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskClearResponses=Borrar respuestas con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskClearOtpSecret=Borrar secreto de OTP con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskSetPassword=Establecer contrase\u00f1a con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskUnlockPassword=Desbloquear contrase\u00f1a con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskDeleteUser=Suprimir usuario con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskViewDetail=Detalle de la vista del servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskVerifyOtp=Verificar OTP con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskVerifyOtpIncorrect=Verificaci\u00f3n de OTP incorrecta con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskVerifyToken=Verificar testigo con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskVerifyTokenIncorrect=Verificaci\u00f3n de testigo incorrecto con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskVerifyAttributes=Verificaci\u00f3n de atributos con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskVerifyAttributesIncorrect=Verificaci\u00f3n de atributos incorrectos con el servicio de ayuda t\u00e9cnica
 EventLog_IntruderUserLock=Bloqueo de usuario intruso
 EventLog_TokenIssued=Se emiti\u00f3 un testigo
 EventLog_TokenClaimed=Se reclam\u00f3 un testigo
@@ -48,12 +53,12 @@ EventLog_RecoverPassword=Recuperar contrase\u00f1a olvidada
 EventLog_SetupResponses=Configurar respuestas de contrase\u00f1a
 Eventlog_SetupOtpSecret=Configurar secreto de contrase\u00f1a para una vez
 EventLog_UpdateProfile=Actualizar atributos
-Requirement_ADComplexity=Debe tener como m\u00ednimo tres tipos de los siguientes caracteres: <ul><li>May\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li></ul>
-Requirement_ADComplexity2008=Debe tener como m\u00ednimo %1% tipos de los siguientes caracteres: <ul><li>May\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li><li>Caracteres de otros idiomas no indicados anteriormente</li></ul>
+Requirement_ADComplexity=Debe tener al menos tres tipos de los siguientes caracteres: <ul><li>May\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li></ul>
+Requirement_ADComplexity2008=Debe tener al menos %1% tipos de los siguientes caracteres: <ul><li>May\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li><li>Caracteres de otros idiomas no indicados anteriormente</li></ul>
 Requirement_AllowNumeric=No debe incluir ning\u00fan car\u00e1cter num\u00e9rico.
 Requirement_AllowSpecial=No debe incluir ning\u00fan car\u00e1cter de s\u00edmbolo (que no sea letra ni n\u00famero).
 Requirement_CaseSensitive=La contrase\u00f1a distingue entre may\u00fasculas y min\u00fasculas.
-Requirement_DisAllowedAttributes=No debe incluir ninguna parte del nombre del usuario.
+Requirement_DisAllowedAttributes=No debe incluir ninguna parte del nombre de usuario.
 Requirement_DisAllowedValues=No debe incluir ninguno de los siguientes valores: %1%
 Requirement_FirstNumeric=El primer car\u00e1cter no puede ser num\u00e9rico.
 Requirement_FirstSpecial=El primer car\u00e1cter no puede ser un s\u00edmbolo (que no sea letra ni n\u00famero).
@@ -69,8 +74,8 @@ Requirement_MaxNumeric=No puede incluir m\u00e1s de %1% n\u00famero.
 Requirement_MaxNumericPlural=No puede incluir m\u00e1s de %1% n\u00fameros.
 Requirement_MaxRepeat=No debe repetir el mismo car\u00e1cter m\u00e1s de %1% vez.
 Requirement_MaxRepeatPlural=No debe repetir el mismo car\u00e1cter m\u00e1s de %1% veces.
-Requirement_MaxSeqRepeat=No debe repetir el mismo car\u00e1cter de forma consecutiva m\u00e1s de %1% vez.
-Requirement_MaxSeqRepeatPlural=No debe repetir ning\u00fan car\u00e1cter de forma consecutiva m\u00e1s de %1% veces.
+Requirement_MaxSeqRepeat=No debe repetir el mismo car\u00e1cter de forma secuencial m\u00e1s de %1% vez.
+Requirement_MaxSeqRepeatPlural=No debe repetir el mismo car\u00e1cter de forma secuencial m\u00e1s de %1% veces.
 Requirement_MaxSpecial=No puede incluir m\u00e1s de %1% car\u00e1cter de s\u00edmbolo (que no sea letra ni n\u00famero).
 Requirement_MaxSpecialPlural=No puede incluir m\u00e1s de %1% caracteres de s\u00edmbolo (que no sea letra ni n\u00famero).
 Requirement_MaxUpper=No puede incluir m\u00e1s de %1% letra en may\u00fascula.
@@ -78,8 +83,8 @@ Requirement_MaxUpperPlural=No puede incluir m\u00e1s de %1% letras en may\u00fas
 Requirement_MinAlpha=Debe incluir al menos %1% letra.
 Requirement_MinAlphaPlural=Debe incluir al menos %1% letras.
 Requirement_MinimumFrequency=No se puede cambiar m\u00e1s de una vez cada %1%.
-Requirement_MinLength=Deben tener como m\u00ednimo %1% car\u00e1cter.
-Requirement_MinLengthPlural=Deben tener como m\u00ednimo %1% caracteres.
+Requirement_MinLength=Deben tener al menos %1% car\u00e1cter.
+Requirement_MinLengthPlural=Deben tener al menos %1% caracteres.
 Requirement_MinLower=Debe tener al menos %1% letra en min\u00fascula.
 Requirement_MinLowerPlural=Debe tener al menos %1% letras en min\u00fascula.
 Requirement_MinNumeric=Debe incluir al menos %1% n\u00famero.
@@ -103,7 +108,7 @@ Rule_MinimumUpperCase=M\u00ednimo may\u00fasculas
 Rule_MaximumUpperCase=M\u00e1ximo may\u00fasculas
 Rule_MinimumLowerCase=M\u00ednimo min\u00fasculas
 Rule_MaximumLowerCase=M\u00e1ximo min\u00fasculas
-Rule_AllowNumeric=Permitir n\u00famericos
+Rule_AllowNumeric=Permitir num\u00e9ricos
 Rule_MinimumNumeric=M\u00ednimo num\u00e9ricos
 Rule_MaximumNumeric=M\u00e1ximo num\u00e9ricos
 Rule_MinimumUnique=M\u00ednimo exclusivos
@@ -116,7 +121,7 @@ Rule_MaximumSpecial=M\u00e1ximo especiales
 Rule_AllowFirstCharSpecial=Permitir primer car\u00e1cter especial
 Rule_AllowLastCharSpecial=Permitir \u00faltimo car\u00e1cter especial
 Rule_MaximumRepeat=M\u00e1ximo repetidos
-Rule_MaximumSequentialRepeat=M\u00e1ximo consecutivos repetidos
+Rule_MaximumSequentialRepeat=M\u00e1ximo secuenciales repetidos
 Rule_ChangeMessage=Cambiar mensaje
 Rule_ExpirationInterval=Intervalo de caducidad
 Rule_MinimumLifetime=Duraci\u00f3n m\u00ednima
@@ -137,18 +142,18 @@ Rule_MinimumNonAlpha=M\u00ednimo no alfanum\u00e9ricos
 Rule_MaximumNonAlpha=M\u00e1ximo no alfanum\u00e9ricos
 Rule_EnableWordlist=Habilitar lista de palabras
 Rule_MinimumStrength=Seguridad m\u00ednima
-Rule_MaximumConsecutive=M\u00e1ximos consecutivos
+Rule_MaximumConsecutive=M\u00e1ximo consecutivos
 Rule_CharGroupsValues=Valores de grupo de caracteres
 Rule_CharGroupsMinMatch=M\u00ednimo de grupos de caracteres necesarios
-Rule_AllowUserChange=Permitir cambio de contrase\u00f1a de administrador
-Rule_AllowAdminChange=Permitir cambio de contrase\u00f1a de usuario
+Rule_AllowUserChange=Permitir al administrador cambiar la contrase\u00f1a
+Rule_AllowAdminChange=Permitir al usuario cambiar la contrase\u00f1a
 Rule_ADComplexityLevel=Nivel de complejidad de AD
 Rule_ADComplexityMaxViolations=Infracciones m\u00e1ximas de complejidad de AD
 Success_ActivateUser=Su cuenta de usuario se ha activado correctamente. Aseg\u00farese de finalizar el proceso o no podr\u00e1 acceder a su cuenta.
 Success_ConfigFileUpload=El archivo de configuraci\u00f3n se ha cargado correctamente.
-Success_ClearResponse=Se han eliminado correctamente sus preguntas secretas y respuestas.
-Success_CreateGuest=Se ha creado correctamente la nueva cuenta de usuario guest. El usuario guest recibir\u00e1 una notificaci\u00f3n si facilit\u00f3 una direcci\u00f3n de correo electr\u00f3nico. A\u00fan se deber\u00e1 activar la cuenta de usuario guest.
-Success_CreateUser=Se ha creado correctamente su nueva cuenta de usuario.
+Success_ClearResponse=Sus preguntas secretas y respuestas se han eliminado correctamente.
+Success_CreateGuest=La nueva cuenta de usuario guest se ha creado correctamente. El usuario guest recibir\u00e1 una notificaci\u00f3n si facilit\u00f3 una direcci\u00f3n de correo electr\u00f3nico. Puede que a\u00fan sea necesario activar la cuenta de usuario guest.
+Success_CreateUser=Su nueva cuenta de usuario se ha creado correctamente.
 Success_NewUserForm=Su cuenta est\u00e1 lista para ser creada. Contin\u00fae cuando est\u00e9 preparado.
 Success_PasswordChange=Se ha cambiado correctamente la contrase\u00f1a.
 Success_PasswordReset=La contrase\u00f1a para %1% se ha establecido correctamente.
