--- a/src/main/resources/password/pwm/i18n/Message_it.properties
+++ b/src/main/resources/password/pwm/i18n/Message_it.properties
@@ -20,64 +20,150 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-EventLog_ActivateUser=Attiva Utente
-EventLog_ChangePassword=Cambia Password
-EventLog_IntruderLockout=Blocco Intrusione
-EventLog_RecoverPassword=Recupera Password Dimenticata
-EventLog_SetupResponses=Imposta Domande di Sicurezza
-EventLog_UpdateProfile=Aggiorna Attributi
-Requirement_ADComplexity=Deve avere almeno tre tipi dei seguenti caratteri:<ul><li>Maiuscola (A-Z)</li><li>Minuscola (a-z)</li><li>Numero (0-9)</li><li>Simbolo (!, #, $, ecc.)</li></ul>
-Requirement_AllowNumeric=Non deve includere nessun carattere numerico.
-Requirement_AllowSpecial=Non deve includere nessun carattere simbolico (non lettera o numero).
-Requirement_CaseSensitive=La password distingue maiuscole e minuscole.
-Requirement_DisAllowedAttributes=Non deve includere parte del tuo nome o nome utente.
-Requirement_DisAllowedValues=Non deve includere nessuno dei seguenti valori: %1%
-Requirement_FirstNumeric=Il primo caratter non pu\u00f2 essere numerico.
-Requirement_FirstSpecial=Il primo carattere non pu\u00f2 essere un simbolo (non lettera o numero).
+EventLog_Startup=Avvio applicazione
+EventLog_Shutdown=Arresto applicazione
+EventLog_FatalEvent=Evento irreversibile
+EventLog_ModifyConfiguration=Configurazione modificata
+EventLog_IntruderAttempt=Tentativo di intrusione
+EventLog_IntruderLockout=Blocco degli intrusi
+EventLog_ActivateUser=Attiva account
+EventLog_Authenticate=Autenticazione
+EventLog_AgreementPassed=Contratto accettato
+EventLog_ChangePassword=Modifica password
+EventLog_UnlockPassword=Sblocca password
+EventLog_CreateUser=Crea account
+EventLog_HelpdeskAction=Azione help desk
+EventLog_HelpdeskClearResponses=Elimina risposte help desk
+EventLog_HelpdeskClearOtpSecret=Elimina segreto OTP help desk
+EventLog_HelpdeskSetPassword=Imposta password help desk
+EventLog_HelpdeskUnlockPassword=Sblocca password help desk
+EventLog_HelpdeskDeleteUser=Cancella utente help desk
+EventLog_HelpdeskViewDetail=Visualizza dettagli help desk
+EventLog_HelpdeskVerifyOtp=Verifica OTP help desk
+EventLog_HelpdeskVerifyOtpIncorrect=Verifica OTP errata help desk
+EventLog_HelpdeskVerifyToken=Verifica token help desk
+EventLog_HelpdeskVerifyTokenIncorrect=Verifica token errato help desk
+EventLog_HelpdeskVerifyAttributes=Verifica attributi help desk
+EventLog_HelpdeskVerifyAttributesIncorrect=Verifica attributi errati help desk
+EventLog_IntruderUserLock=Blocco utente intruso
+EventLog_TokenIssued=Token emesso
+EventLog_TokenClaimed=Token richiesto
+EventLog_ClearResponses=Elimina risposte
+EventLog_RecoverPassword=Recupera password dimenticata
+EventLog_SetupResponses=Imposta risposte di autenticazione
+Eventlog_SetupOtpSecret=Imposta segreto OTP
+EventLog_UpdateProfile=Aggiorna attributi
+Requirement_ADComplexity=Deve includere almeno tre dei seguenti tipi di carattere:<ul><li>maiuscola (A-Z)</li><li>minuscola (a-z)</li><li>numero (0-9)</li><li>simbolo (!, #, $, ecc.)</li></ul>
+Requirement_ADComplexity2008=Deve includere almeno %1% dei seguenti tipi di carattere:<ul><li>maiuscola (A-Z)</li><li>minuscola (a-z)</li><li>numero (0-9)</li><li>simbolo (!, #, $, ecc.)</li><li>caratteri di altre lingue non elencati sopra</li></ul>
+Requirement_AllowNumeric=Non deve includere alcun carattere numerico.
+Requirement_AllowSpecial=Non deve includere alcun simbolo (caratteri non alfanumerici).
+Requirement_CaseSensitive=La password distingue fra maiuscole e minuscole.
+Requirement_DisAllowedAttributes=Non deve includere parte del nome proprio o del nome utente.
+Requirement_DisAllowedValues=Non deve includere nessuno dei valori seguenti: %1%
+Requirement_FirstNumeric=Il primo carattere non pu\u00f2 essere numerico.
+Requirement_FirstSpecial=Il primo carattere non pu\u00f2 essere un simbolo (caratteri non alfanumerici).
 Requirement_LastNumeric=L'ultimo carattere non pu\u00f2 essere numerico.
-Requirement_LastSpecial=L'ultimo carattere non pu\u00f2 essere un simbolo (non lettera o numero).
+Requirement_LastSpecial=L'ultimo carattere non pu\u00f2 essere un simbolo (caratteri non alfanumerici).
 Requirement_MaxAlpha=Non pu\u00f2 includere pi\u00f9 di %1% lettera.
 Requirement_MaxAlphaPlural=Non pu\u00f2 includere pi\u00f9 di %1% lettere.
-Requirement_MaxLength=Non deve essere lunga pi\u00f9 di %1% caratteri.
-Requirement_MaxLengthPlural=Non deve essere lunga pi\u00f9 di %1% caratteri.
+Requirement_MaxLength=Non pu\u00f2 includere pi\u00f9 di %1% carattere.
+Requirement_MaxLengthPlural=Non pu\u00f2 includere pi\u00f9 di %1% caratteri.
 Requirement_MaxLower=Non pu\u00f2 includere pi\u00f9 di %1% lettera minuscola.
 Requirement_MaxLowerPlural=Non pu\u00f2 includere pi\u00f9 di %1% lettere minuscole.
 Requirement_MaxNumeric=Non pu\u00f2 includere pi\u00f9 di %1% numero.
-Requirement_MaxNumericPlural=Non pu\u00f2 includere pi\u00f9 %1% numeri.
-Requirement_MaxRepeat=Non deve ripetere nessun carattere pi\u00f9 di %1% volta.
-Requirement_MaxRepeatPlural=Non deve ripetere nessun caratter pi\u00f9 di %field& volte.
-Requirement_MaxSeqRepeat=Non deve ripetere nessun caratter pi\u00f9 di %1% volta consecutivamente.
-Requirement_MaxSeqRepeatPlural=Non deve ripetere nessun carattere pi\u00f9 di %1% volte consecutivamente.
-Requirement_MaxSpecial=Non pu\u00f2 includere pi\u00f9 di %1% carattere simbolico (non lettera o numero).
-Requirement_MaxSpecialPlural=Non pu\u00f2 includere pi\u00f9 di %1% caratteri simbolici (non lettere o numeri.
-Requirement_MaxUpper=Non pu\u00f2 includere pi\u00f9 di %field& lettera maiuscola.
-Requirement_MaxUpperPlural=Non pu\u00f2 includere pi\u00f9 di %field& lettere maiuscole.
+Requirement_MaxNumericPlural=Non pu\u00f2 includere pi\u00f9 di %1% numeri.
+Requirement_MaxRepeat=Non pu\u00f2 includere caratteri ripetuti pi\u00f9 di %1% volta.
+Requirement_MaxRepeatPlural=Non pu\u00f2 includere caratteri ripetuti pi\u00f9 di %1% volte.
+Requirement_MaxSeqRepeat=Non pu\u00f2 includere caratteri ripetuti consecutivamente pi\u00f9 di %1% volta.
+Requirement_MaxSeqRepeatPlural=Non pu\u00f2 includere caratteri ripetuti consecutivamente pi\u00f9 di %1% volte.
+Requirement_MaxSpecial=Non pu\u00f2 includere pi\u00f9 di %1% simbolo (caratteri non alfanumerici).
+Requirement_MaxSpecialPlural=Non pu\u00f2 includere pi\u00f9 di %1% simboli (caratteri non alfanumerici).
+Requirement_MaxUpper=Non pu\u00f2 includere pi\u00f9 di %1% lettera maiuscola.
+Requirement_MaxUpperPlural=Non pu\u00f2 includere pi\u00f9 di %1% lettere maiuscole.
 Requirement_MinAlpha=Deve includere almeno %1% lettera.
 Requirement_MinAlphaPlural=Deve includere almeno %1% lettere.
-Requirement_MinimumFrequency=Non pu\u00f2 essere cambiata pi\u00f9 spesso di ogni %1%.
-Requirement_MinLength=Deve essere lunga almeno %1% caratteri.
+Requirement_MinimumFrequency=Pu\u00f2 essere modificata solo una volta ogni %1%.
+Requirement_MinLength=Deve essere lunga almeno %1% carattere.
 Requirement_MinLengthPlural=Deve essere lunga almeno %1% caratteri.
-Requirement_MinLower=Deve avere almeno %1% lettera minuscola.
-Requirement_MinLowerPlural=Deve avere almeno %1% lettere minuscole.
+Requirement_MinLower=Deve includere almeno %1% lettera minuscola.
+Requirement_MinLowerPlural=Deve includere almeno %1% lettere minuscole.
 Requirement_MinNumeric=Deve includere almeno %1% numero.
-Requirement_MinNumericPlural=Deve includere almeno %1% numbers.
-Requirement_MinSpecial=Deve avere almeno %1% carattere simbolico (non lettera o numero).
-Requirement_MinSpecialPlural=Deve avere almento %1% caratteri simbolici (non lettere o numeri).
-Requirement_MinUnique=Deve avere almeno %1% carattere unico.
-Requirement_MinUniquePlural=Deve avere almeno %1% caratteri unici.
-Requirement_MinUpper=Deve avere almeno %1% lettera maiuscola.
-Requirement_MinUpperPlural=Deve avere almeno %1% lettere maiuscole.
-Requirement_NotCaseSensitive=La password non distingue maiuscole e minuscole.
-Requirement_OldChar=Non pu\u00f2 avere pi\u00f9 di %1% carattere della tua vecchia password.
-Requirement_OldCharPlural=Non pu\u00f2 avere pi\u00f9 di %1% caratteri della tua vecchia password.
+Requirement_MinNumericPlural=Deve includere almeno %1% numeri.
+Requirement_MinSpecial=Deve includere almeno %1% simbolo (caratteri non alfanumerici).
+Requirement_MinSpecialPlural=Deve includere almeno %1% simboli (caratteri non alfanumerici).
+Requirement_MinUnique=Deve includere almeno %1% carattere univoco.
+Requirement_MinUniquePlural=Deve includere almeno %1% caratteri univoci.
+Requirement_MinUpper=Deve includere almeno %1% lettera maiuscola.
+Requirement_MinUpperPlural=Deve includere almeno %1% lettere maiuscole.
+Requirement_NotCaseSensitive=La password non distingue fra maiuscole e minuscole.
+Requirement_OldChar=Non pu\u00f2 includere pi\u00f9 di %1% carattere della password attuale.
+Requirement_OldCharPlural=Non pu\u00f2 includere pi\u00f9 di %1% caratteri della password attuale.
 Requirement_RequiredChars=Deve includere almeno uno dei seguenti caratteri:
-Requirement_UniqueRequired=La nuova password non pu\u00f2 essere stata usata precedentemente.
+Requirement_UniqueRequired=La nuova password non pu\u00f2 essere gi\u00e0 stata usata.
 Requirement_WordList=Non deve includere una parola comune o una sequenza di caratteri di uso comune.
-Success_ActivateUser=Il tuo utente \u00e8 stato attivato con successo.  Accertati di completare la procedura, o non sarai in grado di accedere con il tuo utente.
-Success_CreateUser=Il tuo nuovo utente \u00e8 stato creato con successo.  Accertati di continuare la procedura, o non sarai in grado di accedere con il tuo nuovo utente.
-Success_PasswordChange=La password \u00e8 stata cambiata con successo.
-Success_ResponsesMeetRules=Le tue risposte soddisfano i requisiti.  Clicca Salva Risposte quando sei pronto.
-Success_SetupResponse=Le tue domande e risposte di sicurezza sono state salvate con successo.  Se dovessi perdere la password, potrai usare le risposte a queste domande per reimpostarla.
-Success_Unknown=L'operazione \u00e8 stata completata con successo.
-Success_UnlockAccount=Il tuo account \u00e8 stato sbloccato
-Success_UpdateProfile=Il le informazioni del tuo utente sono state aggiornate con successo.
+Rule_PolicyEnabled=Policy abilitata
+Rule_MinimumLength=Lunghezza minima
+Rule_MaximumLength=Lunghezza massima
+Rule_MinimumUpperCase=Numero minimo di maiuscole
+Rule_MaximumUpperCase=Numero massimo di maiuscole
+Rule_MinimumLowerCase=Numero minimo di minuscole
+Rule_MaximumLowerCase=Numero massimo di minuscole
+Rule_AllowNumeric=Consenti numeri
+Rule_MinimumNumeric=Numero minimo di numeri
+Rule_MaximumNumeric=Numero massimo di numeri
+Rule_MinimumUnique=Numero minimo di univoci
+Rule_MaximumUnique=Numero massimo di univoci
+Rule_AllowFirstCharNumeric=Consenti numero come primo carattere
+Rule_AllowLastCharNumeric=Consenti numero come ultimo carattere
+Rule_AllowSpecial=Consenti speciali
+Rule_MinimumSpecial=Numero minimo di speciali
+Rule_MaximumSpecial=Numero massimo di speciali
+Rule_AllowFirstCharSpecial=Consenti speciale come primo carattere
+Rule_AllowLastCharSpecial=Consenti speciale come ultimo carattere
+Rule_MaximumRepeat=Numero massimo di ripetuti
+Rule_MaximumSequentialRepeat=Numero massimo di ripetuti in sequenza
+Rule_ChangeMessage=Messaggio di modifica
+Rule_ExpirationInterval=Intervallo di scadenza
+Rule_MinimumLifetime=Durata minima
+Rule_CaseSensitive=Distinzione maiuscole/minuscole
+Rule_EnforceAtLogin=Applica al login
+Rule_ChallengeResponseEnabled=Domanda/risposta di autenticazione abilitata
+Rule_UniqueRequired=Univoci obbligatori
+Rule_DisallowedValues=Valori non consentiti
+Rule_DisallowedAttributes=Attributi non consentiti
+Rule_ADComplexity=Complessit\u00e0 AD
+Rule_DisallowCurrent=Non consentire attuale
+Rule_MaximumOldChars=Numero massimo di caratteri precedenti
+Rule_RegExMatch=Corrispondenza con espressione regolare
+Rule_RegExNoMatch=Non corrispondenza con espressione regolare
+Rule_MinimumAlpha=Numero minimo di alfabetici
+Rule_MaximumAlpha=Numero massimo di alfabetici
+Rule_MinimumNonAlpha=Numero minimo di non alfabetici
+Rule_MaximumNonAlpha=Numero massimo di non alfabetici
+Rule_EnableWordlist=Abilita elenco parole
+Rule_MinimumStrength=Complessit\u00e0 minima
+Rule_MaximumConsecutive=Numero massimo di consecutivi
+Rule_CharGroupsValues=Valori gruppi di caratteri
+Rule_CharGroupsMinMatch=Numero minimo di gruppi di caratteri obbligatori
+Rule_AllowUserChange=Consenti modifica password da amministratore
+Rule_AllowAdminChange=Consenti modifica password da utente
+Rule_ADComplexityLevel=Livello di complessit\u00e0 AD
+Rule_ADComplexityMaxViolations=Numero massimo di violazioni di complessit\u00e0 AD
+Success_ActivateUser=Attivazione dell'account utente eseguita. Per poter accedere all'account, \u00e8 necessario completare la procedura.
+Success_ConfigFileUpload=Upload del file di configurazione completato.
+Success_ClearResponse=Rimozione delle domande e risposte segrete eseguita.
+Success_CreateGuest=Creazione del nuovo account guest eseguita. Se \u00e8 stato immesso l'indirizzo e-mail, l'utente guest ricever\u00e0 una notifica. Potrebbe comunque essere necessario attivare l'account guest.
+Success_CreateUser=Creazione del nuovo account utente eseguita.
+Success_NewUserForm=Account pronto per la creazione. Quando si \u00e8 pronti, continuare.
+Success_PasswordChange=Modifica della password eseguita.
+Success_PasswordReset=Impostazione della password per %1% eseguita.
+Success_PasswordSend=La nuova password \u00e8 stata inviata a %1%. Chiudere questa finestra ed eseguire il login utilizzando la nuova password.
+Success_ResponsesMeetRules=Le risposte soddisfano i requisiti. Quando si \u00e8 pronti, fare clic su Salva risposte.
+Success_SetupResponse=Grazie. Le domande e risposte di sicurezza sono state salvate. Se si dimentica la password, \u00e8 possibile usare le risposte a queste domande per reimpostarla.
+Success_Unknown=Operazione eseguita.
+Success_UnlockAccount=L'account \u00e8 stato sbloccato.
+Success_UpdateGuest=Aggiornamento dell'account guest eseguito. Se \u00e8 stato immesso l'indirizzo e-mail, l'utente guest ricever\u00e0 una notifica.
+Success_UpdateProfile=Le informazioni dell'utente sono state aggiornate.
+Success_UpdateForm=Profilo pronto per l'aggiornamento. Quando si \u00e8 pronti, continuare.
+Success_Action=L'azione %1% \u00e8 stata eseguita.
+Success_OtpSetup=La registrazione del dispositivo \u00e8 stata eseguita.
