--- a/src/main/resources/password/pwm/i18n/Message_pl.properties
+++ b/src/main/resources/password/pwm/i18n/Message_pl.properties
@@ -20,72 +20,150 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-EventLog_ActivateUser=Aktywuj u\u017cytkownika
-EventLog_ChangePassword=Zmie\u0144 has\u0142o
-EventLog_HelpdeskClearResponses=Helpdesk Jasne odpowiedzi
-EventLog_HelpdeskSetPassword=Helpdesk Ustaw has\u0142o
-EventLog_HelpdeskUnlockPassword=Helpdesk Odblokuj Has\u0142o
-EventLog_IntruderLockout=Blokada Intruza
-EventLog_RecoverPassword=Odzyskaj haslo
-EventLog_SetupResponses=Generuj podpowiedzi do has\u0142a
-EventLog_UpdateProfile=Aktualizuj atrybuty
-Requirement_ADComplexity=Musi mie\u0107 co najmniej trzy rodzaje nast\u0119puj\u0105cych znak\u00f3w: <ul> <li> wielkie (AZ) </ li> <li> Ma\u0142e litery (az) </ li> Liczba <li> (0-9) </ li> < li> Symbol (!, #, $, itp.) </ li> </ ul>
-Requirement_AllowNumeric=Nie mo\u017ce zawiera\u0107 \u017cadnych znak\u00f3w numerycznych.
-Requirement_AllowSpecial=Nie mo\u017ce zawiera\u0107 symboli (liter i cyfr).
-Requirement_CaseSensitive=Rozr\u00f3\u017cniana jest wielko\u015b\u0107 liter w ha\u015ble.
-Requirement_DisAllowedAttributes=Nie mo\u017ce zawiera\u0107 cz\u0119\u015bci nazwy lub nazwy u\u017cytkownika.
-Requirement_DisAllowedValues=Nie mo\u017ce zawiera\u0107 \u017cadnej z poni\u017cszych warto\u015bci: %1%
-Requirement_FirstNumeric=Pierwszy znak nie mo\u017ce by\u0107 numeryczny.
-Requirement_FirstSpecial=Pierwszy znak nie mo\u017ce by\u0107 symbolem (nie litera i nie cyfra).
-Requirement_LastNumeric=Ostatni znak nie mo\u017ce by\u0107 numeryczny.
-Requirement_LastSpecial=Ostatni znak nie mo\u017ce by\u0107 symbolem (nie litera i nie cyfra).
-Requirement_MaxAlpha=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% liter\u0119.
+EventLog_Startup=Uruchomienie aplikacji
+EventLog_Shutdown=Zamkni\u0119cie aplikacji
+EventLog_FatalEvent=Zdarzenie krytyczne
+EventLog_ModifyConfiguration=Zmodyfikowanie konfiguracji
+EventLog_IntruderAttempt=Pr\u00f3ba wtargni\u0119cia
+EventLog_IntruderLockout=Zablokowanie wtargni\u0119cia
+EventLog_ActivateUser=Aktywacja konta
+EventLog_Authenticate=Uwierzytelnienie
+EventLog_AgreementPassed=Przekazanie zgody
+EventLog_ChangePassword=Zmiana has\u0142a
+EventLog_UnlockPassword=Odblokowanie has\u0142a
+EventLog_CreateUser=Utworzenie konta
+EventLog_HelpdeskAction=Dzia\u0142anie pomocy technicznej
+EventLog_HelpdeskClearResponses=Pomoc techniczna \u2014 wyczyszczenie odpowiedzi
+EventLog_HelpdeskClearOtpSecret=Pomoc techniczna \u2014 wyczyszczenie klucza tajnego has\u0142a jednorazowego
+EventLog_HelpdeskSetPassword=Pomoc techniczna \u2014 ustawienie has\u0142a
+EventLog_HelpdeskUnlockPassword=Pomoc techniczna \u2014 odblokowanie has\u0142a
+EventLog_HelpdeskDeleteUser=Pomoc techniczna \u2014 usuni\u0119cie u\u017cytkownika
+EventLog_HelpdeskViewDetail=Pomoc techniczna \u2014 wy\u015bwietlenie szczeg\u00f3\u0142\u00f3w
+EventLog_HelpdeskVerifyOtp=Pomoc techniczna \u2014 weryfikacja has\u0142a jednorazowego
+EventLog_HelpdeskVerifyOtpIncorrect=Pomoc techniczna \u2014 niepowodzenie weryfikacji z powodu niepoprawnego has\u0142a jednorazowego
+EventLog_HelpdeskVerifyToken=Pomoc techniczna \u2014 weryfikacja tokenu
+EventLog_HelpdeskVerifyTokenIncorrect=Pomoc techniczna \u2014 niepowodzenie weryfikacji z powodu niepoprawnego tokenu
+EventLog_HelpdeskVerifyAttributes=Pomoc techniczna \u2014 weryfikacja atrybut\u00f3w
+EventLog_HelpdeskVerifyAttributesIncorrect=Pomoc techniczna \u2014 niepowodzenie weryfikacji z powodu niepoprawnych atrybut\u00f3w
+EventLog_IntruderUserLock=Zablokowanie wtargni\u0119cia
+EventLog_TokenIssued=Wystawienie tokenu
+EventLog_TokenClaimed=Przyj\u0119cie tokenu
+EventLog_ClearResponses=Wyczyszczenie odpowiedzi
+EventLog_RecoverPassword=Odzyskanie zapomnianego has\u0142a
+EventLog_SetupResponses=Skonfigurowanie odpowiedzi do has\u0142a
+Eventlog_SetupOtpSecret=Skonfigurowanie klucza tajnego has\u0142a jednorazowego
+EventLog_UpdateProfile=Aktualizacja atrybut\u00f3w
+Requirement_ADComplexity=Musi mie\u0107 co najmniej trzy typy nast\u0119puj\u0105cych znak\u00f3w: <ul><li>Wielka litera (A\u2013Z)</ li><li>Ma\u0142a litera (a\u2013z)</ li>Cyfra <li>(0\u20139)</ li>< li>Symbol (!, #, $ itp.)</ li></ ul>
+Requirement_ADComplexity2008=Musi mie\u0107 co najmniej %1% typ. nast\u0119puj\u0105cych znak\u00f3w: <ul><li> Wielka litera (A\u2013Z)</ li><li>Ma\u0142a litera (a\u2013z) </ li>Cyfra<li> (0\u20139)</ li>< li>Symbol (!, #, $ itp.)</li><li>Inne znaki j\u0119zykowe niewymienione powy\u017cej</li></ul>
+Requirement_AllowNumeric=Nie mo\u017ce zawiera\u0107 \u017cadnych cyfr.
+Requirement_AllowSpecial=Nie mo\u017ce zawiera\u0107 \u017cadnych symboli (nieb\u0119d\u0105cych liter\u0105 ani cyfr\u0105).
+Requirement_CaseSensitive=W ha\u015ble jest rozr\u00f3\u017cniana wielko\u015b\u0107 liter.
+Requirement_DisAllowedAttributes=Nie mo\u017ce zawiera\u0107 cz\u0119\u015bci imienia i nazwiska ani nazwy u\u017cytkownika.
+Requirement_DisAllowedValues=Nie mo\u017ce zawiera\u0107 \u017cadnej z nast\u0119puj\u0105cych warto\u015bci: %1%
+Requirement_FirstNumeric=Pierwszy znak nie mo\u017ce by\u0107 cyfr\u0105.
+Requirement_FirstSpecial=Pierwszy znak nie mo\u017ce by\u0107 symbolem (nieb\u0119d\u0105cym liter\u0105 ani cyfr\u0105).
+Requirement_LastNumeric=Ostatni znak nie mo\u017ce by\u0107 cyfr\u0105.
+Requirement_LastSpecial=Ostatni znak nie mo\u017ce by\u0107 symbolem (nieb\u0119d\u0105cym liter\u0105 ani cyfr\u0105).
+Requirement_MaxAlpha=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% litery.
 Requirement_MaxAlphaPlural=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% liter.
-Requirement_MaxLength=Musi sk\u0142ada\u0107 si\u0119 z maksymalnie %1% znak\u00f3w.
-Requirement_MaxLengthPlural=Musi sk\u0142ada\u0107 si\u0119 z maksymalnie %1% znak\u00f3w.
-Requirement_MaxLower=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% ma\u0142\u0105 liter\u0119.
+Requirement_MaxLength=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% znaku.
+Requirement_MaxLengthPlural=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% znak\u00f3w.
+Requirement_MaxLower=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% ma\u0142ej litery.
 Requirement_MaxLowerPlural=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% ma\u0142ych liter.
-Requirement_MaxNumeric=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% cyfr\u0119.
+Requirement_MaxNumeric=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% cyfry.
 Requirement_MaxNumericPlural=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% cyfr.
-Requirement_MaxRepeat=Znak nie mo\u017ce si\u0119 powtarza\u0107 wi\u0119cej ni\u017c %1% raz.
-Requirement_MaxRepeatPlural=Znak nie mo\u017ce si\u0119 powtarza\u0107 wi\u0119cej ni\u017c %1% razy.
-Requirement_MaxSeqRepeat=Znak nie mo\u017ce si\u0119 powtarza\u0107 kolejno wi\u0119cej ni\u017c %1% raz.
-Requirement_MaxSeqRepeatPlural=Znak nie mo\u017ce si\u0119 powtarza\u0107 kolejno wi\u0119cej ni\u017c %1% razy.
-Requirement_MaxSpecial=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% symbol (nie liter\u0119 i nie cyfr\u0119).
-Requirement_MaxSpecialPlural=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% symboli (nie litery i nie cyfry).
-Requirement_MaxUpper=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% du\u017c\u0105 liter\u0119.
+Requirement_MaxRepeat=\u017baden znak nie mo\u017ce si\u0119 powtarza\u0107 wi\u0119cej ni\u017c %1% raz.
+Requirement_MaxRepeatPlural=\u017baden znak nie mo\u017ce si\u0119 powtarza\u0107 wi\u0119cej ni\u017c %1% razy.
+Requirement_MaxSeqRepeat=\u017baden znak nie mo\u017ce si\u0119 powtarza\u0107 kolejno wi\u0119cej ni\u017c %1% raz.
+Requirement_MaxSeqRepeatPlural=\u017baden znak nie mo\u017ce si\u0119 powtarza\u0107 kolejno wi\u0119cej ni\u017c %1% razy.
+Requirement_MaxSpecial=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% symbolu (nieb\u0119d\u0105cego liter\u0105 ani cyfr\u0105).
+Requirement_MaxSpecialPlural=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% symboli (nieb\u0119d\u0105cych liter\u0105 ani cyfr\u0105).
+Requirement_MaxUpper=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% du\u017cej litery.
 Requirement_MaxUpperPlural=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% du\u017cych liter.
 Requirement_MinAlpha=Musi zawiera\u0107 co najmniej %1% liter\u0119.
-Requirement_MinAlphaPlural=Musi zawiera\u0107 co najmniej %1% litery.
-Requirement_MinimumFrequency=Mo\u017cna zmieni\u0107 nie cz\u0119\u015bciej ni\u017c raz w %1%.
-Requirement_MinLength=Musi sk\u0142ada\u0107 si\u0119 z co najmniej %1% znak\u00f3w.
-Requirement_MinLengthPlural=Musi sk\u0142ada\u0107 si\u0119 z co najmniej %1% znak\u00f3w.
+Requirement_MinAlphaPlural=Musi zawiera\u0107 co najmniej nast\u0119puj\u0105c\u0105 liczb\u0119 liter: %1%.
+Requirement_MinimumFrequency=Mo\u017cna je zmienia\u0107 nie cz\u0119\u015bciej ni\u017c raz na %1%.
+Requirement_MinLength=Musi zawiera\u0107 co najmniej %1% znak.
+Requirement_MinLengthPlural=Musi zawiera\u0107 co najmniej nast\u0119puj\u0105c\u0105 liczb\u0119 znak\u00f3w: %1%.
 Requirement_MinLower=Musi zawiera\u0107 co najmniej %1% ma\u0142\u0105 liter\u0119.
-Requirement_MinLowerPlural=Musi zawiera\u0107 co najmniej %1% ma\u0142ych liter.
+Requirement_MinLowerPlural=Musi zawiera\u0107 co najmniej nast\u0119puj\u0105c\u0105 liczb\u0119 ma\u0142ych liter: %1%.
 Requirement_MinNumeric=Musi zawiera\u0107 co najmniej %1% cyfr\u0119.
-Requirement_MinNumericPlural=Musi zawiera\u0107 co najmniej %1% cyfr.
-Requirement_MinSpecial=Musi zawiera\u0107 co najmniej %1% symbol (nie liter\u0119 i nie cyfr\u0119).
-Requirement_MinSpecialPlural=Musi zawiera\u0107 co najmniej %1% symboli (nie litery i nie cyfry).
-Requirement_MinUnique=Musi zawiera\u0107 co najmniej %1% znak specjalny.
-Requirement_MinUniquePlural=Musi zawiera\u0107 co najmniej %1% znak\u00f3w specjalnych.
+Requirement_MinNumericPlural=Musi zawiera\u0107 co najmniej nast\u0119puj\u0105c\u0105 liczb\u0119 cyfr: %1%.
+Requirement_MinSpecial=Musi zawiera\u0107 co najmniej %1% symbol (nieb\u0119d\u0105cy liter\u0105 ani cyfr\u0105).
+Requirement_MinSpecialPlural=Musi zawiera\u0107 co najmniej nast\u0119puj\u0105c\u0105 liczb\u0119 symboli (nieb\u0119d\u0105cych liter\u0105 ani cyfr\u0105): %1%
+Requirement_MinUnique=Musi zawiera\u0107 co najmniej %1% unikatowy znak.
+Requirement_MinUniquePlural=Musi zawiera\u0107 co najmniej nast\u0119puj\u0105c\u0105 liczb\u0119 unikatowych znak\u00f3w: %1%.
 Requirement_MinUpper=Musi zawiera\u0107 co najmniej %1% du\u017c\u0105 liter\u0119.
-Requirement_MinUpperPlural=Musi zawiera\u0107 co najmniej %1% du\u017cych liter.
-Requirement_NotCaseSensitive=Wielko\u015b\u0107 liter w ha\u015ble nie jest rozr\u00f3\u017cniana.
-Requirement_OldChar=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% znak z poprzedniego has\u0142a.
-Requirement_OldCharPlural=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% znak\u00f3w z poprzedniego has\u0142a.
-Requirement_RequiredChars=Musi zawiera\u0107 co najmniej jeden z nast\u0119puj\u0105cych znak\u00f3w:
+Requirement_MinUpperPlural=Musi zawiera\u0107 co najmniej nast\u0119puj\u0105c\u0105 liczb\u0119 du\u017cych liter: %1%.
+Requirement_NotCaseSensitive=W ha\u015ble nie jest rozr\u00f3\u017cniana wielko\u015b\u0107 liter.
+Requirement_OldChar=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% znaku z bie\u017c\u0105cego has\u0142a.
+Requirement_OldCharPlural=Nie mo\u017ce zawiera\u0107 wi\u0119cej ni\u017c %1% znak\u00f3w z bie\u017c\u0105cego has\u0142a.
+Requirement_RequiredChars=Musi zawiera\u0107 co najmniej po jednym z nast\u0119puj\u0105cych znak\u00f3w:
 Requirement_UniqueRequired=Nowe has\u0142o nie mo\u017ce by\u0107 wcze\u015bniej u\u017cywane.
-Requirement_WordList=Nie mo\u017ce zawiera\u0107 pospolitych wyraz\u00f3w lub powszechnie stosowanych ciag\u00f3w znak\u00f3w.
-Success_ActivateUser=Nowe konto u\u017cytkownika zosta\u0142o pomy\u015blnie utworzone. Kontynuuj proces, w przeciwnym razie konto b\u0119dzie niedost\u0119pne.
-Success_ConfigFileUpload=Plik konfiguracyjny zosta\u0142 pomy\u015blnie przes\u0142any. Pole
-Success_CreateGuest=Nowe konto go\u015b\u0107 zosta\u0142o utworzone.  U\u017cytkownik go\u015b\u0107 otrzyma powiadomienie, je\u015bli adres e-mail zosta\u0142 wpisany. Konto go\u015b\u0107 mo\u017ce jeszcze potrzebowa\u0107 aktywacji.
-Success_CreateUser=Nowe konto u\u017cytkownika zosta\u0142o pomy\u015blnie utworzone. Kontynuuj proces, w przeciwnym razie konto b\u0119dzie niedost\u0119pne.
-Success_NewUserForm=Twoje konto jest gotowy zosta\u0107 utworzone.  Kontynuuj, gdy gotowe.
-Success_PasswordChange=Twoje has\u0142o zosta\u0142o pomy\u015blnie zmienione.
-Success_PasswordReset=Has\u0142o dla %1% zosta\u0142o ustawione pomy\u015blnie.
-Success_ResponsesMeetRules=Twoje odpowiedzi spe\u0142niaj\u0105 wymagania. Kliknij przycisk Zapisz odpowiedzi, gdy gotowe.
-Success_SetupResponse=Twoje tajne pytanie i odpowied\u017a zosta\u0142y pomy\u015blnie wygenerowane.
-Success_Unknown=Operacja zosta\u0142a pomy\u015blnie zako\u0144czona.
-Success_UnlockAccount=Twoje konto zosta\u0142o odblokowane.
-Success_UpdateGuest=Konto go\u015b\u0107 zosta\u0142o zaktualizowane pomy\u015blnie.  Ui\u017cytkownik go\u015b\u0107 otrzyma powiadomienie, je\u015bli adres e-mail zosta\u0142 wpisany.
-Success_UpdateProfile=Twoj profil u\u017cytkownika zosta\u0142 pomy\u015blnie zaktualizowany.
+Requirement_WordList=Nie mo\u017ce zawiera\u0107 pospolitych wyraz\u00f3w ani powszechnie stosowanych sekwencji znak\u00f3w.
+Rule_PolicyEnabled=W\u0142\u0105czone za\u0142o\u017cenia
+Rule_MinimumLength=Minimalna d\u0142ugo\u015b\u0107
+Rule_MaximumLength=Maksymalna d\u0142ugo\u015b\u0107
+Rule_MinimumUpperCase=Minimalna liczba du\u017cych liter
+Rule_MaximumUpperCase=Maksymalna liczba du\u017cych liter
+Rule_MinimumLowerCase=Minimalna liczba ma\u0142ych liter
+Rule_MaximumLowerCase=Maksymalna liczba ma\u0142ych liter
+Rule_AllowNumeric=Zezwalaj na cyfry
+Rule_MinimumNumeric=Minimalna liczba cyfr
+Rule_MaximumNumeric=Maksymalna liczba cyfr
+Rule_MinimumUnique=Minimalna liczba unikatowych znak\u00f3w
+Rule_MaximumUnique=Maksymalna liczba unikatowych znak\u00f3w
+Rule_AllowFirstCharNumeric=Zezwalaj na cyfr\u0119 jako pierwszy znak
+Rule_AllowLastCharNumeric=Zezwalaj na cyfr\u0119 jako ostatni znak
+Rule_AllowSpecial=Zezwalaj na znaki specjalne
+Rule_MinimumSpecial=Minimalna liczba znak\u00f3w specjalnych
+Rule_MaximumSpecial=Maksymalna liczba znak\u00f3w specjalnych
+Rule_AllowFirstCharSpecial=Zezwalaj na znak specjalny jako pierwszy znak
+Rule_AllowLastCharSpecial=Zezwalaj na znak specjalny jako ostatni znak
+Rule_MaximumRepeat=Maksymalna liczba powt\u00f3rzonych znak\u00f3w
+Rule_MaximumSequentialRepeat=Maksymalna liczba kolejno powt\u00f3rzonych znak\u00f3w
+Rule_ChangeMessage=Komunikat dotycz\u0105cy zmiany
+Rule_ExpirationInterval=Interwa\u0142 wyga\u015bni\u0119cia
+Rule_MinimumLifetime=Minimalny czas obowi\u0105zywania
+Rule_CaseSensitive=Uwzgl\u0119dniaj wielko\u015b\u0107 liter
+Rule_EnforceAtLogin=Wymu\u015b przy logowaniu
+Rule_ChallengeResponseEnabled=W\u0142\u0105czony odzew
+Rule_UniqueRequired=Wymagane unikatowe znaki
+Rule_DisallowedValues=Niedozwolone warto\u015bci
+Rule_DisallowedAttributes=Niedozwolone atrybuty
+Rule_ADComplexity=Z\u0142o\u017cono\u015b\u0107 w us\u0142udze AD
+Rule_DisallowCurrent=Nie zezwalaj na bie\u017c\u0105ce
+Rule_MaximumOldChars=Maksymalna liczba starych znak\u00f3w
+Rule_RegExMatch=Wyra\u017cenie regularne dopasowane
+Rule_RegExNoMatch=Wyra\u017cenie regularne niedopasowane
+Rule_MinimumAlpha=Minimalna liczba liter
+Rule_MaximumAlpha=Maksymalna liczba liter
+Rule_MinimumNonAlpha=Minimalna liczba znak\u00f3w nieb\u0119d\u0105cych liter\u0105
+Rule_MaximumNonAlpha=Maksymalna liczba znak\u00f3w nieb\u0119d\u0105cych liter\u0105
+Rule_EnableWordlist=W\u0142\u0105cz list\u0119 s\u0142\u00f3w
+Rule_MinimumStrength=Minimalna si\u0142a
+Rule_MaximumConsecutive=Maksymalna liczba kolejnych znak\u00f3w
+Rule_CharGroupsValues=Warto\u015bci grupy znak\u00f3w
+Rule_CharGroupsMinMatch=Wymagane minimum grupy znak\u00f3w
+Rule_AllowUserChange=Zezwalaj na zmian\u0119 has\u0142a przez administratora
+Rule_AllowAdminChange=Zezwalaj na zmian\u0119 has\u0142a przez u\u017cytkownika
+Rule_ADComplexityLevel=Poziom z\u0142o\u017cono\u015bci w us\u0142udze AD
+Rule_ADComplexityMaxViolations=Maksymalna liczba narusze\u0144 regu\u0142 z\u0142o\u017cono\u015bci w us\u0142udze AD
+Success_ActivateUser=Konto u\u017cytkownika zosta\u0142o pomy\u015blnie aktywowane. Doko\u0144cz ten proces, w przeciwnym razie konto b\u0119dzie niedost\u0119pne.
+Success_ConfigFileUpload=Plik konfiguracyjny zosta\u0142 pomy\u015blnie przekazany.
+Success_ClearResponse=Tajne pytania i odpowiedzi zosta\u0142y pomy\u015blnie usuni\u0119te.
+Success_CreateGuest=Nowe konto go\u015bcia zosta\u0142o pomy\u015blnie utworzone. U\u017cytkownik go\u015b\u0107 otrzyma powiadomienie, je\u015bli zosta\u0142 wprowadzony adres e-mail. Konto go\u015bcia mo\u017ce jeszcze wymaga\u0107 aktywacji.
+Success_CreateUser=Nowe konto u\u017cytkownika zosta\u0142o pomy\u015blnie utworzone.
+Success_NewUserForm=Konto jest gotowe do utworzenia. Mo\u017cesz kontynuowa\u0107.
+Success_PasswordChange=Has\u0142o zosta\u0142o pomy\u015blnie zmienione.
+Success_PasswordReset=Has\u0142o dla u\u017cytkownika %1% zosta\u0142o pomy\u015blnie ustawione.
+Success_PasswordSend=Nowe has\u0142o zosta\u0142o wys\u0142ane na adres %1%. Zamknij to okno, a nast\u0119pnie zaloguj si\u0119 za pomoc\u0105 nowego has\u0142a.
+Success_ResponsesMeetRules=Te odpowiedzi spe\u0142niaj\u0105 wymagania. Mo\u017cesz klikn\u0105\u0107 przycisk Zapisz odpowiedzi.
+Success_SetupResponse=Dzi\u0119kujemy. Tajne pytania i odpowiedzi zosta\u0142y pomy\u015blnie zapisane. Je\u015bli kiedykolwiek zapomnisz has\u0142a, mo\u017cesz je zresetowa\u0107 przy u\u017cyciu odpowiedzi na te pytania.
+Success_Unknown=Operacja zosta\u0142a pomy\u015blnie uko\u0144czona.
+Success_UnlockAccount=Konto zosta\u0142o odblokowane.
+Success_UpdateGuest=Konto go\u015bcia zosta\u0142o pomy\u015blnie zaktualizowane. U\u017cytkownik go\u015b\u0107 otrzyma powiadomienie, je\u015bli zosta\u0142 wprowadzony adres e-mail.
+Success_UpdateProfile=Informacje o u\u017cytkowniku zosta\u0142y pomy\u015blnie zaktualizowane.
+Success_UpdateForm=Profil jest gotowy do zaktualizowania. Mo\u017cesz kontynuowa\u0107.
+Success_Action=Dzia\u0142anie %1% zosta\u0142o pomy\u015blnie uko\u0144czone.
+Success_OtpSetup=Rejestracja urz\u0105dzenia zosta\u0142a pomy\u015blnie uko\u0144czona.
