--- a/src/main/resources/password/pwm/i18n/Message_pt_BR.properties
+++ b/src/main/resources/password/pwm/i18n/Message_pt_BR.properties
@@ -21,7 +21,7 @@
 #
 
 EventLog_Startup=Inicializa\u00e7\u00e3o do Aplicativo
-EventLog_Shutdown=Desligamento do Aplicativo
+EventLog_Shutdown=Encerramento do Aplicativo
 EventLog_FatalEvent=Evento Fatal
 EventLog_ModifyConfiguration=Configura\u00e7\u00e3o Modificada
 EventLog_IntruderAttempt=Tentativa de Intruso
@@ -33,13 +33,18 @@ EventLog_ChangePassword=Mudar Senha
 EventLog_UnlockPassword=Desbloquear Senha
 EventLog_CreateUser=Criar Conta
 EventLog_HelpdeskAction=A\u00e7\u00e3o do Suporte T\u00e9cnico
-EventLog_HelpdeskClearResponses=Limpar Respostas do Suporte T\u00e9cnico
-EventLog_HelpdeskClearOtpSecret=Limpar Segredo OTP do Suporte T\u00e9cnico
-EventLog_HelpdeskSetPassword=Definir Senha do Suporte T\u00e9cnico
-EventLog_HelpdeskUnlockPassword=Desbloquear Senha do Suporte T\u00e9cnico
-EventLog_HelpdeskDeleteUser=Apagar Usu\u00e1rio do Suporte T\u00e9cnico
-EventLog_HelpdeskViewDetail=Detalhe de Exibi\u00e7\u00e3o da Central de Atendimento
-EventLog_HelpdeskVerifyOtp=OTP de Verifica\u00e7\u00e3o da Central de Atendimento
+EventLog_HelpdeskClearResponses=Limpeza de Respostas pelo Suporte T\u00e9cnico
+EventLog_HelpdeskClearOtpSecret=Limpeza de Segredo OTP pelo Suporte T\u00e9cnico
+EventLog_HelpdeskSetPassword=Defini\u00e7\u00e3o de Senha pelo Suporte T\u00e9cnico
+EventLog_HelpdeskUnlockPassword=Desbloqueio de Senha pelo Suporte T\u00e9cnico
+EventLog_HelpdeskDeleteUser=Apagamento do Usu\u00e1rio pelo Suporte T\u00e9cnico
+EventLog_HelpdeskViewDetail=Detalhes de Exibi\u00e7\u00e3o pelo Suporte T\u00e9cnico
+EventLog_HelpdeskVerifyOtp=Verifica\u00e7\u00e3o de OTP pelo Suporte T\u00e9cnico
+EventLog_HelpdeskVerifyOtpIncorrect=Verifica\u00e7\u00e3o de OTP pelo Suporte T\u00e9cnico Incorreta
+EventLog_HelpdeskVerifyToken=Verifica\u00e7\u00e3o de Token pelo Suporte T\u00e9cnico
+EventLog_HelpdeskVerifyTokenIncorrect=Verifica\u00e7\u00e3o de Token pelo Suporte T\u00e9cnico Incorreta
+EventLog_HelpdeskVerifyAttributes=Verifica\u00e7\u00e3o de Atributos pelo Suporte T\u00e9cnico
+EventLog_HelpdeskVerifyAttributesIncorrect=Verifica\u00e7\u00e3o de Atributos pelo Suporte T\u00e9cnico Incorreta
 EventLog_IntruderUserLock=Bloqueio de Usu\u00e1rio Intruso
 EventLog_TokenIssued=Token Emitido
 EventLog_TokenClaimed=Token Requerido
@@ -49,10 +54,10 @@ EventLog_SetupResponses=Configurar Respostas da Senha
 Eventlog_SetupOtpSecret=Configurar Segredo OTP
 EventLog_UpdateProfile=Atualizar Atributos
 Requirement_ADComplexity=Deve ter no m\u00ednimo tr\u00eas tipos dos seguintes caracteres: <ul><li>Mai\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li></ul>
-Requirement_ADComplexity2008=Deve ter no m\u00ednimo %1% tipos dos seguintes caracteres: <ul><li>Mai\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li><li>Outros caracteres do idioma n\u00e3o listados acima</li></ul>
+Requirement_ADComplexity2008=Deve ter no m\u00ednimo %1% tipos dos seguintes caracteres: <ul><li>Mai\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li><li>Outros caracteres de idioma n\u00e3o listados acima</li></ul>
 Requirement_AllowNumeric=N\u00e3o deve incluir caracteres num\u00e9ricos.
-Requirement_AllowSpecial=N\u00e3o deve incluir caracteres de s\u00edmbolo (n\u00e3o alfanum\u00e9rico).
-Requirement_CaseSensitive=A senha diferencia mai\u00fasculas e min\u00fasculas.
+Requirement_AllowSpecial=N\u00e3o deve incluir caracteres de s\u00edmbolo (n\u00e3o alfanum\u00e9ricos).
+Requirement_CaseSensitive=A senha diferencia mai\u00fasculas de min\u00fasculas.
 Requirement_DisAllowedAttributes=N\u00e3o deve incluir parte do seu nome ou nome de usu\u00e1rio.
 Requirement_DisAllowedValues=N\u00e3o deve incluir os seguintes valores: %1%
 Requirement_FirstNumeric=O primeiro caractere n\u00e3o pode ser num\u00e9rico.
@@ -62,7 +67,7 @@ Requirement_LastSpecial=O \u00faltimo caractere n\u00e3o pode ser um s\u00edmbol
 Requirement_MaxAlpha=N\u00e3o pode incluir mais de %1% letra.
 Requirement_MaxAlphaPlural=N\u00e3o pode incluir mais de %1% letras.
 Requirement_MaxLength=N\u00e3o deve ter mais de %1% caractere.
-Requirement_MaxLengthPlural=N\u00e3o deve ter mais de %1% caractere.
+Requirement_MaxLengthPlural=N\u00e3o deve ter mais de %1% caracteres.
 Requirement_MaxLower=N\u00e3o pode incluir mais de %1% letra min\u00fascula.
 Requirement_MaxLowerPlural=N\u00e3o pode incluir mais de %1% letras min\u00fasculas.
 Requirement_MaxNumeric=N\u00e3o pode incluir mais de %1% n\u00famero.
@@ -72,12 +77,12 @@ Requirement_MaxRepeatPlural=N\u00e3o deve repetir um caractere mais de %1% vezes
 Requirement_MaxSeqRepeat=N\u00e3o deve repetir um caractere sequencialmente mais de %1% vez.
 Requirement_MaxSeqRepeatPlural=N\u00e3o deve repetir um caractere sequencialmente mais de %1% vezes.
 Requirement_MaxSpecial=N\u00e3o pode incluir mais de %1% caractere de s\u00edmbolo (n\u00e3o alfanum\u00e9rico).
-Requirement_MaxSpecialPlural=N\u00e3o pode incluir mais de %1% caracteres de s\u00edmbolo (n\u00e3o de letra nem de n\u00famero).
+Requirement_MaxSpecialPlural=N\u00e3o pode incluir mais de %1% caracteres de s\u00edmbolo (n\u00e3o alfanum\u00e9ricos).
 Requirement_MaxUpper=N\u00e3o pode incluir mais de %1% letra mai\u00fascula.
 Requirement_MaxUpperPlural=N\u00e3o pode incluir mais de %1% letras mai\u00fasculas.
 Requirement_MinAlpha=Deve incluir no m\u00ednimo %1% letra.
 Requirement_MinAlphaPlural=Deve incluir no m\u00ednimo %1% letras.
-Requirement_MinimumFrequency=Pode ser alterado n\u00e3o mais de uma vez a cada %1%.
+Requirement_MinimumFrequency=Pode ser mudado no m\u00e1ximo uma vez a cada %1%.
 Requirement_MinLength=Deve ter no m\u00ednimo %1% caractere.
 Requirement_MinLengthPlural=Deve ter no m\u00ednimo %1% caracteres.
 Requirement_MinLower=Deve ter no m\u00ednimo %1% letra min\u00fascula.
@@ -85,14 +90,14 @@ Requirement_MinLowerPlural=Deve ter no m\u00ednimo %1% letras min\u00fasculas.
 Requirement_MinNumeric=Deve incluir no m\u00ednimo %1% n\u00famero.
 Requirement_MinNumericPlural=Deve incluir no m\u00ednimo %1% n\u00fameros.
 Requirement_MinSpecial=Deve ter no m\u00ednimo %1% caractere de s\u00edmbolo (n\u00e3o alfanum\u00e9rico).
-Requirement_MinSpecialPlural=Deve ter no m\u00ednimo %1% caracteres de s\u00edmbolo (n\u00e3o alfanum\u00e9rico).
+Requirement_MinSpecialPlural=Deve ter no m\u00ednimo %1% caracteres de s\u00edmbolo (n\u00e3o alfanum\u00e9ricos).
 Requirement_MinUnique=Deve ter no m\u00ednimo %1% caractere exclusivo.
 Requirement_MinUniquePlural=Deve ter no m\u00ednimo %1% caracteres exclusivos.
 Requirement_MinUpper=Deve ter no m\u00ednimo %1% letra mai\u00fascula.
 Requirement_MinUpperPlural=Deve ter no m\u00ednimo %1% letras mai\u00fasculas.
-Requirement_NotCaseSensitive=A senha n\u00e3o diferencia mai\u00fasculas e min\u00fasculas.
+Requirement_NotCaseSensitive=A senha n\u00e3o diferencia mai\u00fasculas de min\u00fasculas.
 Requirement_OldChar=N\u00e3o pode ter mais de %1% caractere da senha atual.
-Requirement_OldCharPlural=N\u00e3o pode ter mais de %1% caracteres que a senha atual.
+Requirement_OldCharPlural=N\u00e3o pode ter mais de %1% caracteres da senha atual.
 Requirement_RequiredChars=Deve incluir no m\u00ednimo um de cada dos seguintes caracteres:
 Requirement_UniqueRequired=A nova senha n\u00e3o pode ter sido usada anteriormente.
 Requirement_WordList=N\u00e3o deve incluir uma palavra comum ou sequ\u00eancia de caracteres comumente usada.
@@ -103,62 +108,62 @@ Rule_MinimumUpperCase=M\u00ednimo de Letras Mai\u00fasculas
 Rule_MaximumUpperCase=M\u00e1ximo de Letras Mai\u00fasculas
 Rule_MinimumLowerCase=M\u00ednimo de Letras Min\u00fasculas
 Rule_MaximumLowerCase=M\u00e1ximo de Letras Min\u00fasculas
-Rule_AllowNumeric=Permitir Num\u00e9rico
+Rule_AllowNumeric=Permitir Num\u00e9ricos
 Rule_MinimumNumeric=M\u00ednimo de Num\u00e9ricos
 Rule_MaximumNumeric=M\u00e1ximo de Num\u00e9ricos
-Rule_MinimumUnique=M\u00ednimo de \u00danicos
-Rule_MaximumUnique=M\u00e1ximo de \u00danicos
+Rule_MinimumUnique=M\u00ednimo de Exclusivos
+Rule_MaximumUnique=M\u00e1ximo de Exclusivos
 Rule_AllowFirstCharNumeric=Permitir Primeiro Caractere Num\u00e9rico
 Rule_AllowLastCharNumeric=Permitir \u00daltimo Caractere Num\u00e9rico
-Rule_AllowSpecial=Permitir Especial
+Rule_AllowSpecial=Permitir Especiais
 Rule_MinimumSpecial=M\u00ednimo de Especiais
 Rule_MaximumSpecial=M\u00e1ximo de Especiais
 Rule_AllowFirstCharSpecial=Permitir Primeiro Caractere Especial
 Rule_AllowLastCharSpecial=Permitir \u00daltimo Caractere Especial
 Rule_MaximumRepeat=M\u00e1ximo de Repeti\u00e7\u00f5es
 Rule_MaximumSequentialRepeat=M\u00e1ximo de Repeti\u00e7\u00f5es Sequenciais
-Rule_ChangeMessage=Alterar Mensagem
+Rule_ChangeMessage=Mudar Mensagem
 Rule_ExpirationInterval=Intervalo de Vencimento
 Rule_MinimumLifetime=Vida \u00datil M\u00ednima
-Rule_CaseSensitive=Distinguir entre Letras Mai\u00fasculas e Min\u00fasculas
-Rule_EnforceAtLogin=Assegurar o Uso Obrigat\u00f3rio ao Login
+Rule_CaseSensitive=Diferenciar Mai\u00fasculas e Min\u00fasculas
+Rule_EnforceAtLogin=Assegurar o Uso Obrigat\u00f3rio ao Efetruar Login
 Rule_ChallengeResponseEnabled=Resposta de Verifica\u00e7\u00e3o Habilitada
-Rule_UniqueRequired=\u00danico Obrigat\u00f3rio
+Rule_UniqueRequired=Exclusivo Obrigat\u00f3rio
 Rule_DisallowedValues=Valores N\u00e3o Permitidos
 Rule_DisallowedAttributes=Atributos N\u00e3o Permitidos
 Rule_ADComplexity=Complexidade de AD
 Rule_DisallowCurrent=N\u00e3o Permitir Atual
 Rule_MaximumOldChars=M\u00e1ximo de Caracteres Antigos
 Rule_RegExMatch=Correspond\u00eancia de Express\u00e3o Regular
-Rule_RegExNoMatch=Express\u00e3o Regular Sem Correspond\u00eancia
+Rule_RegExNoMatch=Sem Correspond\u00eancia de Express\u00e3o Regular
 Rule_MinimumAlpha=M\u00ednimo de Alfab\u00e9ticos
 Rule_MaximumAlpha=M\u00e1ximo de Alfab\u00e9ticos
 Rule_MinimumNonAlpha=M\u00ednimo de N\u00e3o Alfab\u00e9ticos
 Rule_MaximumNonAlpha=M\u00e1ximo de N\u00e3o Alfab\u00e9ticos
 Rule_EnableWordlist=Habilitar Lista de Palavras
 Rule_MinimumStrength=For\u00e7a M\u00ednima
-Rule_MaximumConsecutive=M\u00e1ximo Consecutivo
+Rule_MaximumConsecutive=M\u00e1ximo de Consecutivos
 Rule_CharGroupsValues=Valores do Grupo de Caracteres
-Rule_CharGroupsMinMatch=M\u00ednimo Requerido dos Grupos de Caracteres
+Rule_CharGroupsMinMatch=M\u00ednimo Necess\u00e1rio de Grupos de Caracteres
 Rule_AllowUserChange=Permitir ao Admin Mudar Senha
 Rule_AllowAdminChange=Permitir ao Usu\u00e1rio Mudar Senha
 Rule_ADComplexityLevel=N\u00edvel de Complexidade de AD
-Rule_ADComplexityMaxViolations=M\u00e1ximo de Viola\u00e7\u00f5es de Complexidade do AD
-Success_ActivateUser=A conta do usu\u00e1rio foi ativada com \u00eaxito. Certifique-se de concluir o processo ou n\u00e3o poder\u00e1 acessar a conta.
-Success_ConfigFileUpload=O arquivo de configura\u00e7\u00e3o foi carregado com \u00eaxito.
+Rule_ADComplexityMaxViolations=M\u00e1ximo de Viola\u00e7\u00f5es de Complexidade de AD
+Success_ActivateUser=A conta do usu\u00e1rio foi ativada com \u00eaxito. Verifique se concluiu o processo, caso contr\u00e1rio, voc\u00ea n\u00e3o poder\u00e1 acessar a conta.
+Success_ConfigFileUpload=O upload do arquivo de configura\u00e7\u00e3o foi feito com \u00eaxito.
 Success_ClearResponse=Suas perguntas e respostas secretas foram removidas com \u00eaxito.
 Success_CreateGuest=A nova conta do convidado foi criada com \u00eaxito. O usu\u00e1rio convidado receber\u00e1 uma notifica\u00e7\u00e3o se o endere\u00e7o de e-mail tiver sido informado. A conta do convidado pode ainda precisar ser ativada.
 Success_CreateUser=A nova conta do usu\u00e1rio foi criada com \u00eaxito.
 Success_NewUserForm=Sua conta est\u00e1 pronta para ser criada. Continue quando estiver pronto.
-Success_PasswordChange=Sua senha foi alterada com \u00eaxito.
+Success_PasswordChange=Sua senha foi mudada com \u00eaxito.
 Success_PasswordReset=A senha para %1% foi definida com \u00eaxito.
 Success_PasswordSend=Sua nova senha foi enviada para %1%. Feche esta janela e efetue login usando a nova senha.
 Success_ResponsesMeetRules=Suas respostas cumprem os requisitos. Clique em Gravar Respostas quando estiver pronto.
-Success_SetupResponse=Suas perguntas e respostas secretas foram salvas com \u00eaxito. Se esquecer a senha, poder\u00e1 usar as respostas a essas perguntas para redefini-la.
+Success_SetupResponse=Suas perguntas e respostas secretas foram gravadas com \u00eaxito. Se esquecer a senha, voc\u00ea poder\u00e1 usar as respostas a essas perguntas para redefini-la.
 Success_Unknown=A opera\u00e7\u00e3o foi conclu\u00edda com \u00eaxito.
 Success_UnlockAccount=Sua conta foi desbloqueada.
-Success_UpdateGuest=A conta do convidado foi atualizada com \u00eaxito. O usu\u00e1rio convidado receber\u00e1 uma notifica\u00e7\u00e3o se o endere\u00e7o de e-mail tiver sido informado.
+Success_UpdateGuest=A conta do convidado foi atualizada com \u00eaxito. O usu\u00e1rio convidado receber\u00e1 uma notifica\u00e7\u00e3o se o endere\u00e7o de e-mail tiver sido digitado.
 Success_UpdateProfile=As informa\u00e7\u00f5es do usu\u00e1rio foram atualizadas com \u00eaxito.
 Success_UpdateForm=O seu perfil est\u00e1 pronto para ser atualizado. Continue quando estiver pronto.
 Success_Action=A a\u00e7\u00e3o %1% foi conclu\u00edda com \u00eaxito.
-Success_OtpSetup=A inscri\u00e7\u00e3o do dispositivo foi conclu\u00edda com sucesso.
+Success_OtpSetup=A inscri\u00e7\u00e3o do dispositivo foi conclu\u00edda com \u00eaxito.
